--- a/the-golden-lotus/009.md
+++ b/the-golden-lotus/009.md
@@ -12,7 +12,7 @@
 
 轿内坐着浪淫妇， 后边跟着老牵头。」
 
-西门庆娶妇人到家，收拾花园内楼下三间，与他做房。一个独独小院角门进去，设放花草盆景，白日间人迹罕到，极是一个幽僻去处；一边是外房，一边是卧房。西门庆旋用十六两银子，买了一张黑漆欢门描金床，大红罗圈金帐幔，宝象花拣庄，卓椅锦杌，摆设齐整。大娘子吴月娘房里，使着两个丫头，一名春梅，一名玉萧。西门庆把春梅叫到金莲房内，令他伏侍金莲，赶着叫娘。都用五两银子，另买一个小丫头，名唤小玉，服侍月娘。又替金莲六两银子买了一个上灶丫头，名唤秋菊。排行金莲做第五房。先头陈家娘子陪床的名唤孙雪娥，约二十年纪，生的五短身材，有姿色。西门庆与他带了｛髟狄｝髻，排行第四；以此把金莲做个第五房。此事表过不题。这妇人一娶过门来，西门庆家中大小，多不欢喜。看官听说：世上妇人眼里火的极多，随你甚贤慧妇人，男子汉娶小，说不嗔；及到其间，见汉子往他房里同床共枕，欢乐去了，虽故性儿好杀，也有几分脸酸心歹。正是：
+西门庆娶妇人到家，收拾花园内楼下三间，与他做房。一个独独小院角门进去，设放花草盆景，白日间人迹罕到，极是一个幽僻去处；一边是外房，一边是卧房。西门庆旋用十六两银子，买了一张黑漆欢门描金床，大红罗圈金帐幔，宝象花拣庄，卓椅锦杌，摆设齐整。大娘子吴月娘房里，使着两个丫头，一名春梅，一名玉萧。西门庆把春梅叫到金莲房内，令他伏侍金莲，赶着叫娘。都用五两银子，另买一个小丫头，名唤小玉，服侍月娘。又替金莲六两银子买了一个上灶丫头，名唤秋菊。排行金莲做第五房。先头陈家娘子陪床的名唤孙雪娥，约二十年纪，生的五短身材，有姿色。西门庆与他带了䯼髻，排行第四；以此把金莲做个第五房。此事表过不题。这妇人一娶过门来，西门庆家中大小，多不欢喜。看官听说：世上妇人眼里火的极多，随你甚贤慧妇人，男子汉娶小，说不嗔；及到其间，见汉子往他房里同床共枕，欢乐去了，虽故性儿好杀，也有几分脸酸心歹。正是：
 
 「可惜团圞今夜月， 清光咫尺别人圆。」
 
