--- a/the-golden-lotus/013.md
+++ b/the-golden-lotus/013.md
@@ -9,7 +9,7 @@
 
 寄语知音女娘道， 莫将苦处语为甜。」
 
-话说一日，六月十四日，西门庆从前边来，走到月娘房中。月娘告说：「今日你不在家，花家使小厮拏帖子来请你吃酒：『若是他来家就去。』」西门庆观看原帖子，写着：「即午，院中吴银家叙，希过我往，万万！」于是打选衣帽齐整，叫了两个跟随，预备下骏马，先径到花家。不想花子虚不在家了。他浑家李瓶儿，夏月间，戴着银丝｛髟狄｝髻，金镶紫瑛坠子，藕丝对衿衫，白纱挑线镶边裙，裙边露一对红鸳凤嘴，尖尖趫趫，立在二门里台基上。手中正拏一只纱绿纟路紬鞋扇。那西门庆三不知，正进门，两个撞了个满怀。这西门庆留心已久，虽故庄上见了一面，不曾细翫其详。于是对面见了一面。人生的甚是白净，五短身材，瓜子面皮，生的细弯弯两道眉儿。不觉魂飞天外，魄散九霄，忙向前深深的作揖。妇人还了万福，转身入后边去了。使出一个头发齐眉的丫鬟来，名唤秀春，请西门庆客位内坐。他便立在角门首，半露娇容说：「大官人少坐一时。他适纔有些小事出去了，便来也。」少顷，使丫鬟拏出一盏茶来。西门庆吃了。妇人隔门说道：「今日他请大官人往那边吃酒去？好歹看奴之面，劝他早些来家。两个小厮又都跟的去了，止是这两个丫鬟和奴，家中无人。」西门庆便道：「嫂子见得有理，哥家事要紧，嫂子既然分付在下，在下已定伴哥同去同来，怎肯失了哥的事？」正说着，只见花子虚来家。妇人便回房中去了。花子虚见西门庆，叙礼说道：「蒙兄下降，小弟适有些不得已小事出去望望，失迎，恕罪！」于是分宾主坐，便叫小厮看茶。须臾茶罢，分付小厮：「对你娘说，看菜儿来。我和你西门爹吃三杯起身。今日院内吴银姐生日，请兄同往一乐。」西门庆道：「仁兄何不早说？」即令玳安：「快家去，讨五钱银子封了来。」花子虚道：「兄何故又费心？小弟到不是了。」西门庆见左右放桌儿，说道：「兄不消留坐了。咱往里边吃去罢。」花子虚道：「不敢久留，兄坐一回。」就是大盘大碗，鸡蹄鲜肉肴馔，拏将上来。银高脚葵花锺，每人一锺。又是四个卷饼 ，吃毕，收下来与马上人吃。少顷，问玳安取了分资来，一同起身上马。西门庆是玳安、平安儿，花子虚是天福、天喜儿，四个小厮跟随，径往抅栏后巷吴四妈家，与吴银儿做生日。到那里花攒锦簇，歌舞吹弹。饮酒至一更时分方散。西门庆留心，把子虚灌的酩酊大醉。又因李瓶儿央浼之言，顿得相伴他一同来家。小厮叫开大门，扶他到客位坐下。李瓶儿同丫鬟掌着灯烛出来，把子虚挽扶进去。西门庆交付明白，就要告回。妇人旋走出来拜谢西门庆，说道：「拙夫不才今贪酒，多累看奴薄面，姑待来家。官人休要笑话。」那西门庆忙屈着还喏，说道：「不敢。嫂子这里分付，早晨一面出门，将的军去，将的军来。在下敢不铭心刻骨，同哥一答里来家？非嫂子躭心，显的在下干事不的了。你看哥在他家，被那些人缠住了。我漒着你催哥起身。走到乐星堂儿门首，粉头郑爱香儿家，小名叫做郑观音，生的一表人物，哥就往他家去。被我再三拦住了，说道：『哥家去罢，改日再来。家中嫂子放心不下。』方纔一直来家。不然，若到郑家，一夜不来。嫂子在上，不该我说。哥也胡涂，嫂子又青年，惹大家室，如何便丢了去，成夜不在家，是何道理？」妇人道：「正是如此。奴为他这等在外胡行，不听人说，奴也气了一身病痛在这里。往后大官人但遇他在院中，好歹看奴薄面，劝他早早回家。奴恩有重报，不敢有忘。」这西门庆是头上打一下，脚底板响的人。积年风月中走，甚么事儿不知道。可可今日妇人到明明开了一条大路，教他入港。于是满面堆笑道：「嫂子说那里话！比来比来，相交朋友做甚么？我已定苦心谏哥，嫂子放心。」妇人又道了万福，又叫小丫鬟拿了一盏果仁泡茶 来，银匙雕漆茶锺。西门庆吃毕茶，说道：「我回去罢。嫂子仔细门户。」于是告辞归家。自此这西门庆就安心设计图谋这妇人。屡屡安下应伯爵、谢希大这伙人，把子虚挂住在院里，饮酒过夜，他便脱身来家，一往在门首站立着。看见妇人领着两丫鬟，正在门首。看见西门庆在门前咳嗽，一回走过东来，又往西去。或在对门站立，把眼不住望门盼着。妇人影身在门里。见他来，便闪进里面。他过去了，又探头去瞧。两个眼意心期，已在不言之表。一日西门庆门首正站立间，妇人使过小丫鬟秀春来请。西门庆故意问道：「姐姐，你请我做甚么？你爹在家里不在？」秀春道：「俺爹不在家，娘请西门爹问句话儿。」这西门庆得不的此一声，连忙走过来。让到客位内坐下。良久，妇人出来，道了万福。便道：「前日多承官人厚意，奴铭刻于心，知感不尽。拙夫从昨日出去，一连两日不来家了。不知官人曾会见他来不曾？」西门庆道：「他昨日同三四个在郑家吃酒，我偶然有些小事就来了。今日我不曾得进去，不知他还在那里没在？若是我在那里，有个不催促哥哥早来家的！恐怕嫂子忧心！」妇人道：「正是这般说。只是奴吃他恁不听人说，常时在前边眠花卧柳，不顾家事的亏。」西门庆道：「论起哥来，仁义上也好。只是有这一件儿。」说着，小丫鬟拿茶来吃了。那西门庆恐子虚来家，不敢久恋，就要告归。妇人千叮万嘱，央西门庆明日到那里，好歹劝他早来家：「奴恩有报，已定重谢官人。」西门庆道：「嫂子没的说，我与哥是那样相交。」说毕，西门庆家去了。到次日，花子虚自院中回家。妇人再三埋怨，说道：「你便外边贪酒恋色，多亏隔壁西门大官人，两次三番顾睦你来家。你买分礼儿知谢知谢他，方不失了人情。」那花子虚连忙买了四盒礼物，一坛酒，使小厮天福儿送到西门庆家。西门庆收下，厚赏来人不题。有吴月娘便说：「花家如何送你这分礼？」西门庆道：「此是花二哥前日请我们在院中与吴银儿做生日，醉了，被我搀扶了他来家。又见我常时院中劝他休过夜，早早来家。他娘子儿因此感不过我的情，想对花二哥说，买了此礼来谢我。」那吴月娘听了，与他打了个问讯，说道：「我的哥哥，你自顾了你罢，又泥佛劝土佛。你也成日不着个家，在外养女调妇。又劝人家汉子！」又道：「你莫不白受他这分礼？」因问：「他帖儿上写着谁的名字？若是他娘子的名字，今日写我的帖儿，请他娘子过来坐坐。他已只恁要来咱家走走哩！若是他男子汉名字，随你请不请，我不管你。」西门庆道：「是花二哥名字，我明日请他便了。」次日，西门庆果然治杯，请过这花子虚来，吃了一日酒归家。李瓶儿说：「你不要差了礼数。咱送了他一分礼，他左右还请你过去吃了一席酒。你改日另治一席酒请他。只当回席也是好处。」光阴迅速，又早九月重阳令节。这花子虚假着节下，叫了两个妓者，具柬请西门庆过来赏菊。又邀应伯爵、谢希大、祝日念、孙寡嘴四人相陪。传花击鼓，欢乐饮酒。有诗为证：
+话说一日，六月十四日，西门庆从前边来，走到月娘房中。月娘告说：「今日你不在家，花家使小厮拏帖子来请你吃酒：『若是他来家就去。』」西门庆观看原帖子，写着：「即午，院中吴银家叙，希过我往，万万！」于是打选衣帽齐整，叫了两个跟随，预备下骏马，先径到花家。不想花子虚不在家了。他浑家李瓶儿，夏月间，戴着银丝䯼髻，金镶紫瑛坠子，藕丝对衿衫，白纱挑线镶边裙，裙边露一对红鸳凤嘴，尖尖趫趫，立在二门里台基上。手中正拏一只纱绿纟路紬鞋扇。那西门庆三不知，正进门，两个撞了个满怀。这西门庆留心已久，虽故庄上见了一面，不曾细翫其详。于是对面见了一面。人生的甚是白净，五短身材，瓜子面皮，生的细弯弯两道眉儿。不觉魂飞天外，魄散九霄，忙向前深深的作揖。妇人还了万福，转身入后边去了。使出一个头发齐眉的丫鬟来，名唤秀春，请西门庆客位内坐。他便立在角门首，半露娇容说：「大官人少坐一时。他适纔有些小事出去了，便来也。」少顷，使丫鬟拏出一盏茶来。西门庆吃了。妇人隔门说道：「今日他请大官人往那边吃酒去？好歹看奴之面，劝他早些来家。两个小厮又都跟的去了，止是这两个丫鬟和奴，家中无人。」西门庆便道：「嫂子见得有理，哥家事要紧，嫂子既然分付在下，在下已定伴哥同去同来，怎肯失了哥的事？」正说着，只见花子虚来家。妇人便回房中去了。花子虚见西门庆，叙礼说道：「蒙兄下降，小弟适有些不得已小事出去望望，失迎，恕罪！」于是分宾主坐，便叫小厮看茶。须臾茶罢，分付小厮：「对你娘说，看菜儿来。我和你西门爹吃三杯起身。今日院内吴银姐生日，请兄同往一乐。」西门庆道：「仁兄何不早说？」即令玳安：「快家去，讨五钱银子封了来。」花子虚道：「兄何故又费心？小弟到不是了。」西门庆见左右放桌儿，说道：「兄不消留坐了。咱往里边吃去罢。」花子虚道：「不敢久留，兄坐一回。」就是大盘大碗，鸡蹄鲜肉肴馔，拏将上来。银高脚葵花锺，每人一锺。又是四个卷饼 ，吃毕，收下来与马上人吃。少顷，问玳安取了分资来，一同起身上马。西门庆是玳安、平安儿，花子虚是天福、天喜儿，四个小厮跟随，径往抅栏后巷吴四妈家，与吴银儿做生日。到那里花攒锦簇，歌舞吹弹。饮酒至一更时分方散。西门庆留心，把子虚灌的酩酊大醉。又因李瓶儿央浼之言，顿得相伴他一同来家。小厮叫开大门，扶他到客位坐下。李瓶儿同丫鬟掌着灯烛出来，把子虚挽扶进去。西门庆交付明白，就要告回。妇人旋走出来拜谢西门庆，说道：「拙夫不才今贪酒，多累看奴薄面，姑待来家。官人休要笑话。」那西门庆忙屈着还喏，说道：「不敢。嫂子这里分付，早晨一面出门，将的军去，将的军来。在下敢不铭心刻骨，同哥一答里来家？非嫂子躭心，显的在下干事不的了。你看哥在他家，被那些人缠住了。我漒着你催哥起身。走到乐星堂儿门首，粉头郑爱香儿家，小名叫做郑观音，生的一表人物，哥就往他家去。被我再三拦住了，说道：『哥家去罢，改日再来。家中嫂子放心不下。』方纔一直来家。不然，若到郑家，一夜不来。嫂子在上，不该我说。哥也胡涂，嫂子又青年，惹大家室，如何便丢了去，成夜不在家，是何道理？」妇人道：「正是如此。奴为他这等在外胡行，不听人说，奴也气了一身病痛在这里。往后大官人但遇他在院中，好歹看奴薄面，劝他早早回家。奴恩有重报，不敢有忘。」这西门庆是头上打一下，脚底板响的人。积年风月中走，甚么事儿不知道。可可今日妇人到明明开了一条大路，教他入港。于是满面堆笑道：「嫂子说那里话！比来比来，相交朋友做甚么？我已定苦心谏哥，嫂子放心。」妇人又道了万福，又叫小丫鬟拿了一盏果仁泡茶 来，银匙雕漆茶锺。西门庆吃毕茶，说道：「我回去罢。嫂子仔细门户。」于是告辞归家。自此这西门庆就安心设计图谋这妇人。屡屡安下应伯爵、谢希大这伙人，把子虚挂住在院里，饮酒过夜，他便脱身来家，一往在门首站立着。看见妇人领着两丫鬟，正在门首。看见西门庆在门前咳嗽，一回走过东来，又往西去。或在对门站立，把眼不住望门盼着。妇人影身在门里。见他来，便闪进里面。他过去了，又探头去瞧。两个眼意心期，已在不言之表。一日西门庆门首正站立间，妇人使过小丫鬟秀春来请。西门庆故意问道：「姐姐，你请我做甚么？你爹在家里不在？」秀春道：「俺爹不在家，娘请西门爹问句话儿。」这西门庆得不的此一声，连忙走过来。让到客位内坐下。良久，妇人出来，道了万福。便道：「前日多承官人厚意，奴铭刻于心，知感不尽。拙夫从昨日出去，一连两日不来家了。不知官人曾会见他来不曾？」西门庆道：「他昨日同三四个在郑家吃酒，我偶然有些小事就来了。今日我不曾得进去，不知他还在那里没在？若是我在那里，有个不催促哥哥早来家的！恐怕嫂子忧心！」妇人道：「正是这般说。只是奴吃他恁不听人说，常时在前边眠花卧柳，不顾家事的亏。」西门庆道：「论起哥来，仁义上也好。只是有这一件儿。」说着，小丫鬟拿茶来吃了。那西门庆恐子虚来家，不敢久恋，就要告归。妇人千叮万嘱，央西门庆明日到那里，好歹劝他早来家：「奴恩有报，已定重谢官人。」西门庆道：「嫂子没的说，我与哥是那样相交。」说毕，西门庆家去了。到次日，花子虚自院中回家。妇人再三埋怨，说道：「你便外边贪酒恋色，多亏隔壁西门大官人，两次三番顾睦你来家。你买分礼儿知谢知谢他，方不失了人情。」那花子虚连忙买了四盒礼物，一坛酒，使小厮天福儿送到西门庆家。西门庆收下，厚赏来人不题。有吴月娘便说：「花家如何送你这分礼？」西门庆道：「此是花二哥前日请我们在院中与吴银儿做生日，醉了，被我搀扶了他来家。又见我常时院中劝他休过夜，早早来家。他娘子儿因此感不过我的情，想对花二哥说，买了此礼来谢我。」那吴月娘听了，与他打了个问讯，说道：「我的哥哥，你自顾了你罢，又泥佛劝土佛。你也成日不着个家，在外养女调妇。又劝人家汉子！」又道：「你莫不白受他这分礼？」因问：「他帖儿上写着谁的名字？若是他娘子的名字，今日写我的帖儿，请他娘子过来坐坐。他已只恁要来咱家走走哩！若是他男子汉名字，随你请不请，我不管你。」西门庆道：「是花二哥名字，我明日请他便了。」次日，西门庆果然治杯，请过这花子虚来，吃了一日酒归家。李瓶儿说：「你不要差了礼数。咱送了他一分礼，他左右还请你过去吃了一席酒。你改日另治一席酒请他。只当回席也是好处。」光阴迅速，又早九月重阳令节。这花子虚假着节下，叫了两个妓者，具柬请西门庆过来赏菊。又邀应伯爵、谢希大、祝日念、孙寡嘴四人相陪。传花击鼓，欢乐饮酒。有诗为证：
 
 「乌兔循环似箭忙， 人间佳节又重阳，
 
