--- a/the-golden-lotus/016.md
+++ b/the-golden-lotus/016.md
@@ -17,7 +17,7 @@
 
 「不知子晋缘何事？ 纔学吹箫便作仙。」
 
-话休饶舌。一日西门庆会了经纪，把李瓶儿床后茶叶箱内堆放的香蜡等物，都秤了斤两，共卖了三百八十两银子。李瓶儿只留下一百八十两盘缠，其余都付与西门庆收了，凑着盖房。便教阴阳择用二月初八日，兴工动土。五百两银子委付大家人来招，并主管贲四，卸砖瓦木石，管工计帐。这贲四名唤贲地传，年少生的百浪嚣虚，百能百巧。原是内相勤儿出身，因不守本分，打出吊入滑流水，被赶来。初时跟着人做兄弟儿来，次后投入大人家做家人，把人家奶子拐出来做了浑家。都在故衣做经纪，琵琶箫管都会。西门庆见他这般本事，常照顾他在生药铺中秤货，讨中人钱使。以此凡大小事情，少他不得。当日贲地传与来招，督管各作匠人兴工。先拆毁花家那边旧房，打开墙垣，筑起地脚，盖起卷棚山子，各亭台耍子去处，非止一日，不必尽说。光阴迅速，日月如梭。西门庆在家看管起盖花园，约有一个月有余。都在三月上旬，乃花子虚百日。李瓶儿预先请过西门庆去和他计议，要把花子虚灵烧了：「房子卖的卖。不的，你着人来看守。你早把奴取过去罢，省的奴在这里，晚夕空落落的，我害怕，常有狐狸鬼混的慌，你到家对大娘说，只当可怜见奴的性命罢。随你把奴做第几个，奴情愿伏侍你，铺床迭被，也无抱怨。」说着，泪如雨下。西门庆道：「你休烦恼。前日我把你这话，到家对房下和潘五姐也说过了，直待与你把房盖得完，那时你孝服将满，取你过门不迟。」李瓶儿道：「好好。你既有真心取奴，先早把奴房撺掇盖了，取过奴去。到你家住一日，死也甘心。省的奴在这里度日如年。」西门庆道：「你的话，我知道了。」李瓶儿道：「再不的，房子盖完，我烧了灵，搬在五姐那边楼上住两日。等你盖了新房子，搬移不迟。你好歹到家和五姐说，我还等你的话。这三月初十日，是他百日，我好念经烧灵。」西门庆应诺，与妇人歇了一夜，到次日，一五一十，对潘金莲说了。金莲道：「可知好哩！奴巴不的腾两间房与他住，只怕别人，你还问声大姐姐去。我落得河水不洗船，看大姐姐怎么说。」这西门庆一直走到月娘房里来，月娘正梳头。西门庆把李瓶儿要嫁一节，从头至尾听说一遍。月娘道：「你不好取他的休。他头一件，孝服不满；第二件，你当初和他男子汉相交；第三件，你又和他老婆有连手，买了他房子，收着他寄放的许多东西。常言：『机儿不快，梭儿快。』我闻得人说，他家房族中花大，是个刁徒泼皮的人。倘或一时有些声口，倒没的惹虱子头上挠。奴说的是好话，赵钱孙李，你依不依随你。」几句说的西门庆闭口无言。走出前厅来，自己坐在椅子上沉吟。又不好回李瓶儿话，又不好不去的。寻思了半日，还进入金莲房里来，金莲问道：「你到大姐姐房里，大姐姐怎么说？」西门庆把月娘的话，告诉了一遍。金莲道：「大姐不肯，论他也说的是。你又买了他房子，又取他老婆，当初又与他汉子相交了一世，方纔好。我又是一说，既做朋友，没丝也有寸交，官儿也看乔了。」西门庆道：「这个也罢了。倒只怕花大那厮，没圈子跳，知道，挟制他孝服不满，在中间鬼混，怎生计较？我如今又不好回他的。」金莲道：「呸！有甚难处事？我问你，今日回他去，明日回他去？」西门庆道：「他教我今日回他声去。」金莲道：「你今日到那里，恁对他说。你说：『我到家对五姐说来，他的楼上堆着许多药料，你这家火去，到那里没处堆放。亦发再宽待些时，你这边房子七八也待盖了，撺掇匠人，早些装修油漆停当。你这边孝服也将满，那时取你过去，都不齐备些？强似搬在五姐楼上，荤不荤，素不素，挤在一处甚么样子？』管情他也罢了。」西门庆听言大喜，那里等的时分，走到李瓶儿家。妇人便问：「你到家所言之事如何？」西门庆道：「五姐说来，一发等收拾油漆你新房子，你搬去不迟。如今他那边楼上，堆的破零三乱。你这些东西过去，那里堆放？只有一件打搅，只怕你家大伯子，说你孝服不满，如之奈何？」妇人道：「他不敢管我的事。休说各衣另饭，当官写立分单，已倒断开了的勾当。只我先嫁由爹娘，后嫁由自己。自古嫂儿不通问，大伯管不的我暗地里事。我如今见过不的日子，他顾不的我。他若但放出个屁来，我教那贼花子坐着死，不敢睡着死。大官人你放心，他不敢惹我。」因问：「你这房子，也得几时方收拾完备？」西门庆道：「我如今分付匠人，先替你盖出这三间楼来，及到油漆了，也到五月头上。」妇人道：「我的哥哥，你上紧些。奴情愿等着到那时候也罢。」说毕，丫鬟摆上酒，两个欢娱饮酒过夜，西门庆自此，没三五日不来，俱不必细说。光阴迅速，西门庆家中已盖了两月房屋。三间玩花楼，装修将完；只少卷棚还未安磉。一日，五月蕤宾佳节，家家门插艾叶，处处户挂灵符。李瓶儿治了一席酒，请过西门庆来。一者解粽，二者商议过门之日。择五月十五日，先请僧人念经烧灵，然后西门庆这边择取妇人过门。西门庆因问李瓶儿道：「你烧灵那日，花大、花三、花四请他不请？」妇人道：「我每人把个帖子，随他来不来。」当下计议已定。单等五月十五日，妇人请了报恩寺十二众僧人，在家念经除灵。西门庆那日封了三钱银子人情，与应伯爵做生日。早辰拿了五两银子与玳安，教他买办鸡鸭置酒。晚夕李瓶儿除服，都教平安、画童两个跟马，约午后时分，往应伯爵家来。那日在席前者，谢希大、祝日念、孙天化、吴典恩、云离守、常时节，连新上会贲地传，十个朋友一个不少。又叫了两个小优儿弹唱。递毕酒，上坐之时，西门庆叫过两优儿，认的头一个是吴银儿兄弟，名唤吴惠。那一个不认的，跪下说道：「小的是郑爱香儿的哥，叫郑奉。」西门庆坐首席，每人赏二钱银子。吃到日西时分，只见玳安拿马来接。正上席来，向西门庆耳边悄悄说道：「娘请爹早些去罢。」西门庆与了他个眼色，就往下走！被应伯爵叫住问道：「贼狗骨头儿！你过来实说。若不实说，我把你小耳朵拧过一边来。你应爹一年有几个生日？恁日头半天里，就拿马来接了你爹，往那里去？端的谁使了你来？或者是你家中那娘使了你来？或是里边十八子那里？你若不说过，一百年也不对你爹说替你这小狗秃儿娶老婆。」那玳安只是说道：「委的没人使小的。小的恐怕夜紧，爹要起身，早拿马来伺侯。」那应伯爵奈何了他一回，见不说，便道：「你不说，我明日打听出来，和你这小油嘴儿算帐。」于是又斟了一锺酒，拿了半碟点心，与玳安下边吃去。良久，西门庆下来，东净里更衣。叫玳安道，到僻静处问他话：「今日花家那有谁来？」玳安道：「花三往乡里去了。花四家里瞎眼，都没人来。只有花大家两口子来，吃了一日斋饭，他汉子先家去了。只有他老婆临去，二娘叫到房里去了，与了他十两银子，两套衣服，还与二娘磕了头。」西门庆道：「他没说甚么？」玳安道：「他一字通没敢题甚么，只说到明日二娘过来，他三日要来爹家走走。」西门庆道：「他真个说此话来？」玳安道：「小的怎敢说谎！」这西门庆听了，满心欢喜。又问：「斋供了毕不曾？」玳安道：「和尚老早就去了，灵位也烧了。二娘说请爹早些过去。」西门庆道：「我知道了，你外边看马去。」这玳安正往外走，不想应伯爵在过道内听，猛可叫了一声，把玳安諕了一跳。伯爵骂道：「贼小狗骨头儿！你不告我说，我就的也听见了。原来你爹儿们干的好茧儿！」西门庆道：「怪狗才！休要唱扬一地里知道。」伯爵道：「你央及我央儿，我不说便了。」于是走到席上，如此这般，对众人说了一回。把西门庆拉着说道：「哥，你可成个人？有这等事，就挂口不对兄弟们说声儿。就是花大有些甚话说，哥只分付俺每一声，等俺每和他说，不怕他不依。他若敢道个不是，俺每就与他结一个大胳膊。端的不知哥这亲事成了不曾？哥一一告诉俺们。比来相交朋友做甚么？哥若有使令俺们处，兄弟情厚，火里火去，水里水去；愿不求同日生，只求各自死。弟兄每这等待你，哥你不说个道理，还只顾瞒着不说。」谢希大接过说道：「哥如若不说，俺每明日唱扬的里边李桂姐、吴银儿那里知道了，大家都不好意思的。」西门庆笑道：「我教众位得知罢。亲事已都停当了。」应伯爵问道：「取行礼过门，还未定日子？」谢希大道：「哥到明日取嫂子过门，俺每贺哥去。哥好歹叫上四个唱的，请俺每吃喜酒。」西门庆道：「这个不消说，一定奉请列位兄弟。」祝日念道：「比时明日与哥庆喜，不如咱如今替哥把一杯酒儿，先庆了喜罢。」于是叫伯爵把酒，谢希大执壶，祝日念捧茶，其余都陪跪。把两个小优儿也叫来，跪着弹唱一套十三腔喜遇吉日，一连把西门庆灌了三四锺酒。祝日念道：「哥，那日请俺每吃酒，也不要少了郑奉、吴惠他两个。」因定下：「你二人好歹去。」郑奉掩口道：「小的们已定早去宅里伺侯。」须臾，递毕酒，各归席座下，又吃了一回。看看天晚，那西门庆那埋坐的住，赶眼错起身走了。应伯爵还要拦门不放，谢希大道：「应二哥，你放哥去罢。休要误了他的事，教嫂子见怪。」那西门庆得手上马，一直走了。到了狮子街，李瓶儿摘去孝｛髟狄｝髻，换了一身艳服。堂中灯烛荧煌，预备下一桌齐整酒肴。上面独独安一张交椅，让西门庆上坐，方打开一坛酒筛来，丫鬟执壶，李瓶儿满斟一杯递上去，插烛也似磕了四个头，说道：「今日拙夫灵已烧了。蒙大官人不弃，奴家得奉巾栉之欢，以遂于飞之愿。」行毕礼起来。西门庆下席来，亦回递妇人一杯，方纔坐下。因问：「今日花大两口子，没说甚么？」李瓶儿道：「奴午斋后，叫进他到房中，就说大官人这边做亲之事。他满口说好，一句闲话也无。只说明日三日哩，教他娘子儿来咱家走走。奴与他十两银子，两套衣服，两口子喜欢的要不的。临出门，谢了又谢。」西门庆道：「他既恁说，我容他上门走走也不差甚么。但有一句闲话，我不饶他。」李瓶儿道：「他就放屁辣骚，奴也不放过他。」于是汤水嗄饭，老妈厨下一齐拏上。李瓶儿亲自洗手剔甲，做了些葱花羊肉，一寸的匾食儿。银镶锺儿盛着南酒 。秀春斟了两杯，李瓶儿陪西门庆吃。西门庆止吃了上半瓯，就把下半瓯送与李瓶儿吃。一往一来，迭连吃上几瓯。真个是：
+话休饶舌。一日西门庆会了经纪，把李瓶儿床后茶叶箱内堆放的香蜡等物，都秤了斤两，共卖了三百八十两银子。李瓶儿只留下一百八十两盘缠，其余都付与西门庆收了，凑着盖房。便教阴阳择用二月初八日，兴工动土。五百两银子委付大家人来招，并主管贲四，卸砖瓦木石，管工计帐。这贲四名唤贲地传，年少生的百浪嚣虚，百能百巧。原是内相勤儿出身，因不守本分，打出吊入滑流水，被赶来。初时跟着人做兄弟儿来，次后投入大人家做家人，把人家奶子拐出来做了浑家。都在故衣做经纪，琵琶箫管都会。西门庆见他这般本事，常照顾他在生药铺中秤货，讨中人钱使。以此凡大小事情，少他不得。当日贲地传与来招，督管各作匠人兴工。先拆毁花家那边旧房，打开墙垣，筑起地脚，盖起卷棚山子，各亭台耍子去处，非止一日，不必尽说。光阴迅速，日月如梭。西门庆在家看管起盖花园，约有一个月有余。都在三月上旬，乃花子虚百日。李瓶儿预先请过西门庆去和他计议，要把花子虚灵烧了：「房子卖的卖。不的，你着人来看守。你早把奴取过去罢，省的奴在这里，晚夕空落落的，我害怕，常有狐狸鬼混的慌，你到家对大娘说，只当可怜见奴的性命罢。随你把奴做第几个，奴情愿伏侍你，铺床迭被，也无抱怨。」说着，泪如雨下。西门庆道：「你休烦恼。前日我把你这话，到家对房下和潘五姐也说过了，直待与你把房盖得完，那时你孝服将满，取你过门不迟。」李瓶儿道：「好好。你既有真心取奴，先早把奴房撺掇盖了，取过奴去。到你家住一日，死也甘心。省的奴在这里度日如年。」西门庆道：「你的话，我知道了。」李瓶儿道：「再不的，房子盖完，我烧了灵，搬在五姐那边楼上住两日。等你盖了新房子，搬移不迟。你好歹到家和五姐说，我还等你的话。这三月初十日，是他百日，我好念经烧灵。」西门庆应诺，与妇人歇了一夜，到次日，一五一十，对潘金莲说了。金莲道：「可知好哩！奴巴不的腾两间房与他住，只怕别人，你还问声大姐姐去。我落得河水不洗船，看大姐姐怎么说。」这西门庆一直走到月娘房里来，月娘正梳头。西门庆把李瓶儿要嫁一节，从头至尾听说一遍。月娘道：「你不好取他的休。他头一件，孝服不满；第二件，你当初和他男子汉相交；第三件，你又和他老婆有连手，买了他房子，收着他寄放的许多东西。常言：『机儿不快，梭儿快。』我闻得人说，他家房族中花大，是个刁徒泼皮的人。倘或一时有些声口，倒没的惹虱子头上挠。奴说的是好话，赵钱孙李，你依不依随你。」几句说的西门庆闭口无言。走出前厅来，自己坐在椅子上沉吟。又不好回李瓶儿话，又不好不去的。寻思了半日，还进入金莲房里来，金莲问道：「你到大姐姐房里，大姐姐怎么说？」西门庆把月娘的话，告诉了一遍。金莲道：「大姐不肯，论他也说的是。你又买了他房子，又取他老婆，当初又与他汉子相交了一世，方纔好。我又是一说，既做朋友，没丝也有寸交，官儿也看乔了。」西门庆道：「这个也罢了。倒只怕花大那厮，没圈子跳，知道，挟制他孝服不满，在中间鬼混，怎生计较？我如今又不好回他的。」金莲道：「呸！有甚难处事？我问你，今日回他去，明日回他去？」西门庆道：「他教我今日回他声去。」金莲道：「你今日到那里，恁对他说。你说：『我到家对五姐说来，他的楼上堆着许多药料，你这家火去，到那里没处堆放。亦发再宽待些时，你这边房子七八也待盖了，撺掇匠人，早些装修油漆停当。你这边孝服也将满，那时取你过去，都不齐备些？强似搬在五姐楼上，荤不荤，素不素，挤在一处甚么样子？』管情他也罢了。」西门庆听言大喜，那里等的时分，走到李瓶儿家。妇人便问：「你到家所言之事如何？」西门庆道：「五姐说来，一发等收拾油漆你新房子，你搬去不迟。如今他那边楼上，堆的破零三乱。你这些东西过去，那里堆放？只有一件打搅，只怕你家大伯子，说你孝服不满，如之奈何？」妇人道：「他不敢管我的事。休说各衣另饭，当官写立分单，已倒断开了的勾当。只我先嫁由爹娘，后嫁由自己。自古嫂儿不通问，大伯管不的我暗地里事。我如今见过不的日子，他顾不的我。他若但放出个屁来，我教那贼花子坐着死，不敢睡着死。大官人你放心，他不敢惹我。」因问：「你这房子，也得几时方收拾完备？」西门庆道：「我如今分付匠人，先替你盖出这三间楼来，及到油漆了，也到五月头上。」妇人道：「我的哥哥，你上紧些。奴情愿等着到那时候也罢。」说毕，丫鬟摆上酒，两个欢娱饮酒过夜，西门庆自此，没三五日不来，俱不必细说。光阴迅速，西门庆家中已盖了两月房屋。三间玩花楼，装修将完；只少卷棚还未安磉。一日，五月蕤宾佳节，家家门插艾叶，处处户挂灵符。李瓶儿治了一席酒，请过西门庆来。一者解粽，二者商议过门之日。择五月十五日，先请僧人念经烧灵，然后西门庆这边择取妇人过门。西门庆因问李瓶儿道：「你烧灵那日，花大、花三、花四请他不请？」妇人道：「我每人把个帖子，随他来不来。」当下计议已定。单等五月十五日，妇人请了报恩寺十二众僧人，在家念经除灵。西门庆那日封了三钱银子人情，与应伯爵做生日。早辰拿了五两银子与玳安，教他买办鸡鸭置酒。晚夕李瓶儿除服，都教平安、画童两个跟马，约午后时分，往应伯爵家来。那日在席前者，谢希大、祝日念、孙天化、吴典恩、云离守、常时节，连新上会贲地传，十个朋友一个不少。又叫了两个小优儿弹唱。递毕酒，上坐之时，西门庆叫过两优儿，认的头一个是吴银儿兄弟，名唤吴惠。那一个不认的，跪下说道：「小的是郑爱香儿的哥，叫郑奉。」西门庆坐首席，每人赏二钱银子。吃到日西时分，只见玳安拿马来接。正上席来，向西门庆耳边悄悄说道：「娘请爹早些去罢。」西门庆与了他个眼色，就往下走！被应伯爵叫住问道：「贼狗骨头儿！你过来实说。若不实说，我把你小耳朵拧过一边来。你应爹一年有几个生日？恁日头半天里，就拿马来接了你爹，往那里去？端的谁使了你来？或者是你家中那娘使了你来？或是里边十八子那里？你若不说过，一百年也不对你爹说替你这小狗秃儿娶老婆。」那玳安只是说道：「委的没人使小的。小的恐怕夜紧，爹要起身，早拿马来伺侯。」那应伯爵奈何了他一回，见不说，便道：「你不说，我明日打听出来，和你这小油嘴儿算帐。」于是又斟了一锺酒，拿了半碟点心，与玳安下边吃去。良久，西门庆下来，东净里更衣。叫玳安道，到僻静处问他话：「今日花家那有谁来？」玳安道：「花三往乡里去了。花四家里瞎眼，都没人来。只有花大家两口子来，吃了一日斋饭，他汉子先家去了。只有他老婆临去，二娘叫到房里去了，与了他十两银子，两套衣服，还与二娘磕了头。」西门庆道：「他没说甚么？」玳安道：「他一字通没敢题甚么，只说到明日二娘过来，他三日要来爹家走走。」西门庆道：「他真个说此话来？」玳安道：「小的怎敢说谎！」这西门庆听了，满心欢喜。又问：「斋供了毕不曾？」玳安道：「和尚老早就去了，灵位也烧了。二娘说请爹早些过去。」西门庆道：「我知道了，你外边看马去。」这玳安正往外走，不想应伯爵在过道内听，猛可叫了一声，把玳安諕了一跳。伯爵骂道：「贼小狗骨头儿！你不告我说，我就的也听见了。原来你爹儿们干的好茧儿！」西门庆道：「怪狗才！休要唱扬一地里知道。」伯爵道：「你央及我央儿，我不说便了。」于是走到席上，如此这般，对众人说了一回。把西门庆拉着说道：「哥，你可成个人？有这等事，就挂口不对兄弟们说声儿。就是花大有些甚话说，哥只分付俺每一声，等俺每和他说，不怕他不依。他若敢道个不是，俺每就与他结一个大胳膊。端的不知哥这亲事成了不曾？哥一一告诉俺们。比来相交朋友做甚么？哥若有使令俺们处，兄弟情厚，火里火去，水里水去；愿不求同日生，只求各自死。弟兄每这等待你，哥你不说个道理，还只顾瞒着不说。」谢希大接过说道：「哥如若不说，俺每明日唱扬的里边李桂姐、吴银儿那里知道了，大家都不好意思的。」西门庆笑道：「我教众位得知罢。亲事已都停当了。」应伯爵问道：「取行礼过门，还未定日子？」谢希大道：「哥到明日取嫂子过门，俺每贺哥去。哥好歹叫上四个唱的，请俺每吃喜酒。」西门庆道：「这个不消说，一定奉请列位兄弟。」祝日念道：「比时明日与哥庆喜，不如咱如今替哥把一杯酒儿，先庆了喜罢。」于是叫伯爵把酒，谢希大执壶，祝日念捧茶，其余都陪跪。把两个小优儿也叫来，跪着弹唱一套十三腔喜遇吉日，一连把西门庆灌了三四锺酒。祝日念道：「哥，那日请俺每吃酒，也不要少了郑奉、吴惠他两个。」因定下：「你二人好歹去。」郑奉掩口道：「小的们已定早去宅里伺侯。」须臾，递毕酒，各归席座下，又吃了一回。看看天晚，那西门庆那埋坐的住，赶眼错起身走了。应伯爵还要拦门不放，谢希大道：「应二哥，你放哥去罢。休要误了他的事，教嫂子见怪。」那西门庆得手上马，一直走了。到了狮子街，李瓶儿摘去孝䯼髻，换了一身艳服。堂中灯烛荧煌，预备下一桌齐整酒肴。上面独独安一张交椅，让西门庆上坐，方打开一坛酒筛来，丫鬟执壶，李瓶儿满斟一杯递上去，插烛也似磕了四个头，说道：「今日拙夫灵已烧了。蒙大官人不弃，奴家得奉巾栉之欢，以遂于飞之愿。」行毕礼起来。西门庆下席来，亦回递妇人一杯，方纔坐下。因问：「今日花大两口子，没说甚么？」李瓶儿道：「奴午斋后，叫进他到房中，就说大官人这边做亲之事。他满口说好，一句闲话也无。只说明日三日哩，教他娘子儿来咱家走走。奴与他十两银子，两套衣服，两口子喜欢的要不的。临出门，谢了又谢。」西门庆道：「他既恁说，我容他上门走走也不差甚么。但有一句闲话，我不饶他。」李瓶儿道：「他就放屁辣骚，奴也不放过他。」于是汤水嗄饭，老妈厨下一齐拏上。李瓶儿亲自洗手剔甲，做了些葱花羊肉，一寸的匾食儿。银镶锺儿盛着南酒 。秀春斟了两杯，李瓶儿陪西门庆吃。西门庆止吃了上半瓯，就把下半瓯送与李瓶儿吃。一往一来，迭连吃上几瓯。真个是：
 
 「年随情少， 酒因境多。」
 
