--- a/the-golden-lotus/018.md
+++ b/the-golden-lotus/018.md
@@ -23,7 +23,7 @@
 
 「自幼乖滑伶俐，风流博浪牢成。爱穿鸭绿出炉银，双陆象棋帮衬。琵琶笙竺箫管，弹丸走马员情。只有一件不堪闻，见了佳人是命。」
 
-月娘便道：「既是姐夫会看牌，何不进去咱同看一看？」经济道：「娘和大姐看罢，儿子却不当。」月娘道：「姐夫至亲间，怕怎的？」一面进入房中。只见孟玉楼正在床上铺茜红毡看牌。见经济进来，抽身就要走。月娘道：「姐夫又不是别人，见个礼儿罢。」向经济道：「这是你三娘哩。」那经济慌忙躬身作揖，玉楼还了万福。当下玉楼、大姐三人同抹，经济在傍边观看。抹了一回，大姐输了下来。经济上来又抹，玉楼出了个天地分，经济出了恨点不到头。吴月娘出了个四红沉，八不就，双三不搭两么儿，和儿不出；左来右去配不着色头。只见潘金莲掀开帘子走进来，银丝｛髟狄｝髻上戴着一头鲜花儿仙掌，体可玉貌，笑嘻嘻道：「我说是谁，原来是陈姐夫在这里。」慌的陈敬济扭颈回头，猛然一见，不觉心荡目摇，精魂已失。正是：
+月娘便道：「既是姐夫会看牌，何不进去咱同看一看？」经济道：「娘和大姐看罢，儿子却不当。」月娘道：「姐夫至亲间，怕怎的？」一面进入房中。只见孟玉楼正在床上铺茜红毡看牌。见经济进来，抽身就要走。月娘道：「姐夫又不是别人，见个礼儿罢。」向经济道：「这是你三娘哩。」那经济慌忙躬身作揖，玉楼还了万福。当下玉楼、大姐三人同抹，经济在傍边观看。抹了一回，大姐输了下来。经济上来又抹，玉楼出了个天地分，经济出了恨点不到头。吴月娘出了个四红沉，八不就，双三不搭两么儿，和儿不出；左来右去配不着色头。只见潘金莲掀开帘子走进来，银丝䯼髻上戴着一头鲜花儿仙掌，体可玉貌，笑嘻嘻道：「我说是谁，原来是陈姐夫在这里。」慌的陈敬济扭颈回头，猛然一见，不觉心荡目摇，精魂已失。正是：
 
 「五百年冤家今朝相遇， 三十年恩爱一日遭逢。」
 
