--- a/the-golden-lotus/019.md
+++ b/the-golden-lotus/019.md
@@ -21,7 +21,7 @@
 
 「我见他斜戴花枝，朱唇上不抹胭脂，似抹胭脂。前日相逢，今日相逢，似有情实，未见情实！ 欲见许，何曾见许？似推辞，本是不推辞。约在何时？会在何时？不相逢，他又相思；既相逢，我又相思。」
 
-且不说吴月娘等，在花园中饮酒。单表西门庆从门外夏提刑庄子上吃了酒回来，打南瓦子里头过。平昔在三瓦两巷行走耍子，捣子每都认的。那时宋时谓之捣子，今时俗呼为光棍是也。内中有两个，一名草里蛇鲁华，一名过街鼠张胜，常被西门庆资助，乃鸡窃狗盗之徒。西门庆见他两个在那里要钱，勒住马，近前说话。二人连忙走至根前，打个半跪，道：「大官人，这咱晚往那去来？」西门庆道：「今日是提刑所夏老爹生日，门外庄上请我吃了酒来。我有一庄事央烦你每，依我不依？」二人道：「大官人没的说，小人平昔受恩甚多，如今使令小人之处，虽赴汤蹈火，万死何辞！」西门庆道：「既是你二人恁说，明日来我家，我有话分付你。」二人道：「那里等的至明日，你老人家说与小罢！端的有甚么事？」这西门庆附耳低言，便把蒋竹山要了李瓶儿之事，说了一遍：「只要你弟兄二人，替我出这口气便了！」因在马上搂起衣底，顺袋中，还有四五两碎银子，都倒与二人。便道：「你两个拿出去打酒吃，只要替我干得停当，还谢你二人。」鲁华那肯接，说道：「小人受你老人家恩还少哩！我只道叫俺两个往东洋大海里，拔苍龙头上角，西华岳山中，取猛虎口中牙，便去不得，这些小之事，有何难哉！这个银两，小人断不敢领受！」西门庆道：「你不收，我也不央及你了！」教玳安接了银子，打马就走。又被张胜拦住，说：「鲁华，你不知他老人家性儿，你不收，恰似咱每推托的一般！」一面接了银子，扒倒地下磕了个头，说道：「你老人家只顾家去坐着，不消两日，管情稳抇抇，教你笑一声。」张胜道：「只望官府到明日，把小人送与提刑所夏老爹那里答应，就勾了小人了。」西门庆道：「这个不打紧，何消你说！」看官听说，后来西门庆果然把张胜送在夏提刑守备府，做了个亲随。此系后事，表过不题。那两子捣子，得了银子，依旧耍钱去了。西门庆骑马进门来家，已是日西时分，月娘等众人听见他进门，都往后边去了；只有金莲在卷帘内，看收家火。西门庆不往后边去，径到花园里来，见妇人在亭子上收家火，便问：「我不在，你在这里做甚么来？」金莲笑道：「俺每今日和大姐开门看了看，谁知你来的恁早？」西门庆道：「今日夏大人费心，庄子上叫了四个唱的，四个捣倒小厮，只请了五位客到。我恐怕路远，来的早。」妇人与他脱了衣裳，因说道：「你没酒，教丫头看酒来你吃。」西门庆分付春梅：「把别的菜蔬都收下去，只刘下几碟细菓子儿，筛一壶葡萄酒 来我吃。」坐在上面椅子上。因看见妇人上穿沉香色水纬罗对衿衫儿，五色绉纱眉子。下着白碾光绢桃线裙子，裙边大红光素段子，白绫高底羊皮金云头鞋儿。头上银丝｛髟狄｝髻，金厢玉蟾宫折桂分心，翠梅钿儿，云鬓簪着许多花翠，越显出红馥馥朱唇，白腻腻粉脸，不觉淫心輙起，纔着他两只手儿，搂抱在一处亲嘴。不一时，春梅筛上酒来，两个一递一口儿，饮酒砸舌，砸的舌头一片声响。妇人一面搂起裙子，坐在身上，噙酒哺在他口里，然后在桌上，纤手拈了个鲜莲蓬子，与他吃。西门庆道：「涩剌剌的，吃他做甚么？」妇人道：「我的儿，你就吊了造化了，娘手里拿的东西儿，你不吃？」于是口中噙了一粒鲜核桃仁儿，送与他，纔罢了。西门庆又要翫弄妇人的胸乳，妇人一面摘下〈扌寨〉领子的金三事儿来，用口咬着，摊开罗衫。露见美玉无瑕，香馥馥的酥胸，紧就就的香乳，揣揣摸摸良久，用口犊之，彼此调笑，曲尽于飞。西门庆乘着喜欢，向妇人道：「我有一件事告诉你，到明日教你笑一声，你道蒋太医开了生药铺，到明日管情教他脸上开菓子铺来！」妇人便问：「怎么缘故？」西门庆悉把今日门外，撞遇鲁华、张胜二人之事，告诉了一遍。妇人笑道：「你这个堕业的众生，到日日不知作多少罪业？」又问：「这蒋太医，不是常来咱家看病的那蒋太医？我见他且是谦恭礼体儿的，见了人把头儿低着，可怜见儿的，你这等作他！」西门庆道：「你看不出他。你说他低着头儿，他专一看你的脚哩。」妇人道：「汗邪的油嘴！他可可看人家老婆的脚？」西门庆道：「你还不知他哩！也是左近一个人家，请他看病，正是街上买了一尾鱼手提着，见那人请他，说：『我送了鱼到家就来。』那人说：『家中有紧病，请师父就去罢！』这蒋竹山一直跟到他家。病人在楼上，请他上楼，不想是个女人不好。素体容妆，走在房来，舒手教他把脉。这厮手把着脉，想起他鱼来，挂在帘钩儿上，就忘记看脉。只顾且问：『嫂子，你下边有猫儿也没有？』不想他男子汉，在屋里听见了，走来探着毛，打了个臭死，药钱也没有与他，把衣服扯的稀烂，得手纔跑了。」妇人道：「可可儿的来，我不信一个文墨人儿，他干这个营生？」西门庆道：「你看他迎面儿，就误了勾当，单爱外装老成，内藏奸诈！」两个说笑了一回，不吃酒了，收拾了家火，归房宿歇，不在话下。按下一头，都说李瓶儿招赘了蒋竹山，约两月光景，初时蒋竹山图妇人喜欢，修合了些戏药部，门前买了些甚么景东人事，美女相思套之类，实指望打动妇人心。不想妇人曾在西门庆手里，狂风骤雨都经过的，往往干事不称其意，渐渐颇生憎恶。反被妇人把淫器之物，都用石砸的稀烂，都丢吊了。又说：「你本虾鳝，腰里无力：平白买将这行货子来戏弄老娘家！把你当块肉儿，原来是个中看不中吃，镴鎗头，死王八！」骂的竹山狗血喷了脸。被妇人半夜三更，赶到前边铺子里睡；于是一心只想西门庆，不许他进房中来。每日聐聒着算帐，查算本钱。这竹山正受了一肚气，走在铺子小柜里坐的，只见两个来进来，吃的浪浪跄跄，楞楞睁睁，走在凳子上坐下。先是一个问道：「你这铺子有狗黄没有？」竹山笑道：「休要作戏，只有牛黄，那讨狗黄？」又问：「没有狗黄，你有冰灰也罢，拿来我瞧，我要买你几两」。竹山道：「生药行只有冰片，是南海波斯国地道出的，那讨冰灰来？」那一个说道：「你休问他，量他纔开了几日铺子，他那里有这两庄药材？咱往西门大官人铺中买去了来！」那个说道：「过来！咱与他说正经话罢！蒋二哥，你休推睡里梦里！你三年前死了娘子儿，问这位鲁大哥借的那三十两银子，本利也该许多，今日问你要来了。俺刚才进门，就先问你要，你在人家招赘了，初开了这个铺子，恐怕丧了你行止，显的俺每阴骘了。故此先把几句风话来教你认范，你不认范，他这银子你少不得还他！」竹山听了，諕了个立睁，说道：「我并没借他什么银子。」那人道：「你没借银，都问你讨？自古苍蝇不钻那没缝的弹，快休说此话！」蒋竹山道：「我不知阁下姓甚名谁，素不相识，如何来问我要银子？」那人道：「蒋二哥，你就差了！自古于官不贫，赖债不富。想着你当初不得地时，串铃儿卖膏药，也亏这位鲁大哥扶持你，今日就到了这步田地来。」这个人道：「我便姓鲁，叫做鲁华。你某年借了我三十两银子，发送妻小，本利该我四十八两银子，少不得还我。」竹山慌道：「我那里借你银子来？就借了你银子，也有文书保人。」张胜道：「我就是保人。」因向袖中取出文书，与他照了照。把竹山气的脸腊查也似黄了，骂道：「好杀材，狗男女，你是那里捣子？走来吓诈我！」鲁华听了，心中大怒，隔着小柜，风乍的一拳去，早飞到竹山面门上，就把鼻子打歪在半边，一面把架上药材撒了一街。竹山大骂：「好贼捣子！你如何来抢夺我货物？」只叫天福儿来帮助，被鲁华一脚踢过一边，那里再敢上前。张胜把竹山拖出小柜来，拦住鲁华手，劝道：「鲁大哥，你多日子也耽待了，再宽他两日儿，教他凑过与你便了。蒋二哥，你怎么说？」竹山道：「我几时借他银子来？就是问你借的，也等慢慢好讲，如何这等撒野？」张胜道：「蒋二哥，你这回吃了橄榄灰儿，回过味来了！打了你一面口袋，倒过醮来了。你若好好早这般，我教鲁大哥饶让你些利钱儿，你便两三限凑了还他，纔是话。你如何把硬话儿不认，莫不人家就不问你要罢？」那竹山听了道：「气杀我，我和他见官去！谁见他甚么钱来？」张胜道：「你又吃了早酒了！」不堤防鲁华又是一拳，仰八叉跌了一交，脸不倒裁入洋沟里，将发散开，巾帻都污浊了。竹山大叫青天白日起来，被保甲上来，都一条绳子拴了。李瓶儿在房中听见外边人攘，走来帘下听觑。见地方拴的竹山去了，气了个立睁。使出冯妈妈来，把牌面幌子都收了；街上药材被人抢了许多，一面关闭了门户，家中坐的。早有人把这件事，报与西门庆知道。即差人分付地方，明日早解提刑院，这里又拿帖子，对夏大人说了。次日早带上人来，夏提刑升听，看了地方呈状，叫上竹山去，问道：「你可是蒋文蕙？如何借了鲁华银子不还，反行毁骂他？其情可恶！」竹山道：「小的通不认得此人，并没借他银子。小人以理分说，他反不容，乱行踢打，把小人货物都抢了。」夏提刑便叫鲁华：「你怎么说？」鲁华道：「他原借小的银两，发送妻丧，至今三年光景，延挨不还小的；小的今日打听他在人家招赘了，做了大买卖，问他理讨，他倒百般辱骂小的，说小的抢夺他货物。见有他借银子的文书在此，这张胜便是保人，望爷查情！」一面怀中取出文契，递上去。夏提刑展开观看，上面写着：
+且不说吴月娘等，在花园中饮酒。单表西门庆从门外夏提刑庄子上吃了酒回来，打南瓦子里头过。平昔在三瓦两巷行走耍子，捣子每都认的。那时宋时谓之捣子，今时俗呼为光棍是也。内中有两个，一名草里蛇鲁华，一名过街鼠张胜，常被西门庆资助，乃鸡窃狗盗之徒。西门庆见他两个在那里要钱，勒住马，近前说话。二人连忙走至根前，打个半跪，道：「大官人，这咱晚往那去来？」西门庆道：「今日是提刑所夏老爹生日，门外庄上请我吃了酒来。我有一庄事央烦你每，依我不依？」二人道：「大官人没的说，小人平昔受恩甚多，如今使令小人之处，虽赴汤蹈火，万死何辞！」西门庆道：「既是你二人恁说，明日来我家，我有话分付你。」二人道：「那里等的至明日，你老人家说与小罢！端的有甚么事？」这西门庆附耳低言，便把蒋竹山要了李瓶儿之事，说了一遍：「只要你弟兄二人，替我出这口气便了！」因在马上搂起衣底，顺袋中，还有四五两碎银子，都倒与二人。便道：「你两个拿出去打酒吃，只要替我干得停当，还谢你二人。」鲁华那肯接，说道：「小人受你老人家恩还少哩！我只道叫俺两个往东洋大海里，拔苍龙头上角，西华岳山中，取猛虎口中牙，便去不得，这些小之事，有何难哉！这个银两，小人断不敢领受！」西门庆道：「你不收，我也不央及你了！」教玳安接了银子，打马就走。又被张胜拦住，说：「鲁华，你不知他老人家性儿，你不收，恰似咱每推托的一般！」一面接了银子，扒倒地下磕了个头，说道：「你老人家只顾家去坐着，不消两日，管情稳抇抇，教你笑一声。」张胜道：「只望官府到明日，把小人送与提刑所夏老爹那里答应，就勾了小人了。」西门庆道：「这个不打紧，何消你说！」看官听说，后来西门庆果然把张胜送在夏提刑守备府，做了个亲随。此系后事，表过不题。那两子捣子，得了银子，依旧耍钱去了。西门庆骑马进门来家，已是日西时分，月娘等众人听见他进门，都往后边去了；只有金莲在卷帘内，看收家火。西门庆不往后边去，径到花园里来，见妇人在亭子上收家火，便问：「我不在，你在这里做甚么来？」金莲笑道：「俺每今日和大姐开门看了看，谁知你来的恁早？」西门庆道：「今日夏大人费心，庄子上叫了四个唱的，四个捣倒小厮，只请了五位客到。我恐怕路远，来的早。」妇人与他脱了衣裳，因说道：「你没酒，教丫头看酒来你吃。」西门庆分付春梅：「把别的菜蔬都收下去，只刘下几碟细菓子儿，筛一壶葡萄酒 来我吃。」坐在上面椅子上。因看见妇人上穿沉香色水纬罗对衿衫儿，五色绉纱眉子。下着白碾光绢桃线裙子，裙边大红光素段子，白绫高底羊皮金云头鞋儿。头上银丝䯼髻，金厢玉蟾宫折桂分心，翠梅钿儿，云鬓簪着许多花翠，越显出红馥馥朱唇，白腻腻粉脸，不觉淫心輙起，纔着他两只手儿，搂抱在一处亲嘴。不一时，春梅筛上酒来，两个一递一口儿，饮酒砸舌，砸的舌头一片声响。妇人一面搂起裙子，坐在身上，噙酒哺在他口里，然后在桌上，纤手拈了个鲜莲蓬子，与他吃。西门庆道：「涩剌剌的，吃他做甚么？」妇人道：「我的儿，你就吊了造化了，娘手里拿的东西儿，你不吃？」于是口中噙了一粒鲜核桃仁儿，送与他，纔罢了。西门庆又要翫弄妇人的胸乳，妇人一面摘下〈扌寨〉领子的金三事儿来，用口咬着，摊开罗衫。露见美玉无瑕，香馥馥的酥胸，紧就就的香乳，揣揣摸摸良久，用口犊之，彼此调笑，曲尽于飞。西门庆乘着喜欢，向妇人道：「我有一件事告诉你，到明日教你笑一声，你道蒋太医开了生药铺，到明日管情教他脸上开菓子铺来！」妇人便问：「怎么缘故？」西门庆悉把今日门外，撞遇鲁华、张胜二人之事，告诉了一遍。妇人笑道：「你这个堕业的众生，到日日不知作多少罪业？」又问：「这蒋太医，不是常来咱家看病的那蒋太医？我见他且是谦恭礼体儿的，见了人把头儿低着，可怜见儿的，你这等作他！」西门庆道：「你看不出他。你说他低着头儿，他专一看你的脚哩。」妇人道：「汗邪的油嘴！他可可看人家老婆的脚？」西门庆道：「你还不知他哩！也是左近一个人家，请他看病，正是街上买了一尾鱼手提着，见那人请他，说：『我送了鱼到家就来。』那人说：『家中有紧病，请师父就去罢！』这蒋竹山一直跟到他家。病人在楼上，请他上楼，不想是个女人不好。素体容妆，走在房来，舒手教他把脉。这厮手把着脉，想起他鱼来，挂在帘钩儿上，就忘记看脉。只顾且问：『嫂子，你下边有猫儿也没有？』不想他男子汉，在屋里听见了，走来探着毛，打了个臭死，药钱也没有与他，把衣服扯的稀烂，得手纔跑了。」妇人道：「可可儿的来，我不信一个文墨人儿，他干这个营生？」西门庆道：「你看他迎面儿，就误了勾当，单爱外装老成，内藏奸诈！」两个说笑了一回，不吃酒了，收拾了家火，归房宿歇，不在话下。按下一头，都说李瓶儿招赘了蒋竹山，约两月光景，初时蒋竹山图妇人喜欢，修合了些戏药部，门前买了些甚么景东人事，美女相思套之类，实指望打动妇人心。不想妇人曾在西门庆手里，狂风骤雨都经过的，往往干事不称其意，渐渐颇生憎恶。反被妇人把淫器之物，都用石砸的稀烂，都丢吊了。又说：「你本虾鳝，腰里无力：平白买将这行货子来戏弄老娘家！把你当块肉儿，原来是个中看不中吃，镴鎗头，死王八！」骂的竹山狗血喷了脸。被妇人半夜三更，赶到前边铺子里睡；于是一心只想西门庆，不许他进房中来。每日聐聒着算帐，查算本钱。这竹山正受了一肚气，走在铺子小柜里坐的，只见两个来进来，吃的浪浪跄跄，楞楞睁睁，走在凳子上坐下。先是一个问道：「你这铺子有狗黄没有？」竹山笑道：「休要作戏，只有牛黄，那讨狗黄？」又问：「没有狗黄，你有冰灰也罢，拿来我瞧，我要买你几两」。竹山道：「生药行只有冰片，是南海波斯国地道出的，那讨冰灰来？」那一个说道：「你休问他，量他纔开了几日铺子，他那里有这两庄药材？咱往西门大官人铺中买去了来！」那个说道：「过来！咱与他说正经话罢！蒋二哥，你休推睡里梦里！你三年前死了娘子儿，问这位鲁大哥借的那三十两银子，本利也该许多，今日问你要来了。俺刚才进门，就先问你要，你在人家招赘了，初开了这个铺子，恐怕丧了你行止，显的俺每阴骘了。故此先把几句风话来教你认范，你不认范，他这银子你少不得还他！」竹山听了，諕了个立睁，说道：「我并没借他什么银子。」那人道：「你没借银，都问你讨？自古苍蝇不钻那没缝的弹，快休说此话！」蒋竹山道：「我不知阁下姓甚名谁，素不相识，如何来问我要银子？」那人道：「蒋二哥，你就差了！自古于官不贫，赖债不富。想着你当初不得地时，串铃儿卖膏药，也亏这位鲁大哥扶持你，今日就到了这步田地来。」这个人道：「我便姓鲁，叫做鲁华。你某年借了我三十两银子，发送妻小，本利该我四十八两银子，少不得还我。」竹山慌道：「我那里借你银子来？就借了你银子，也有文书保人。」张胜道：「我就是保人。」因向袖中取出文书，与他照了照。把竹山气的脸腊查也似黄了，骂道：「好杀材，狗男女，你是那里捣子？走来吓诈我！」鲁华听了，心中大怒，隔着小柜，风乍的一拳去，早飞到竹山面门上，就把鼻子打歪在半边，一面把架上药材撒了一街。竹山大骂：「好贼捣子！你如何来抢夺我货物？」只叫天福儿来帮助，被鲁华一脚踢过一边，那里再敢上前。张胜把竹山拖出小柜来，拦住鲁华手，劝道：「鲁大哥，你多日子也耽待了，再宽他两日儿，教他凑过与你便了。蒋二哥，你怎么说？」竹山道：「我几时借他银子来？就是问你借的，也等慢慢好讲，如何这等撒野？」张胜道：「蒋二哥，你这回吃了橄榄灰儿，回过味来了！打了你一面口袋，倒过醮来了。你若好好早这般，我教鲁大哥饶让你些利钱儿，你便两三限凑了还他，纔是话。你如何把硬话儿不认，莫不人家就不问你要罢？」那竹山听了道：「气杀我，我和他见官去！谁见他甚么钱来？」张胜道：「你又吃了早酒了！」不堤防鲁华又是一拳，仰八叉跌了一交，脸不倒裁入洋沟里，将发散开，巾帻都污浊了。竹山大叫青天白日起来，被保甲上来，都一条绳子拴了。李瓶儿在房中听见外边人攘，走来帘下听觑。见地方拴的竹山去了，气了个立睁。使出冯妈妈来，把牌面幌子都收了；街上药材被人抢了许多，一面关闭了门户，家中坐的。早有人把这件事，报与西门庆知道。即差人分付地方，明日早解提刑院，这里又拿帖子，对夏大人说了。次日早带上人来，夏提刑升听，看了地方呈状，叫上竹山去，问道：「你可是蒋文蕙？如何借了鲁华银子不还，反行毁骂他？其情可恶！」竹山道：「小的通不认得此人，并没借他银子。小人以理分说，他反不容，乱行踢打，把小人货物都抢了。」夏提刑便叫鲁华：「你怎么说？」鲁华道：「他原借小的银两，发送妻丧，至今三年光景，延挨不还小的；小的今日打听他在人家招赘了，做了大买卖，问他理讨，他倒百般辱骂小的，说小的抢夺他货物。见有他借银子的文书在此，这张胜便是保人，望爷查情！」一面怀中取出文契，递上去。夏提刑展开观看，上面写着：
 
 「立借契人蒋文蕙，系本县医师为因妻丧，无钱发送，凭保人张胜，借到鲁名下白银三十两，月利三分，入手用度。约至次年本利交还，如有欠少时，家值钱物件折准。恐后无凭，立此借契为照者。」
 
