--- a/the-golden-lotus/028.md
+++ b/the-golden-lotus/028.md
@@ -29,7 +29,7 @@
 
 「时人不用穿针线， 那得工夫送巧来。」
 
-经济袖着鞋，径往潘金莲房来，转过影壁，只见秋菊跪在院内。便戏道：「小大姐，为甚么来投充了新军？又掇起石头来了。」金莲在楼上听见，便叫春梅问道：「是谁说他掇起石头来了？干净这奴才没顶着？」春梅道：「是姐夫来了。秋菊顶着石头哩！」妇人便叫：「陈姐夫，楼上没人，你上来不是？」这小伙儿，方扒步撩衣，上的楼来。只见妇人在楼前面开了两扇窗儿，挂着湘帘，那里临镜梳头。这陈敬济走到傍边一个小杌儿坐下，看见妇人黑油般头发，手挽着梳，还拖着地儿，红丝绳儿扎着。一窝丝攒上，戴着银丝｛髟狄｝髻，还垫出一丝香云。｛髟狄｝髻内安着许多玫瑰花瓣儿，露着四鬓上，打扮的就是个活观音。须臾，看着妇人梳了头，掇过妆台去，向面盆内洗了手，穿上衣裳，唤春梅：「拿茶来与姐夫吃。」那经济只是笑，不做声。妇人因问：「姐夫笑甚么？」经济道：「我笑你管情不见了些甚么儿？」妇人道：「贼短命！我不见了，关你甚事？你怎的晓得？」经济道：「你看我好心倒做了驴肝肺，你倒讪起我来。恁说我去罢！」抽身往楼下就走。被妇人一把手拉住，说道：「怪短命，会张致的！来旺儿媳妇子死了，没了想头了。却怎么还认的老娘？」因问：「你猜着我不见了甚么物件儿？」这经济向袖中取出来，提搊着鞋拽靶儿，笑道：「你看这个好的儿是谁的？」妇人道：「好短命！原来是你偷拿了我的鞋去了。教我打着丫头，遶地里寻。」经济道：「你怎的到得我手里？」妇人道：「我这屋里再有谁来？敢是你贼头鼠脑，偷了我这只鞋去了！」经济道：「你老人家不害羞！我这两日又不往你这屋里来，我怎生偷你的？」妇人道：「好贼短命！等我对你爹说，你到偷了我鞋，还说我不害羞。」经济道：「你只好拿爹来諕我罢了！」妇人道：「你好小胆子儿！明知道和旺儿媳妇子七个八个，你还调戏他，想那淫妇教你戏弄。既不是你偷了我的鞋，这鞋怎落在你手里？趁早实供出来，交还与我鞋，你还便益。自古物见主不索取，但迸半个不字，教你死无葬身之地！」经济道：「你老人家是个女番子，且是倒会的放刁！这里无人，咱每好讲。你既要鞋，拿一件物事儿，我换与你。不然，天雷也打不出去！」妇人道：「好短命！我的鞋应当还我。教换甚么事儿与你？」经济笑道：「五娘，你拿你袖的那方汗巾儿赏与儿子，儿子与了你的鞋罢。」妇人道：「我明日另寻一方好汗巾儿；这汗巾儿；是你爹成日眼里见过，不好与你的。」经济道：「我不，别的就与我一百方，也不筭；一心我只要你老人家这方汗巾儿。」妇人笑道：「好个老成久惯的短命！我也没气力和你两个缠！」于是向袖中取出一方细撮穗，白绫桃线，莺莺烧夜香汗巾儿，上面连银三字儿，都掠与他。这经济连忙接在手里，与他深的唱个喏。妇人吩咐：「你好生藏着，休教大姐看见。他不是好嘴头子！」经济道：「我知道。」一面把鞋递与他，如此这般：「是小铁棍儿昨日在花园里拾的，今早拿着问我换网巾圈儿耍子。」一节，告诉一遍。妇人听了粉面通红，银牙暗咬，说道：「你看贼小奴才油手！把我这鞋弄的恁添黑的。看我教他爹打他不打他！」经济道：「你弄杀我。打了他不打紧，敢就赖在我身上，是我说的，千万休要说罢。」妇人道：「我饶了小奴才，除非饶了蝎子！」可有他两个正说在热闹处，忽听小厮来安儿来寻：「爹在前厅，请姐夫写礼帖儿哩。」妇人连忙撺掇他出去了。下的楼来，教春梅取板子来，要打秋菊。秋菊说着不肯倘，说道：「寻将娘的鞋来，娘还要打我！」妇人把刚纔陈敬济拿的鞋递与看，骂道：「贼奴才！你把那个当我的鞋，将这个放在那里？」秋菊看见，把眼瞪了半日，不敢认。说道：「可是怪的勾当！怎生跑出娘的三只鞋来了！」妇人道：「好大胆奴才！你敢是拿谁的鞋搪塞我，倒如何说我是三只脚的蟾！这个鞋从那里出来了？」不由分说，教春梅拉倒，打了十下。打的秋菊抱股而哭，望着春梅道：「都是你开门，教人进来，收了娘的鞋，这回教娘打我！」春梅骂道：「你倒收拾娘铺盖，不见了娘的鞋。娘打了你这几下儿，还敢抱怨人！早是这只旧鞋，若是娘头上的簪环不见了，你也推赖个人儿就是了！娘惜情儿，还打的你少；若是我，外边叫个小厮，辣辣的打上他二三十板，看这奴才怎么样的！」几句骂得秋菊忍气吞声，不言语了。当下西门庆叫了经济到前厅，封尺头礼物，送提刑所贺千户，新升了淮安提刑所，掌刑正千户。本卫亲识，都与他送行，在永福寺，不必细说。西门庆差了钺安送去，厅上陪着经济吃了饭，归到金莲房中。这金莲千不合，万不合，把小铁棍儿拾鞋之事，告诉一遍。说道：「都是你这没才料的货，平白干的勾当，教贼万杀的小奴才，把我的鞋拾了，拿到外头，谁是没瞧见？被我知道，要将过来了。你不打与他两下，到明日惯了他！」西门庆就不问谁，告你说来，一冲性子，走到前边。那小猴子不知，正在石台基顽耍，被西门庆揪住顶角，拳打脚踢，杀猪也似叫起来，方纔住了手。这小猴子，倘在地下，死了半日。慌得来昭两口子走来扶救，半手苏醒，见小厮鼻口流血，抱他到房里问，慢慢问他，方知为拾鞋之事。拾了金莲一只鞋，因和陈敬济换圈儿，惹起事来。这一丈青气忿忿的，走到后边厨下，指东骂西，一顿海骂道：「贼不逢好死的淫妇！王八羔子！我的孩子和你有甚冤仇？他纔十一十二岁，晓的甚么？知道〈毛皮〉生在那块儿！平白地调唆打他恁一顿，打的鼻口都流血；假若死了他，淫妇，王人儿也不好，称不了你甚么愿！」于是厨房里骂了，到前边又骂，整骂了一二日还不定教。金莲在房中陪西门庆吃酒，还不知道。晚夕上床宿歇，西门庆见妇人脚上穿着两只纱紬子睡鞋儿，大红提根儿，因说道：「阿呀！如何穿这个鞋在脚上？怪怪的不好看。」妇人道：「我只一双红睡鞋，倒乞小奴才拾了一只，弄油了我的那，那里再讨第二双来？」西门庆道：「我的儿，你到明日做一双儿穿在脚上。你不知，我达一心只喜欢穿红鞋儿，看着心里爱。」妇人道：「怪奴才！可可儿的来，我想起一作事来，要说又忘了。」因令春梅：「你取那只鞋来，与他瞧。你认的这鞋是谁的鞋？」西门庆道：「我不知道是谁的鞋。」妇人道：「你看他还打张鸡儿哩！瞒着我黄猫黑尾，你干的好萌儿！一行死了。来旺儿媳妇子的一只臭蹄，宝上珠也一般，收藏在山子底下藏春坞雪洞儿里，拜帖匣子内，搅眼些字纸和香儿一处放着。甚么罕稀物件，也不当家化化的！怪不的那贼淫妇死了，堕阿鼻地狱！」指着秋菊骂：「奴才当我的鞋，又翻出来，教我打了几下。」吩咐春梅：「趁早与我掠出去！」春梅把鞋掠在地下，看着秋菊说道：「赏与你穿了罢！」那秋菊拾在手里，说道：「娘这个鞋，只好盛我一个脚指头儿罢了。」妇人骂道：「贼奴才！还教甚么〈毛皮〉娘哩！他是你家主子前世的娘。不然，怎的把他的鞋收藏的娇贵，到明日好传代？没廉耻的货！」秋菊拿着鞋，就往外走。被妇人又叫回来，吩咐：「取刀来，等我把淫妇剁做几戳子，掠到毛司里去。叫贼淫妇阴山背后，永世不得超生。因向西门庆道：「你看着越心疼，我越发偏剁个样儿你瞧！」西门庆笑道：「怪奴才！丢开手罢了。我那里有这个心？」妇人道：「你没这个心，你就睹了誓。淫妇死的不知往那去了，你还留他鞋做甚么？早晚有省好思想他，正经俺每和你恁一场，你也没恁个心儿，还教人和你一心一计哩！」西门庆笑道：「罢了，怪小淫妇儿！偏有这些儿的。他就在时，也没曾在你根前行差了礼法。」于是搂过粉项来就亲了个嘴，两个云雨做一处。正是：
+经济袖着鞋，径往潘金莲房来，转过影壁，只见秋菊跪在院内。便戏道：「小大姐，为甚么来投充了新军？又掇起石头来了。」金莲在楼上听见，便叫春梅问道：「是谁说他掇起石头来了？干净这奴才没顶着？」春梅道：「是姐夫来了。秋菊顶着石头哩！」妇人便叫：「陈姐夫，楼上没人，你上来不是？」这小伙儿，方扒步撩衣，上的楼来。只见妇人在楼前面开了两扇窗儿，挂着湘帘，那里临镜梳头。这陈敬济走到傍边一个小杌儿坐下，看见妇人黑油般头发，手挽着梳，还拖着地儿，红丝绳儿扎着。一窝丝攒上，戴着银丝䯼髻，还垫出一丝香云。䯼髻内安着许多玫瑰花瓣儿，露着四鬓上，打扮的就是个活观音。须臾，看着妇人梳了头，掇过妆台去，向面盆内洗了手，穿上衣裳，唤春梅：「拿茶来与姐夫吃。」那经济只是笑，不做声。妇人因问：「姐夫笑甚么？」经济道：「我笑你管情不见了些甚么儿？」妇人道：「贼短命！我不见了，关你甚事？你怎的晓得？」经济道：「你看我好心倒做了驴肝肺，你倒讪起我来。恁说我去罢！」抽身往楼下就走。被妇人一把手拉住，说道：「怪短命，会张致的！来旺儿媳妇子死了，没了想头了。却怎么还认的老娘？」因问：「你猜着我不见了甚么物件儿？」这经济向袖中取出来，提搊着鞋拽靶儿，笑道：「你看这个好的儿是谁的？」妇人道：「好短命！原来是你偷拿了我的鞋去了。教我打着丫头，遶地里寻。」经济道：「你怎的到得我手里？」妇人道：「我这屋里再有谁来？敢是你贼头鼠脑，偷了我这只鞋去了！」经济道：「你老人家不害羞！我这两日又不往你这屋里来，我怎生偷你的？」妇人道：「好贼短命！等我对你爹说，你到偷了我鞋，还说我不害羞。」经济道：「你只好拿爹来諕我罢了！」妇人道：「你好小胆子儿！明知道和旺儿媳妇子七个八个，你还调戏他，想那淫妇教你戏弄。既不是你偷了我的鞋，这鞋怎落在你手里？趁早实供出来，交还与我鞋，你还便益。自古物见主不索取，但迸半个不字，教你死无葬身之地！」经济道：「你老人家是个女番子，且是倒会的放刁！这里无人，咱每好讲。你既要鞋，拿一件物事儿，我换与你。不然，天雷也打不出去！」妇人道：「好短命！我的鞋应当还我。教换甚么事儿与你？」经济笑道：「五娘，你拿你袖的那方汗巾儿赏与儿子，儿子与了你的鞋罢。」妇人道：「我明日另寻一方好汗巾儿；这汗巾儿；是你爹成日眼里见过，不好与你的。」经济道：「我不，别的就与我一百方，也不筭；一心我只要你老人家这方汗巾儿。」妇人笑道：「好个老成久惯的短命！我也没气力和你两个缠！」于是向袖中取出一方细撮穗，白绫桃线，莺莺烧夜香汗巾儿，上面连银三字儿，都掠与他。这经济连忙接在手里，与他深的唱个喏。妇人吩咐：「你好生藏着，休教大姐看见。他不是好嘴头子！」经济道：「我知道。」一面把鞋递与他，如此这般：「是小铁棍儿昨日在花园里拾的，今早拿着问我换网巾圈儿耍子。」一节，告诉一遍。妇人听了粉面通红，银牙暗咬，说道：「你看贼小奴才油手！把我这鞋弄的恁添黑的。看我教他爹打他不打他！」经济道：「你弄杀我。打了他不打紧，敢就赖在我身上，是我说的，千万休要说罢。」妇人道：「我饶了小奴才，除非饶了蝎子！」可有他两个正说在热闹处，忽听小厮来安儿来寻：「爹在前厅，请姐夫写礼帖儿哩。」妇人连忙撺掇他出去了。下的楼来，教春梅取板子来，要打秋菊。秋菊说着不肯倘，说道：「寻将娘的鞋来，娘还要打我！」妇人把刚纔陈敬济拿的鞋递与看，骂道：「贼奴才！你把那个当我的鞋，将这个放在那里？」秋菊看见，把眼瞪了半日，不敢认。说道：「可是怪的勾当！怎生跑出娘的三只鞋来了！」妇人道：「好大胆奴才！你敢是拿谁的鞋搪塞我，倒如何说我是三只脚的蟾！这个鞋从那里出来了？」不由分说，教春梅拉倒，打了十下。打的秋菊抱股而哭，望着春梅道：「都是你开门，教人进来，收了娘的鞋，这回教娘打我！」春梅骂道：「你倒收拾娘铺盖，不见了娘的鞋。娘打了你这几下儿，还敢抱怨人！早是这只旧鞋，若是娘头上的簪环不见了，你也推赖个人儿就是了！娘惜情儿，还打的你少；若是我，外边叫个小厮，辣辣的打上他二三十板，看这奴才怎么样的！」几句骂得秋菊忍气吞声，不言语了。当下西门庆叫了经济到前厅，封尺头礼物，送提刑所贺千户，新升了淮安提刑所，掌刑正千户。本卫亲识，都与他送行，在永福寺，不必细说。西门庆差了钺安送去，厅上陪着经济吃了饭，归到金莲房中。这金莲千不合，万不合，把小铁棍儿拾鞋之事，告诉一遍。说道：「都是你这没才料的货，平白干的勾当，教贼万杀的小奴才，把我的鞋拾了，拿到外头，谁是没瞧见？被我知道，要将过来了。你不打与他两下，到明日惯了他！」西门庆就不问谁，告你说来，一冲性子，走到前边。那小猴子不知，正在石台基顽耍，被西门庆揪住顶角，拳打脚踢，杀猪也似叫起来，方纔住了手。这小猴子，倘在地下，死了半日。慌得来昭两口子走来扶救，半手苏醒，见小厮鼻口流血，抱他到房里问，慢慢问他，方知为拾鞋之事。拾了金莲一只鞋，因和陈敬济换圈儿，惹起事来。这一丈青气忿忿的，走到后边厨下，指东骂西，一顿海骂道：「贼不逢好死的淫妇！王八羔子！我的孩子和你有甚冤仇？他纔十一十二岁，晓的甚么？知道〈毛皮〉生在那块儿！平白地调唆打他恁一顿，打的鼻口都流血；假若死了他，淫妇，王人儿也不好，称不了你甚么愿！」于是厨房里骂了，到前边又骂，整骂了一二日还不定教。金莲在房中陪西门庆吃酒，还不知道。晚夕上床宿歇，西门庆见妇人脚上穿着两只纱紬子睡鞋儿，大红提根儿，因说道：「阿呀！如何穿这个鞋在脚上？怪怪的不好看。」妇人道：「我只一双红睡鞋，倒乞小奴才拾了一只，弄油了我的那，那里再讨第二双来？」西门庆道：「我的儿，你到明日做一双儿穿在脚上。你不知，我达一心只喜欢穿红鞋儿，看着心里爱。」妇人道：「怪奴才！可可儿的来，我想起一作事来，要说又忘了。」因令春梅：「你取那只鞋来，与他瞧。你认的这鞋是谁的鞋？」西门庆道：「我不知道是谁的鞋。」妇人道：「你看他还打张鸡儿哩！瞒着我黄猫黑尾，你干的好萌儿！一行死了。来旺儿媳妇子的一只臭蹄，宝上珠也一般，收藏在山子底下藏春坞雪洞儿里，拜帖匣子内，搅眼些字纸和香儿一处放着。甚么罕稀物件，也不当家化化的！怪不的那贼淫妇死了，堕阿鼻地狱！」指着秋菊骂：「奴才当我的鞋，又翻出来，教我打了几下。」吩咐春梅：「趁早与我掠出去！」春梅把鞋掠在地下，看着秋菊说道：「赏与你穿了罢！」那秋菊拾在手里，说道：「娘这个鞋，只好盛我一个脚指头儿罢了。」妇人骂道：「贼奴才！还教甚么〈毛皮〉娘哩！他是你家主子前世的娘。不然，怎的把他的鞋收藏的娇贵，到明日好传代？没廉耻的货！」秋菊拿着鞋，就往外走。被妇人又叫回来，吩咐：「取刀来，等我把淫妇剁做几戳子，掠到毛司里去。叫贼淫妇阴山背后，永世不得超生。因向西门庆道：「你看着越心疼，我越发偏剁个样儿你瞧！」西门庆笑道：「怪奴才！丢开手罢了。我那里有这个心？」妇人道：「你没这个心，你就睹了誓。淫妇死的不知往那去了，你还留他鞋做甚么？早晚有省好思想他，正经俺每和你恁一场，你也没恁个心儿，还教人和你一心一计哩！」西门庆笑道：「罢了，怪小淫妇儿！偏有这些儿的。他就在时，也没曾在你根前行差了礼法。」于是搂过粉项来就亲了个嘴，两个云雨做一处。正是：
 
 「动人春色娇还媚， 惹蝶芳心软意浓。」
 
