--- a/the-golden-lotus/032.md
+++ b/the-golden-lotus/032.md
@@ -233,7 +233,7 @@
 
 又问玳安：「真个是你爹叫我，便出去。若是应二花子，随问他怎的叫，我一世也不出去！」
 
-于是向月娘镜台前，重新妆照打扮出来。众人看见他头戴银丝｛髟狄｝髻，周围金累丝钗梳，珠翠堆
+于是向月娘镜台前，重新妆照打扮出来。众人看见他头戴银丝䯼髻，周围金累丝钗梳，珠翠堆
 
 满。上着藕丝衣裳，下着翠绫裙。尖尖趫趫一对红鸳。粉面贴着三个翠面花儿，一阵异香喷鼻，朝上
 
