--- a/the-golden-lotus/040.md
+++ b/the-golden-lotus/040.md
@@ -19,9 +19,9 @@
 
 此辈若皆成佛道， 西方依旧黑漫漫。」
 
-却说金莲晚夕走在月娘房里，陪着众人坐的。走到镜台前，把｛髟狄｝髻摘了，打了个盘头揸髻，把脸搽的雪白，抹的嘴唇儿鲜红，戴着两个金灯笼坠子，贴着三面花儿，带着紫销金箍儿，寻了一套大红织金袄儿，下着翠蓝段子裙，要装丫头，哄月娘众人耍子。叫将李瓶儿来与他瞧，把李瓶儿笑的前仰后合，说道：「姐姐，你装扮起来，活像个丫头！等我往后边去，我那屋里有红布手巾，替你盖着头。对他们只说他爹又寻了个丫头，諕他们諕，管定就信了。」春梅打着灯笼，在头里走。走到撞见陈经济，笑道：「我道是谁来？这个就是五娘干的营生。」李瓶儿叫道：「姐夫，你过来，等我和你说了着。你先进去，见他们只如此如此，这般这般。」经济道：「我有法儿哄他。」于是先走到上房里，众人都在炕上坐着吃茶。经济道：「娘，你看爹平白里叫薛嫂儿使了十六两银子，买了人家一个二十五岁会弹唱的姐儿，刚纔拏轿子送将来了。」月娘道：「真个？薛嫂怎不先来对我说？」经济道：「他怕你老人家骂他，送轿子到大门首，他就去了。丫头便教他每领进来了。」大妗子还不言语。杨姑娘道：「官中有这几房姐姐勾了，又要他来做什么？」月娘道：「好奶奶，你禁的！有钱就买一百个，有什么多？俺每多是老婆当军，在这屋里充数儿罢了！」玉箫道：「等我瞧瞧去。」只见月亮地里，原来春梅打灯笼，叫了来安儿小厮打着，和李瓶儿后边跟着，搭着盖头，穿着红衣服进来。慌的孟玉楼、李娇儿都出来看。良久，进入房里。玉箫挨在月娘边，说道：「这个是主子，还不磕头哩！」一面揭了盖头。那潘金莲插烛也似磕下头去。忍不住扑吃的笑了。玉楼道：「好丫头，不与你主子磕头，且笑！」月娘也笑了，说道：「这六姐成精死了罢！把俺每哄的信了。」玉楼道：「大娘，我不信。」杨姑娘道：「姐姐，你怎的见出来不信？」玉楼道：「俺六姐平昔磕头，也学的那等，磕了头起来，倒退两步纔拜。」杨姑娘道：「还是姐姐看的出来，要着老身，就信了。」李娇儿道：「我也就信了。刚纔不是揭盖头，他自家笑，还认不出来。」正说着，只见琴童儿抱进毡包来，说：「爹来家了。」孟玉楼道：「你且藏在明间里，等爹进来，等我哄他哄。」不一时，西门庆来到。杨姑娘、大妗子出去了。进入房内，椅子上坐下。月娘在旁不言语。玉楼道：「今日薛嫂儿轿子送人家一个二十岁丫头来，说是你教他送来，要他的。你恁许大年纪，前程也身上，还干勾当？」西门庆笑道：
+却说金莲晚夕走在月娘房里，陪着众人坐的。走到镜台前，把䯼髻摘了，打了个盘头揸髻，把脸搽的雪白，抹的嘴唇儿鲜红，戴着两个金灯笼坠子，贴着三面花儿，带着紫销金箍儿，寻了一套大红织金袄儿，下着翠蓝段子裙，要装丫头，哄月娘众人耍子。叫将李瓶儿来与他瞧，把李瓶儿笑的前仰后合，说道：「姐姐，你装扮起来，活像个丫头！等我往后边去，我那屋里有红布手巾，替你盖着头。对他们只说他爹又寻了个丫头，諕他们諕，管定就信了。」春梅打着灯笼，在头里走。走到撞见陈经济，笑道：「我道是谁来？这个就是五娘干的营生。」李瓶儿叫道：「姐夫，你过来，等我和你说了着。你先进去，见他们只如此如此，这般这般。」经济道：「我有法儿哄他。」于是先走到上房里，众人都在炕上坐着吃茶。经济道：「娘，你看爹平白里叫薛嫂儿使了十六两银子，买了人家一个二十五岁会弹唱的姐儿，刚纔拏轿子送将来了。」月娘道：「真个？薛嫂怎不先来对我说？」经济道：「他怕你老人家骂他，送轿子到大门首，他就去了。丫头便教他每领进来了。」大妗子还不言语。杨姑娘道：「官中有这几房姐姐勾了，又要他来做什么？」月娘道：「好奶奶，你禁的！有钱就买一百个，有什么多？俺每多是老婆当军，在这屋里充数儿罢了！」玉箫道：「等我瞧瞧去。」只见月亮地里，原来春梅打灯笼，叫了来安儿小厮打着，和李瓶儿后边跟着，搭着盖头，穿着红衣服进来。慌的孟玉楼、李娇儿都出来看。良久，进入房里。玉箫挨在月娘边，说道：「这个是主子，还不磕头哩！」一面揭了盖头。那潘金莲插烛也似磕下头去。忍不住扑吃的笑了。玉楼道：「好丫头，不与你主子磕头，且笑！」月娘也笑了，说道：「这六姐成精死了罢！把俺每哄的信了。」玉楼道：「大娘，我不信。」杨姑娘道：「姐姐，你怎的见出来不信？」玉楼道：「俺六姐平昔磕头，也学的那等，磕了头起来，倒退两步纔拜。」杨姑娘道：「还是姐姐看的出来，要着老身，就信了。」李娇儿道：「我也就信了。刚纔不是揭盖头，他自家笑，还认不出来。」正说着，只见琴童儿抱进毡包来，说：「爹来家了。」孟玉楼道：「你且藏在明间里，等爹进来，等我哄他哄。」不一时，西门庆来到。杨姑娘、大妗子出去了。进入房内，椅子上坐下。月娘在旁不言语。玉楼道：「今日薛嫂儿轿子送人家一个二十岁丫头来，说是你教他送来，要他的。你恁许大年纪，前程也身上，还干勾当？」西门庆笑道：
 
-「我那里教他买丫头来？信那老淫妇哄你哩。」玉楼道：「你问大姐姐不是，丫头也领在这里。我不哄你；你不信我，我叫出来你瞧。」于是叫玉箫：「你拉进那新丫头来见你爹。」那玉箫掩着嘴儿笑，又不敢去拉。前边走了走儿，又回来了，说道：「他不肯来。」玉楼道：「等我去拉。恁大胆子的奴才，头儿没动，就扭主子。也是个不听指教的。」一面走到明间内，只听说道：「怪行货子！我不好骂的。人不进去，只顾拉人，拉的手脚儿不着。」玉楼笑道：「好奴才，谁家使的你恁没规矩，不进来见你主子磕头？」一面拉进来。西门庆灯影下睁眼观看，却是潘金莲打着楂｛髟狄｝装丫头，笑的眼没缝儿。那金莲就坐在旁边椅子上。玉楼道：「好大胆丫头，新来乍到，就恁少条失教的，大刺刺对着主子坐着！道撅臭，与他这个主子儿了。」月娘笑道：「你趁着你主子来家，与他磕个头儿罢。」那金莲也不动，走到月娘里间屋里，一顿把簪子拔了，戴上｛髟狄｝髻出来。月娘道：「好淫妇，讨了谁上哩话，就戴上发髻了！」众人又笑了一回。月娘告诉西门庆说：「今日乔亲家那里，使乔通送了六个帖儿来，请俺每吃看灯酒。咱到明日，不先送些礼儿去？」教玉箫拿帖儿与西门庆瞧。见上面写着：
+「我那里教他买丫头来？信那老淫妇哄你哩。」玉楼道：「你问大姐姐不是，丫头也领在这里。我不哄你；你不信我，我叫出来你瞧。」于是叫玉箫：「你拉进那新丫头来见你爹。」那玉箫掩着嘴儿笑，又不敢去拉。前边走了走儿，又回来了，说道：「他不肯来。」玉楼道：「等我去拉。恁大胆子的奴才，头儿没动，就扭主子。也是个不听指教的。」一面走到明间内，只听说道：「怪行货子！我不好骂的。人不进去，只顾拉人，拉的手脚儿不着。」玉楼笑道：「好奴才，谁家使的你恁没规矩，不进来见你主子磕头？」一面拉进来。西门庆灯影下睁眼观看，却是潘金莲打着楂䯼装丫头，笑的眼没缝儿。那金莲就坐在旁边椅子上。玉楼道：「好大胆丫头，新来乍到，就恁少条失教的，大刺刺对着主子坐着！道撅臭，与他这个主子儿了。」月娘笑道：「你趁着你主子来家，与他磕个头儿罢。」那金莲也不动，走到月娘里间屋里，一顿把簪子拔了，戴上䯼髻出来。月娘道：「好淫妇，讨了谁上哩话，就戴上发髻了！」众人又笑了一回。月娘告诉西门庆说：「今日乔亲家那里，使乔通送了六个帖儿来，请俺每吃看灯酒。咱到明日，不先送些礼儿去？」教玉箫拿帖儿与西门庆瞧。见上面写着：
 
 「十二日寒舍薄具菲酌，奉屈鱼轩。仰冀贲临，不胜荣幸。右启大德望西门大亲家老夫人妆次，下书眷末乔门郑氏敛衽拜。」
 
