--- a/the-golden-lotus/042.md
+++ b/the-golden-lotus/042.md
@@ -15,7 +15,7 @@
 
 鳌山耸出青云上， 何处游人不看来。」
 
-伯爵因问：「明日乔家那头几位人来？」西门庆道：「有他家做皇亲家五太太，明日我又不在家。早辰从庙中上元醮，又是府里周菊轩那里请吃酒。西门庆见人丛里谢希大、祝日念，同一个戴方巾的在灯棚下看灯，指与伯爵瞧，因问：「那戴方巾这个人，你不认的他？如何跟着他一答儿里走？」伯爵道：「此人眼熟，不认的他。」西门庆便叫玳安：「你去下边悄悄请了谢爹来，休教祝麻子和那人看见。」玳安小厮是眼里说话的贼，一直走下楼来，挨到人闹里，待祝日念和那人先过去了，从傍边出来把谢希大拉了一把。慌的希大回身观着，都是他。玳安道：「爹和应二爹在这楼上，请谢爹说话。」希大道：「你去，知道了。等陪他两个到粘梅花处，就去见你爹。」玳安便一道烟去了。不想到了粘梅花处，这希大向人闹处就扠过一边，由着祝日念和那一个人只顾哩寻他。便走来楼上，见西门庆、应伯爵二个作揖。因说道：「哥来此看灯，早辰就不说，呼唤兄弟一声。」西门庆道：「我早辰对众人不好邀你每的。已托应二哥到你家请你去，请你不在家。刚纔祝麻子没看见你这里来？」因问：「那戴方巾的是谁？」希大道：「那戴方巾的是王昭宣府里王三官儿。今日和祝麻子到我家，央我同许不与先生那里借三百两银子，央我和老孙、祝麻子作保，要干前程入武学肄业。我那里管他这闲帐！刚纔陪他灯市里走了走，听见哥使盛价呼唤，我只伴他到粘梅花处，交我乘人乱，就扠开了，走来见哥。」因问伯爵：「你来多大回了？」伯爵道：「哥使我先到你家，你不在，我就来了。和哥在这里打了这回双陆。」西门庆问道：「你吃了饭不曾？叫小厮拿饭来你吃。」谢希大道：「可知道哩！早辰从哥那里出来，和他两个搭了这一日，谁吃饭来？」西门庆分付玳安：「厨下安排饭来，与你谢爹吃。」不一时搽抹卓儿干净，就是春盘子菜，两碗稀烂下饭，一碗〈火川〉肉粉汤 ，两碗白米饭。希大独自一个吃了里外干净，剩下些汁汤儿，还泡了碗吃了。玳安收下家活去。希大在傍看着两个打双陆。只见两个唱的，门首下了轿子，抬轿的各提着衣裳包儿笑进来。伯爵早已在窗里看见，说道：「两个小淫妇儿，这咱纔来。」分付玳安：「且别教他往后边去，先叫他楼上来见我。」希大道：「今日叫的是那两个？」玳安道：「是董娇儿、韩玉钏儿。」忙下楼说道：「应二爹叫你说话。」两个那里肯来，一直往后走了。见了一丈青拜了，引他入房中。看见王六儿头上戴着时样扭心｛髟狄｝髻儿，羊皮金箍儿，身上穿紫潞紬袄儿，玄色一块瓦领披袄儿，白桃线绢裙子，下边显着趫趫两只金莲，穿老鸦段子纱绿锁线的平底鞋儿，拖的水鬓长长的，紫膛色不十分搽铅粉，学个中人打扮，耳边带着了香儿；进门只望着他，拜了一拜，多在炕边头坐了。小铁棍拿茶来，王六儿陪着吃了。两个唱的，上上下下，把眼只看他身上。看一回，两个笑一回，更不知是什么人。落后玳安进来，两个唱的悄悄问他每：「房中那一位是谁？」玳安没的回答，只说是俺爹大姨人家，接来这看灯。两个听的进房中，从新说道：「俺每头里不知是大姨，没曾见的礼，休怪。」于是插烛磕了两个头。慌的王六儿连忙还下半礼。落后摆上汤饭来，陪着同吃，两个拿乐器，又唱与王六儿听。伯爵打了双陆，下楼来小净手。听见后边唱，点手儿叫过玳安，问道：「你告我说，两个唱的在后边唱与谁听？」玳安只是笑，不做声，说道：「你老人家，曹州兵备，好管事宽。唱不唱，管他怎的？」伯爵道：「好贼小油嘴！你不和我说，愁我不知道？」玳安笑道：「你老人家，知道罢了！又问怎的？」说毕，一直往后走了。伯爵上的楼来，西门庆又与谢希大打了三贴双陆。只见李铭、吴惠两个蓦地上楼来磕头。伯爵道：「好呀！你两个来的正好。在那里来？怎知道俺每在这里？」李铭跪下，掩口说道：「小的和吴惠先到宅里来，宅里说爹每在这边房子里摆酒，前来伏侍爹们。西门庆道：「也罢！你起来伺候。玳安，快往对门请你韩大叔去。」不一时，韩道国到了，作了揖坐下。一面收拾收放卓儿，厨下拿春盘案酒来，琴童便在旁边用铜布甑儿筛酒。伯爵与希大居上，西门庆主位，韩道国打横坐下，把酒来斟。一面使玳安后边请唱的去。少顷，韩玉钏儿，董娇儿两个慢条斯礼上楼来，望上不当不正磕下头去。伯爵骂道：「我道是谁来，原来是这两个小淫妇儿！头里知道我在这里，我叫着怎的不先来见我？这等大胆，到明日一家不与你个功德，你也不怕。」董娇儿笑道：「哥儿，那里隔墙掠见腔儿，可不把我諕杀！」韩玉钏道：「你知道爱奴儿掇着兽头城以里掠，好个丢丑儿的孩儿。」伯爵道：「哥，你今日忒多余了。有了李铭、吴惠在这里唱罢了，又要这两个小淫妇做什么？还不趁早打发他走。大节夜还赶几个钱儿。等住回晚，越发没人要了！」韩玉钏儿道：「哥儿，你怎的没着？大爹叫了俺每来答应，又不伏侍你。哥，你怎的闲出气？」伯爵道：「俊傻小剌骨儿，你见在这里，不伏侍我，你说伏侍谁？韩玉钏道：「唐胖子吊在醋缸里，把你撅酸了。」伯爵道：「贼小淫妇儿，是撅酸了我。等住回散了家去时，我和你答话！我左右有两个法儿，你原出得我手。」董娇儿道：「哥儿，那里两个法儿？说来我听！」伯爵道：「我头一个儿，对巡捕说了，拿你犯夜。到第二日，我拿个拜帖儿对你周爷说，拶你一顿好拶子。十分不巧，只消三分银子烧酒，把抬轿的灌醉了，随你这小淫妇去。天晚，到家没钱，不怕鸨不打，管我腿事。」韩玉钏道：「十分晚了，俺每不去，在爹这房里睡。再不，教爹这里差人送俺每。王妈妈支钱一百文，不在于你。好淡嘴女又十撇儿。」伯爵道：「我是奴才，如今年程欺保了！」拏三道三，说笑回，两个唱的在傍弹唱了春景之词。众人纔拿起汤饭来吃。只见玳安儿走来，报道：「祝爹来了。」众人多不言语。不一时，祝日念上的楼来，看见伯爵和谢希大在上面，说道：「你两个好吃，可成个人！」因说：「谢子纯，哥这里请你，也对我说一声儿。三不知就走的来，教我只顾在粘梅花处那里寻你。」希大道：「我也是误行，纔撞见哥在楼上和应二哥打双陆。走上来作揖，被哥留住了。」西门庆因令玳安儿：「拏椅儿来，和我祝兄弟在下边坐罢。」于是安放锺筯，在下席坐了。厨下拿了汤饭上来，一齐同吃。西门庆只吃了一个包儿，呷了一口汤，因见李铭在旁，都递与李铭递下去吃了。那应伯爵、谢希大、祝日念、韩道国每人青花白地吃一大深碗八宝攒汤 ，三个大包子。还零四个挑花烧卖 ，只留了一个包儿压碟儿。左右收下汤碗去，斟上酒来饮酒。希大因问祝日念道：「你陪他还到那里纔拆开了？怎知道我在这里？」祝日念于是如此这般告说：「我因寻了你一回寻不着，就同王三官到老孙会了，往许不与先生那里借三百两子去。乞孙寡嘴老油嘴，把借契写差了。」希大道：「你每休写上我，我不管。左右是你与老孙作保，讨保头钱使。」因问：「怎的写差了？」祝日念道：「我那等分付他，写了文书滑着些，立与他三限纔还他这银子。不依我，教我从新把文书又改了。」希大道：「你文书上怎么写着？念一遍我听。」祝日念道：「依着了我这等写：
+伯爵因问：「明日乔家那头几位人来？」西门庆道：「有他家做皇亲家五太太，明日我又不在家。早辰从庙中上元醮，又是府里周菊轩那里请吃酒。西门庆见人丛里谢希大、祝日念，同一个戴方巾的在灯棚下看灯，指与伯爵瞧，因问：「那戴方巾这个人，你不认的他？如何跟着他一答儿里走？」伯爵道：「此人眼熟，不认的他。」西门庆便叫玳安：「你去下边悄悄请了谢爹来，休教祝麻子和那人看见。」玳安小厮是眼里说话的贼，一直走下楼来，挨到人闹里，待祝日念和那人先过去了，从傍边出来把谢希大拉了一把。慌的希大回身观着，都是他。玳安道：「爹和应二爹在这楼上，请谢爹说话。」希大道：「你去，知道了。等陪他两个到粘梅花处，就去见你爹。」玳安便一道烟去了。不想到了粘梅花处，这希大向人闹处就扠过一边，由着祝日念和那一个人只顾哩寻他。便走来楼上，见西门庆、应伯爵二个作揖。因说道：「哥来此看灯，早辰就不说，呼唤兄弟一声。」西门庆道：「我早辰对众人不好邀你每的。已托应二哥到你家请你去，请你不在家。刚纔祝麻子没看见你这里来？」因问：「那戴方巾的是谁？」希大道：「那戴方巾的是王昭宣府里王三官儿。今日和祝麻子到我家，央我同许不与先生那里借三百两银子，央我和老孙、祝麻子作保，要干前程入武学肄业。我那里管他这闲帐！刚纔陪他灯市里走了走，听见哥使盛价呼唤，我只伴他到粘梅花处，交我乘人乱，就扠开了，走来见哥。」因问伯爵：「你来多大回了？」伯爵道：「哥使我先到你家，你不在，我就来了。和哥在这里打了这回双陆。」西门庆问道：「你吃了饭不曾？叫小厮拿饭来你吃。」谢希大道：「可知道哩！早辰从哥那里出来，和他两个搭了这一日，谁吃饭来？」西门庆分付玳安：「厨下安排饭来，与你谢爹吃。」不一时搽抹卓儿干净，就是春盘子菜，两碗稀烂下饭，一碗〈火川〉肉粉汤 ，两碗白米饭。希大独自一个吃了里外干净，剩下些汁汤儿，还泡了碗吃了。玳安收下家活去。希大在傍看着两个打双陆。只见两个唱的，门首下了轿子，抬轿的各提着衣裳包儿笑进来。伯爵早已在窗里看见，说道：「两个小淫妇儿，这咱纔来。」分付玳安：「且别教他往后边去，先叫他楼上来见我。」希大道：「今日叫的是那两个？」玳安道：「是董娇儿、韩玉钏儿。」忙下楼说道：「应二爹叫你说话。」两个那里肯来，一直往后走了。见了一丈青拜了，引他入房中。看见王六儿头上戴着时样扭心䯼髻儿，羊皮金箍儿，身上穿紫潞紬袄儿，玄色一块瓦领披袄儿，白桃线绢裙子，下边显着趫趫两只金莲，穿老鸦段子纱绿锁线的平底鞋儿，拖的水鬓长长的，紫膛色不十分搽铅粉，学个中人打扮，耳边带着了香儿；进门只望着他，拜了一拜，多在炕边头坐了。小铁棍拿茶来，王六儿陪着吃了。两个唱的，上上下下，把眼只看他身上。看一回，两个笑一回，更不知是什么人。落后玳安进来，两个唱的悄悄问他每：「房中那一位是谁？」玳安没的回答，只说是俺爹大姨人家，接来这看灯。两个听的进房中，从新说道：「俺每头里不知是大姨，没曾见的礼，休怪。」于是插烛磕了两个头。慌的王六儿连忙还下半礼。落后摆上汤饭来，陪着同吃，两个拿乐器，又唱与王六儿听。伯爵打了双陆，下楼来小净手。听见后边唱，点手儿叫过玳安，问道：「你告我说，两个唱的在后边唱与谁听？」玳安只是笑，不做声，说道：「你老人家，曹州兵备，好管事宽。唱不唱，管他怎的？」伯爵道：「好贼小油嘴！你不和我说，愁我不知道？」玳安笑道：「你老人家，知道罢了！又问怎的？」说毕，一直往后走了。伯爵上的楼来，西门庆又与谢希大打了三贴双陆。只见李铭、吴惠两个蓦地上楼来磕头。伯爵道：「好呀！你两个来的正好。在那里来？怎知道俺每在这里？」李铭跪下，掩口说道：「小的和吴惠先到宅里来，宅里说爹每在这边房子里摆酒，前来伏侍爹们。西门庆道：「也罢！你起来伺候。玳安，快往对门请你韩大叔去。」不一时，韩道国到了，作了揖坐下。一面收拾收放卓儿，厨下拿春盘案酒来，琴童便在旁边用铜布甑儿筛酒。伯爵与希大居上，西门庆主位，韩道国打横坐下，把酒来斟。一面使玳安后边请唱的去。少顷，韩玉钏儿，董娇儿两个慢条斯礼上楼来，望上不当不正磕下头去。伯爵骂道：「我道是谁来，原来是这两个小淫妇儿！头里知道我在这里，我叫着怎的不先来见我？这等大胆，到明日一家不与你个功德，你也不怕。」董娇儿笑道：「哥儿，那里隔墙掠见腔儿，可不把我諕杀！」韩玉钏道：「你知道爱奴儿掇着兽头城以里掠，好个丢丑儿的孩儿。」伯爵道：「哥，你今日忒多余了。有了李铭、吴惠在这里唱罢了，又要这两个小淫妇做什么？还不趁早打发他走。大节夜还赶几个钱儿。等住回晚，越发没人要了！」韩玉钏儿道：「哥儿，你怎的没着？大爹叫了俺每来答应，又不伏侍你。哥，你怎的闲出气？」伯爵道：「俊傻小剌骨儿，你见在这里，不伏侍我，你说伏侍谁？韩玉钏道：「唐胖子吊在醋缸里，把你撅酸了。」伯爵道：「贼小淫妇儿，是撅酸了我。等住回散了家去时，我和你答话！我左右有两个法儿，你原出得我手。」董娇儿道：「哥儿，那里两个法儿？说来我听！」伯爵道：「我头一个儿，对巡捕说了，拿你犯夜。到第二日，我拿个拜帖儿对你周爷说，拶你一顿好拶子。十分不巧，只消三分银子烧酒，把抬轿的灌醉了，随你这小淫妇去。天晚，到家没钱，不怕鸨不打，管我腿事。」韩玉钏道：「十分晚了，俺每不去，在爹这房里睡。再不，教爹这里差人送俺每。王妈妈支钱一百文，不在于你。好淡嘴女又十撇儿。」伯爵道：「我是奴才，如今年程欺保了！」拏三道三，说笑回，两个唱的在傍弹唱了春景之词。众人纔拿起汤饭来吃。只见玳安儿走来，报道：「祝爹来了。」众人多不言语。不一时，祝日念上的楼来，看见伯爵和谢希大在上面，说道：「你两个好吃，可成个人！」因说：「谢子纯，哥这里请你，也对我说一声儿。三不知就走的来，教我只顾在粘梅花处那里寻你。」希大道：「我也是误行，纔撞见哥在楼上和应二哥打双陆。走上来作揖，被哥留住了。」西门庆因令玳安儿：「拏椅儿来，和我祝兄弟在下边坐罢。」于是安放锺筯，在下席坐了。厨下拿了汤饭上来，一齐同吃。西门庆只吃了一个包儿，呷了一口汤，因见李铭在旁，都递与李铭递下去吃了。那应伯爵、谢希大、祝日念、韩道国每人青花白地吃一大深碗八宝攒汤 ，三个大包子。还零四个挑花烧卖 ，只留了一个包儿压碟儿。左右收下汤碗去，斟上酒来饮酒。希大因问祝日念道：「你陪他还到那里纔拆开了？怎知道我在这里？」祝日念于是如此这般告说：「我因寻了你一回寻不着，就同王三官到老孙会了，往许不与先生那里借三百两子去。乞孙寡嘴老油嘴，把借契写差了。」希大道：「你每休写上我，我不管。左右是你与老孙作保，讨保头钱使。」因问：「怎的写差了？」祝日念道：「我那等分付他，写了文书滑着些，立与他三限纔还他这银子。不依我，教我从新把文书又改了。」希大道：「你文书上怎么写着？念一遍我听。」祝日念道：「依着了我这等写：
 
 立借契人王寀，系招宣府舍人，休说因为要钱使用，只说要钱使用。凭中见人孙天化、祝日念作保，借到许不与先生名下，不要说白银软斯金三百两，每月休说利钱，只说出纳梅儿五百文。约至次年交还。别要题次年，只说约至三限交还。那三限？头一限，风吹辘轴打孤雁；第二限，水底鱼儿跳上岸；第三限，水里石头泡得烂；这三限交还他。平白写了垓子点头那一年纔还他。我便说，垓子点头，倘忽遇着一年他动，怎了？教我改了两句，说道：如借债人东西不在，代保人门面南北躲闪。恐后无凭，立此文契不用。到后又批了两个字：后空。」
 
