--- a/the-golden-lotus/059.md
+++ b/the-golden-lotus/059.md
@@ -15,7 +15,7 @@
 
 不独桃源能问渡， 却来月窟伴嫦娥。」
 
-都说郑爱香儿头戴着银丝｛髟狄｝髻，梅花钿儿，周围金累丝簪儿。打扮的粉面油头，花容月貌。上着藕丝裳，下着湘纹裙。见西门庆到，笑吟吟在半门里首，迎接进去。到于明间客位，道了万福。西门庆坐下，就分付小厮琴童：「把轿回了家去，晚夕骑马来接。」琴童跟轿家去不题。止留玳安和春鸿两个伺候。良久，只见鸨子出来拜见，说道：「外日姐儿在宅内多有打扰。老爹家中闷的慌，来这里自恁散心走走罢了。如何多计较？又见赐将礼来。又多谢与姐儿的衣服。」西门庆道：「我那日叫他，怎的不去？只认王皇亲家了。」鸨子道：「俺每如今还怪董娇儿和李桂儿。不知是老爹生日叫唱，他每都有了礼，只俺每姐儿没有。若早知时，已不答应王皇亲家唱，先往老爹宅里去了。老爹那里叫唱在后，咱姐儿纔待收拾起身，只见王家人来，把姐儿的衣包拏的去。落后老爹那里又差了人来，他哥子郑奉又说：『你若不去，一时老爹动意怒了。』慌的老身背着王家人，连忙撺掇姐儿打后门起身上轿去了。」西门庆道：「先日，我在他夏老爹家酒席上，已定下他了。他若那日不去，我不消说的就恼了。怎的他那日不言不语，不做喜欢，端的是怎的说？」鸨子道：「小行货子家，自从梳弄了，那里好生出去供唱去？到老爹宅内，见人多，不知諕的怎样的？他从小是恁不出语，娇养惯了。你看甚时候纔起来！老身该催促了几遍，说：『老爹今日来，你早些起来收拾了罢。』他不依，还睡到这咱晚。」不一时，丫鬟拏茶上来，郑爱香儿向前递了茶吃了。鸨子道：「请老爹到后边坐罢。」原来郑爱香儿家，门面四间，到底五层房子。转过软壁，就是竹枪篱，三间大院子，两边四间厢房。上首一明两暗，三间正房，就是郑爱月儿的房。他姐姐爱香儿的房，在后边第四层住。但见帘拢香霭，进入明间内，供养着一轴海潮观音，两旁挂四轴美人，按春、夏、秋、冬；惜花春起早，爱月夜眠迟，掬水月在手，弄花香满衣。上面挂着一联：「卷帘邀月入，谐瑟待云来。」上首列四张东坡椅，两边安二条琴光漆春凳。西门庆坐下，看见上面楷书「爱月轩」三字。坐了半日，忽听帘拢响处，郑爱月儿出来，不戴｛髟狄｝髻，头上挽着一窝丝杭州攒，梳的黑鬖鬖光油油的。乌云霞着四軉；云鬓堆纵，犹若轻烟密雾。都用飞金巧贴，带着翠梅花钿儿，周围金累丝簪儿，齐插后鬓，凤钗半卸。耳边带着紫瑛石坠子。上着白藕丝对衿仙裳，下穿紫绡翠纹裙。脚下露一双红鸳凤嘴，胸前摇琱珰宝玉玲珑。正面贴三颗翠面花儿，越显那芙蓉粉面；四周围香风缥缈，偏相衬杨柳纤腰。正是：
+都说郑爱香儿头戴着银丝䯼髻，梅花钿儿，周围金累丝簪儿。打扮的粉面油头，花容月貌。上着藕丝裳，下着湘纹裙。见西门庆到，笑吟吟在半门里首，迎接进去。到于明间客位，道了万福。西门庆坐下，就分付小厮琴童：「把轿回了家去，晚夕骑马来接。」琴童跟轿家去不题。止留玳安和春鸿两个伺候。良久，只见鸨子出来拜见，说道：「外日姐儿在宅内多有打扰。老爹家中闷的慌，来这里自恁散心走走罢了。如何多计较？又见赐将礼来。又多谢与姐儿的衣服。」西门庆道：「我那日叫他，怎的不去？只认王皇亲家了。」鸨子道：「俺每如今还怪董娇儿和李桂儿。不知是老爹生日叫唱，他每都有了礼，只俺每姐儿没有。若早知时，已不答应王皇亲家唱，先往老爹宅里去了。老爹那里叫唱在后，咱姐儿纔待收拾起身，只见王家人来，把姐儿的衣包拏的去。落后老爹那里又差了人来，他哥子郑奉又说：『你若不去，一时老爹动意怒了。』慌的老身背着王家人，连忙撺掇姐儿打后门起身上轿去了。」西门庆道：「先日，我在他夏老爹家酒席上，已定下他了。他若那日不去，我不消说的就恼了。怎的他那日不言不语，不做喜欢，端的是怎的说？」鸨子道：「小行货子家，自从梳弄了，那里好生出去供唱去？到老爹宅内，见人多，不知諕的怎样的？他从小是恁不出语，娇养惯了。你看甚时候纔起来！老身该催促了几遍，说：『老爹今日来，你早些起来收拾了罢。』他不依，还睡到这咱晚。」不一时，丫鬟拏茶上来，郑爱香儿向前递了茶吃了。鸨子道：「请老爹到后边坐罢。」原来郑爱香儿家，门面四间，到底五层房子。转过软壁，就是竹枪篱，三间大院子，两边四间厢房。上首一明两暗，三间正房，就是郑爱月儿的房。他姐姐爱香儿的房，在后边第四层住。但见帘拢香霭，进入明间内，供养着一轴海潮观音，两旁挂四轴美人，按春、夏、秋、冬；惜花春起早，爱月夜眠迟，掬水月在手，弄花香满衣。上面挂着一联：「卷帘邀月入，谐瑟待云来。」上首列四张东坡椅，两边安二条琴光漆春凳。西门庆坐下，看见上面楷书「爱月轩」三字。坐了半日，忽听帘拢响处，郑爱月儿出来，不戴䯼髻，头上挽着一窝丝杭州攒，梳的黑鬖鬖光油油的。乌云霞着四軉；云鬓堆纵，犹若轻烟密雾。都用飞金巧贴，带着翠梅花钿儿，周围金累丝簪儿，齐插后鬓，凤钗半卸。耳边带着紫瑛石坠子。上着白藕丝对衿仙裳，下穿紫绡翠纹裙。脚下露一双红鸳凤嘴，胸前摇琱珰宝玉玲珑。正面贴三颗翠面花儿，越显那芙蓉粉面；四周围香风缥缈，偏相衬杨柳纤腰。正是：
 
 「若非道子观音画， 定然延寿美人图。」
 
