--- a/the-golden-lotus/061.md
+++ b/the-golden-lotus/061.md
@@ -39,7 +39,7 @@
 
 穿青水纬罗直身，粉头皂靴。韩道国至，迎入内。见毕礼数，说道：「又多谢老爹赐将来酒！」正面
 
-独独安放一张校椅，西门庆坐下。不一时，王六儿打扮出来，头上银丝｛髟狄｝髻，翠蓝绉纱羊皮金
+独独安放一张校椅，西门庆坐下。不一时，王六儿打扮出来，头上银丝䯼髻，翠蓝绉纱羊皮金
 
 滚边的箍儿。周围插碎金草虫啄针儿，白杭娟对衿儿，玉色水纬罗比甲儿，鹅黄挑线裙子。脚上老鸦
 
