--- a/the-golden-lotus/068.md
+++ b/the-golden-lotus/068.md
@@ -19,7 +19,7 @@
 
 只见玳安来说：「后边银姨那里，使了吴会和蜡梅送茶来了。」原来吴银儿就郑家后边住，止隔一条巷。听见西门庆在这里吃酒，故使送茶。西门庆唤入里面，吴惠、蜡梅先磕了头，说：「银姐使我送茶来与爹吃。」揭开盒儿，斟茶上去，每人一盏爪仁栗丝盐笋芝麻玫瑰香茶。西门庆问：「银儿在家做甚么哩？」蜡梅道：「姐儿今日在家没出门。」西门庆吃了茶，赏了他两个三钱银子。即令玳安同吴惠：「你快请银姨去。」郑爱月儿急俐，便就教春春：「你也跟了去，好歹缠了银姨来。他若不来，你就说我到明日就不和他做伙计了。」应伯爵道：「我倒好笑，你两个原来是贩毛〈毛皮〉的伙计！」温秀才道：「南老好不近人情。自古同声相应，同气相求；本乎天者亲上，本乎地者亲下。同他做伙计一般了。」爱月儿道：「应花子，你与郑春他们多是伙计，当差供唱，都在一处。」伯爵道：「傻孩子，我是老王八，那咱和你妈相交，你还在肚子里。」说笑中间，厨下割献豕蹄一领，又是四碗下饭，羊蹄、黄芽、臊子韮、肚肺羹 、血脏之类。妓女上来唱了一套半万贼兵。西门庆叫上唱莺莺的韩家女儿，近前问：「你是韩家的？」爱香儿说：「爹，你不认的，他是韩金钏侄女儿，小名消愁儿，今年纔十三岁。」西门庆道：「这孩子到明日成个好妇人儿！举止伶俐，又唱的好。」因令他上席递酒。黄四下汤下饭，极尽殷懃。不一时，吴银儿来到。头上戴着白绉纱发髻、珠子箍儿、翠云钿儿，周围撇一溜小簪儿，耳边戴着金丁香儿。上穿白绫对衿儿妆花眉子。下着纱绿潞紬裙，羊皮金滚边。脚上墨青素段云头鞋儿。笑嘻嘻进门，向西门庆磕了头，后与温秀才等各多道了万福。伯爵道：「我倒好笑了，来到就教我惹气。俺每是后娘养的，只认的你爹，与他磕头，望着俺每擩一拜。原来你这丽春院小娘儿，这等欺客。我若有五棍儿衙门，定不饶你！」
 
-爱月儿叫：「应花子，好没羞的孩儿！那里哥儿，你行头不仔么，光一味好撇。」一面安座儿让银姐坐。就在西门庆卓边坐下，连忙放锺筯。西门庆见了戴着白｛髟狄｝髻，问：「你戴的谁人孝？」吴银儿道：「爹故意又问个儿，与娘戴孝一向了。」西门庆一闻与李瓶儿戴孝，不觉满心欢喜，与他侧席而坐，两个说话。须臾，汤饭上来，爱月儿下来与他递酒。吴银儿下席，说：「我还没见郑妈哩。」一面走到鸨子房内见了礼出来。鸨子叫：「月儿让银姐坐，只怕冷，教丫头烧个火笼儿与银姐烤手儿。」随即添换热菜，打发上来。吴银儿在傍，只吃了半个点心，呵了两口汤，放下筯儿，和西门庆攀话。因拿起锺儿来说：「爹，这酒寒些，从新折了，另换上暖酒。」郑春上来把伯爵众人等酒都斟上，行过一巡。吴银儿便问：「娘前日断七念经来？」西门庆道：「五七多谢你每茶。」吴银姐道：「好说，俺每送了些粗茶，倒教爹又把人情回了，又多谢重礼，教妈惶恐要不的。昨日娘断七，我会下月姐和桂姐，也要送茶来，又不知宅内念经不念？」西门庆道：「断七那日，胡乱请了几众女僧，在家拜了拜忏，亲眷一个都没请，恐怕费烦。」
+爱月儿叫：「应花子，好没羞的孩儿！那里哥儿，你行头不仔么，光一味好撇。」一面安座儿让银姐坐。就在西门庆卓边坐下，连忙放锺筯。西门庆见了戴着白䯼髻，问：「你戴的谁人孝？」吴银儿道：「爹故意又问个儿，与娘戴孝一向了。」西门庆一闻与李瓶儿戴孝，不觉满心欢喜，与他侧席而坐，两个说话。须臾，汤饭上来，爱月儿下来与他递酒。吴银儿下席，说：「我还没见郑妈哩。」一面走到鸨子房内见了礼出来。鸨子叫：「月儿让银姐坐，只怕冷，教丫头烧个火笼儿与银姐烤手儿。」随即添换热菜，打发上来。吴银儿在傍，只吃了半个点心，呵了两口汤，放下筯儿，和西门庆攀话。因拿起锺儿来说：「爹，这酒寒些，从新折了，另换上暖酒。」郑春上来把伯爵众人等酒都斟上，行过一巡。吴银儿便问：「娘前日断七念经来？」西门庆道：「五七多谢你每茶。」吴银姐道：「好说，俺每送了些粗茶，倒教爹又把人情回了，又多谢重礼，教妈惶恐要不的。昨日娘断七，我会下月姐和桂姐，也要送茶来，又不知宅内念经不念？」西门庆道：「断七那日，胡乱请了几众女僧，在家拜了拜忏，亲眷一个都没请，恐怕费烦。」
 
 饮酒说话之间，吴银儿又问：「家中大娘、众娘每多好？」西门庆道：「都好。」吴银儿道：「爹乍没了娘，到房里孤孤儿的，心中也想？」西门庆道：「想是不消说。前日在书房中，白日梦见他，哭的我要不的。」吴银儿道：「热突突没了，可知想哩。」伯爵道：「你每说的只情说，把俺每这里只顾旱着。不说来递锺酒，也唱个儿与俺听。俺每起身去罢。」慌的李三、黄四连忙撺掇他姐儿两个上来递酒，安下乐器，吴银儿也上来。三个粉头一般儿坐在席傍，躧着火盆，合着声音，启朱唇，露皓齿，词出佳人口，唱了套中吕粉蝶儿三弄梅花，端的有裂石流云之响。唱毕，西门庆向伯爵说：「你落索他姐儿三个唱，你也下来酬他一杯儿。」伯爵道：「不打紧，死不了人。等我打发他仰靠着，直舒着，侧卧着，金鸡独立，随我受用。又一件，野马踩场，野狐抽丝，猿猴献菓，黄狗溺尿，仙人指路，靠背将军，柱夜对木，伴哥随他拣着要。」爱香道：「我不好骂出来的，汗邪了你这贼花子，胡说乱道的！」这应伯爵用酒碟安三个锺儿，说：「我儿，你们在我手里吃两锺；不吃，望身上只一泼。」爱香道：「我今日忌酒。」爱月儿道：「你跪着月姨儿，教我打个嘴巴儿，我纔吃。」伯爵道：「银姐，你怎的说？」吴银儿道：「二爹，我今日心内不自在，吃半盏儿罢。」那爱月儿道：「花子，你不跪，我一百年也不吃。」黄四道：「二爷，你不跪，显的不是趣人；也罢，跪着不打罢。」爱月儿道：「不，他只教我打两个嘴巴儿，我方吃这锺酒儿。」伯爵道：「温老先儿这里看着，怪小淫妇儿，只顾赶尽杀绝！」于是奈何不过，真个直撅儿跪在地下。那爱月儿轻揎彩袖，款露春纤，骂道：「贼花子，再敢无礼伤犯月姨？再不敢；高声儿答应，你不答应，我也不吃。」那伯爵无法可处，只得应声道：「再不敢伤犯月姨了。」这爱月儿一连打了两个嘴巴，方纔吃那杯酒。伯爵起来道：「好个没仁义的小淫妇儿，你也剩一口儿我吃。把一锺酒都吃的净净儿的！」爱月儿道：「你跪下，等我赏你一锺酒。」于是满满斟上一杯，笑望伯爵口里只一灌，伯爵道：「怪小淫妇儿，使促挟灌撒了我一身酒。我老道只这件衣服，新穿了纔头一日儿，就污浊了我的。我问你家汉子要！」乱了一回，各归席上坐定。看看天色，掌烛上来。下饭添换，都已上完。下边玳安、琴童、画童、应宝都在鸨子房里放卓儿，有汤饭点心酒肴管待。须臾，拿上各样菓碟儿来，那伯爵推让温秀才，只顾不住手拈放在口里，一壁又往袖中褪。西门庆分付拿个骰盆儿来，先让温秀才。秀才道：「岂有此理？还从老先儿那边来。」于是西门庆与吴银儿，用十二个骰儿抢红。下边四个妓女，拿乐器弹唱叫呀，酒饮过一巡。吴银儿却转过来与温秀才、伯爵抢红。爱香儿却来西门庆席上递酒猜枚，须臾过去。爱月儿近前与西门庆抢红。吴银儿都往下席递李三、黄四。原来爱月儿旋往房中新妆打扮出来，上着烟里火〈廴回〉纹锦对衿袄儿，鹅黄杭绢点翠缕金裙，妆花膝裤，大红凤嘴鞋儿。灯下海獭卧兔儿，越显的粉浓浓雪白的脸儿，犹赛美人儿一般。但见：
 
