--- a/the-golden-lotus/077.md
+++ b/the-golden-lotus/077.md
@@ -71,7 +71,7 @@
 
 钟情自古多神念， 谁道阳台路不通。」
 
-两个云雨欢娱，到一更时分起来，丫鬟掌灯进房，整衣理鬓，后酾美酒，重整佳肴，又饮勾几杯。问玳安：「有灯笼伞没有？」玳安道：「琴童家去取灯笼伞来了。」这西门庆方纔作别了。鸨子、粉头，相送出门，看着上马。郑月儿扬声叫道：「爹若叫我，早些来说。」西门庆道：「我知道。」一面上马，打着伞出院门。一路踏雪到家中，对着吴月娘只说在狮子街和吴二舅饮酒，不在话下。一宿晚景题过，到次日却是初八日，打听何千户行李都搬过夏家房子内去了。西门庆这边送了四盒细茶食，五钱折帕庆房贺仪过去。只见应伯爵蓦地走来，西门庆见雪晴，天有风色甚冷，留他前边书房中向火，叫小厮放卓儿，拿菜留他吃粥。因说起：「昨日乔亲家、云二哥礼并折帕都送过去了。你的人情，我这边已是替你每家封了二钱出上了，你那里不消与他罢。只等发柬请吃酒。」那应伯爵举手谢了。西门庆道：「何大人已搬过去了。今日我送茶并庆房人情，你不送些茶儿与他？」伯爵道：「他请人？」又问：「昨日安大人三位来做甚么？那两位是何人？」西门庆道：「那两位一个雷兵备，一个汪参议，都是浙江人。因在我这里摆酒，明日要请杭州赵霆知府，新升京堂大理寺丞，是他每本府父母官，如何不敬代一张卓面，余者散席。戏子他那里叫来，俺这里少不的叫两个小优儿答应便了。通身只三两分资。」伯爵道：「大凡文职好细，三两银子勾做甚么？哥少不得赔些儿。」西门庆道：「这雷兵备就是问黄四小舅子孙文相的。昨日没曾对我题起，开除他罪名来了。」伯爵道：「你说他不仔细？如今还记着，折准摆这席酒纔罢了。」说话之间，伯爵叫应宝：「你叫那个人来见你大爹。」西门庆便问：「是何人？」伯爵道：「我那边左近住一个小后生，倒也是旧人家出身，父母都没了，自幼在王皇亲家宅内答应好几年了，也有了媳妇儿了。因在庄子上和一般家人不和，出来了。如今闲着，做不的甚么买卖儿。他与应宝是朋友，央及应宝，要投寻个人家做房家人。今早应宝对我说：『爹倒好举荐与大爹宅内答应，又伯大爹少人使。』我便说：『不知你爹用不用。』」因问应宝：「叫他甚么名字？你叫他进来。」应宝道：「他姓来，叫来友儿。」只见那来友儿穿着青布四块瓦布袜，靸鞋，扒在地上磕了个头，起来帘外站立。伯爵道：「若论这狗拘的。膂力尽有，掇轻服重，都去的。」因问：「你多少年纪了？」那人道：「小的二十岁了。」又问：「你媳妇没子女？」那人道：「只光两口儿。」应宝道：「不瞒爹说，他媳妇纔十九岁儿。厨灶针线，大小衣裳，都会做。」西门庆见那人低头并足，为人朴实，便道：「既是你应二爹来说，用心在我这里答应。」分付：「拣个好日期，写纸文书，两口儿搬进来罢。」那个磕了个头，西门庆教琴童儿领着后边见月娘众人，磕头去了。对月娘说：「就把来旺儿原住的那一间房，与他居住。」伯爵坐了回，家去了。应宝同他写了一纸投身文书，交与西门庆收了，改名来爵，不在话下。却说贲四娘子，自从他家长儿与了夏家，每日买东买西，只央及平安儿和来安、画童儿，或是隔壁韩嫂儿的儿子小雨儿。西门庆家中这些大官儿，常在他屋里坐的，打平和儿吃酒。贲四娘子儿和气，就定出菜儿来。或要茶水，应手而至。就是贲四一时铺中归来撞见 亦不见怪。以此今日他不在家，使着，那个不替他动？且玳安儿与平安儿，常带他屋里坐的多。初九日，西门庆与安郎中、汪参议、雷兵备摆酒，请赵知府。那日早辰，来爵儿两口儿就搬进来。他媳妇儿后边见月娘众人磕头。月娘见他穿着紫紬袄，青布披袄，绿布裙子。生的五短身材，瓜子面皮儿，搽胭抹粉，施朱唇，缠的两只脚趫趫的。问起来，诸般计指都会做。起了他个名字，叫做惠元，与惠秀、惠祥，一递三日上灶不题。玳安与平安常在他屋里坐的多。一日，门外杨姑娘没了，安童儿来报丧。西门庆这边整治了一张插卓，三牲汤饭，又封了五两香仪。吴月娘、李娇儿、孟玉楼、潘金莲四顶轿子起身，都往北边与他烧纸吊孝。琴童儿、棋童儿、来爵儿、来安儿四个，都跟轿子，不在家。西门庆在对过段铺子书房内，看着毛袄匠与月娘做貂鼠围脖，先攒出一个围脖儿，使玳安送与院中郑月儿去。封了十两银子与他过节。郑家管待玳安酒馔，与了他三钱银子买瓜子儿磕，走来回西门庆话，说：「月姨多上覆，多谢了。前日空过了爹来。与了小的三钱银子。」西门庆道：「你收了罢。」因问他：「贲四不在家，你头里从他屋里出莱，做甚么来？」玳安道：「贲四娘子，从他女孩儿嫁了，没人使。常央及小的每替他买买甚么儿。」西门庆道：「他既没人使，你每替他勤勤儿也罢。」又悄悄向玳安道：「你慢慢和他说，如此这般：『爹要来你这屋里来看你看儿，你心如何？』看他怎么的说。他若肯了，你问他讨个汗巾儿来与我。」玳安道：「小的知道了。」领了西门庆言语，应诺下去。西门庆使陈经济看着裁貂鼠，就走到家中来。只见王经向顾银铺内，取了金赤虎，又是四对金头银簪儿，交与西门庆。门庆留下两对在书房内，余者袖进李瓶儿房内。坐下，与了如意儿那赤虎，又与他一对簪儿。把那一对簪儿，就与了迎春。二人接了，连忙插烛也似磕了头。西门庆令迎春取饭去。须臾，拿了饭来。吃了饭，出来，在书房内坐下。只见玳安慢走到眼前，见王经在傍，不言语。西门庆使王经后边取茶去。那玳安方说：「小的将爹言语对他说了，他笑了。约会晚上些，伺候等爹过去坐坐。叫小的拿了这汗巾儿来。」西门庆见红绵纸儿包着一方红绫织锦迥纹汗巾儿，闻了闻，喷鼻香，满心欢喜，连忙袖了。只见王经拿茶来，吃了，又走过对门，看着匠人做生活去。忽报花大舅来了。西门庆道：「请过来这边坐。」花子油走到书房暖阁儿里，作揖坐下，致谢外日多有相扰。叙话间，画童儿对门拿过茶来吃了。花子油悉把：「门外客人有五百包无锡米 ，冻了河，紧等要买卖了回家去。我想着姐夫倒好买下等价钱。」西门庆道：「我平白要他做甚么？冻河还没人要，到开河般来了，越发价钱跌了。如今家中也没银子。」即分付玳安：「收拾放卓儿，家中说看菜儿来。」一面使画童儿：「请你应二爹来陪你花爹。」坐了一时，伯爵来到。三人共坐在一处，围炉饮酒，卓上摆设四盘四碟，都是煎炒鸡鱼，烧烂下饭。又叫孙雪娥烙了两炷饼，又是四碗肚肺乳线汤。良久，只见吴道官徒弟应春，送节礼疏诰来。西门庆请来同坐吃酒，揽李瓶儿百日经，与他银子去。吃到日落时分，二人先起身去了。次后甘伙计收了铺子，又请来坐，与伯爵掷骰猜枚谈话。不觉到掌灯已后，吴月娘众人轿子到了，来安走来回话。伯爵道：「嫂子们今日都往那里去了？」西门庆道：「北边他杨姑娘没了。今日三日念经，我这里备了张插卓祭祀，又封了香仪儿，都去吊问吊儿。」伯爵道：「他老人家也高寿了。」西门庆道：「敢也有七十五六儿，男花女花都没有，只靠他门外侄儿那里养活。材儿也是我这里替他备下的，这几年了。」伯爵道：「好好儿，老人家有了黄金入柜，就是一场事了，哥的大阴骘。」说毕，酒过数巡，伯爵与甘伙作辞去了。西门庆道：「十一日该姐夫这里上宿。」玳安道：「那边铺子里，傅二叔也家去了，只小的一个在铺子里睡。」西门庆就起身走过来，分付后生王显：「仔细火烛。」王显道：「小的知道。」看着把门关上了。这西门庆见没人，两三步就走入贲四家来。只见贲四娘子儿，在门首独自站立已久。见对门关的门响，西门庆从黑影中走至跟前。这妇人连忙把封门一开，西门庆钻入里面。妇人还扯上封门，说道：「爹请里边纸门内坐罢。」原来里间槅扇厢着后半间，纸门内又有个小炕儿，笼着旺旺的火，卓上点着灯，两边护炕，从新糊的雪白，挂着四扇吊屏儿。那妇人头上勒着翠蓝销金箍儿｛髟狄｝髻，插着四根金簪儿，耳朵上两个丁香儿。上穿紫紬袄，青绡丝披袄，玉色绡裙子。向前与西门庆道了万福，连忙递了一盏茶儿与西门庆吃。因悄悄说：「只怕隔壁韩嫂儿知道。」西门庆道：「不访事，黑影子，他那里晓的。」于是不由分说，把妇人搂到怀中，就亲嘴。拉近枕头来，解衣按在炕沿子上，扛起腿来，就耸那话，上已束着托子。刚插入牝中，就拽了几拽。妇人下边淫水直流，把一条蓝布裤子都湿了。西门庆拽出那话来，向顺袋内取出包儿颤声娇来，蘸了些在龟头上，攮进去，方纔涩住淫津，肆行抽拽。妇人双手板着西门庆肩膊，两相迎凑，在下扬声颤语，呻吟不绝。这西门庆乘着酒兴，架其两腿在胳膊上，只顾没棱露脑，锐进长驱，肆行搧磞，何止二三百度？须儿弄的妇人云髻鬅松，舌尖冰冷，口不能言。西门庆则气喘吁吁，灵龟畅美，一泄如注。良久拽出那话来，淫水随出，用帕搽之。两个整衣系带，复理残妆。西门庆向袖中掏出五六两一包碎银子，又是两对金头簪儿，递与妇人，节间买花翠带。妇人拜谢了，悄悄打发出来。那边玳安在铺子里，惠心只听这边门环儿响，便开大门，放西门庆进来，自知更无一人晓的。后次朝来暮往，也入港一、二次。正是：
+两个云雨欢娱，到一更时分起来，丫鬟掌灯进房，整衣理鬓，后酾美酒，重整佳肴，又饮勾几杯。问玳安：「有灯笼伞没有？」玳安道：「琴童家去取灯笼伞来了。」这西门庆方纔作别了。鸨子、粉头，相送出门，看着上马。郑月儿扬声叫道：「爹若叫我，早些来说。」西门庆道：「我知道。」一面上马，打着伞出院门。一路踏雪到家中，对着吴月娘只说在狮子街和吴二舅饮酒，不在话下。一宿晚景题过，到次日却是初八日，打听何千户行李都搬过夏家房子内去了。西门庆这边送了四盒细茶食，五钱折帕庆房贺仪过去。只见应伯爵蓦地走来，西门庆见雪晴，天有风色甚冷，留他前边书房中向火，叫小厮放卓儿，拿菜留他吃粥。因说起：「昨日乔亲家、云二哥礼并折帕都送过去了。你的人情，我这边已是替你每家封了二钱出上了，你那里不消与他罢。只等发柬请吃酒。」那应伯爵举手谢了。西门庆道：「何大人已搬过去了。今日我送茶并庆房人情，你不送些茶儿与他？」伯爵道：「他请人？」又问：「昨日安大人三位来做甚么？那两位是何人？」西门庆道：「那两位一个雷兵备，一个汪参议，都是浙江人。因在我这里摆酒，明日要请杭州赵霆知府，新升京堂大理寺丞，是他每本府父母官，如何不敬代一张卓面，余者散席。戏子他那里叫来，俺这里少不的叫两个小优儿答应便了。通身只三两分资。」伯爵道：「大凡文职好细，三两银子勾做甚么？哥少不得赔些儿。」西门庆道：「这雷兵备就是问黄四小舅子孙文相的。昨日没曾对我题起，开除他罪名来了。」伯爵道：「你说他不仔细？如今还记着，折准摆这席酒纔罢了。」说话之间，伯爵叫应宝：「你叫那个人来见你大爹。」西门庆便问：「是何人？」伯爵道：「我那边左近住一个小后生，倒也是旧人家出身，父母都没了，自幼在王皇亲家宅内答应好几年了，也有了媳妇儿了。因在庄子上和一般家人不和，出来了。如今闲着，做不的甚么买卖儿。他与应宝是朋友，央及应宝，要投寻个人家做房家人。今早应宝对我说：『爹倒好举荐与大爹宅内答应，又伯大爹少人使。』我便说：『不知你爹用不用。』」因问应宝：「叫他甚么名字？你叫他进来。」应宝道：「他姓来，叫来友儿。」只见那来友儿穿着青布四块瓦布袜，靸鞋，扒在地上磕了个头，起来帘外站立。伯爵道：「若论这狗拘的。膂力尽有，掇轻服重，都去的。」因问：「你多少年纪了？」那人道：「小的二十岁了。」又问：「你媳妇没子女？」那人道：「只光两口儿。」应宝道：「不瞒爹说，他媳妇纔十九岁儿。厨灶针线，大小衣裳，都会做。」西门庆见那人低头并足，为人朴实，便道：「既是你应二爹来说，用心在我这里答应。」分付：「拣个好日期，写纸文书，两口儿搬进来罢。」那个磕了个头，西门庆教琴童儿领着后边见月娘众人，磕头去了。对月娘说：「就把来旺儿原住的那一间房，与他居住。」伯爵坐了回，家去了。应宝同他写了一纸投身文书，交与西门庆收了，改名来爵，不在话下。却说贲四娘子，自从他家长儿与了夏家，每日买东买西，只央及平安儿和来安、画童儿，或是隔壁韩嫂儿的儿子小雨儿。西门庆家中这些大官儿，常在他屋里坐的，打平和儿吃酒。贲四娘子儿和气，就定出菜儿来。或要茶水，应手而至。就是贲四一时铺中归来撞见 亦不见怪。以此今日他不在家，使着，那个不替他动？且玳安儿与平安儿，常带他屋里坐的多。初九日，西门庆与安郎中、汪参议、雷兵备摆酒，请赵知府。那日早辰，来爵儿两口儿就搬进来。他媳妇儿后边见月娘众人磕头。月娘见他穿着紫紬袄，青布披袄，绿布裙子。生的五短身材，瓜子面皮儿，搽胭抹粉，施朱唇，缠的两只脚趫趫的。问起来，诸般计指都会做。起了他个名字，叫做惠元，与惠秀、惠祥，一递三日上灶不题。玳安与平安常在他屋里坐的多。一日，门外杨姑娘没了，安童儿来报丧。西门庆这边整治了一张插卓，三牲汤饭，又封了五两香仪。吴月娘、李娇儿、孟玉楼、潘金莲四顶轿子起身，都往北边与他烧纸吊孝。琴童儿、棋童儿、来爵儿、来安儿四个，都跟轿子，不在家。西门庆在对过段铺子书房内，看着毛袄匠与月娘做貂鼠围脖，先攒出一个围脖儿，使玳安送与院中郑月儿去。封了十两银子与他过节。郑家管待玳安酒馔，与了他三钱银子买瓜子儿磕，走来回西门庆话，说：「月姨多上覆，多谢了。前日空过了爹来。与了小的三钱银子。」西门庆道：「你收了罢。」因问他：「贲四不在家，你头里从他屋里出莱，做甚么来？」玳安道：「贲四娘子，从他女孩儿嫁了，没人使。常央及小的每替他买买甚么儿。」西门庆道：「他既没人使，你每替他勤勤儿也罢。」又悄悄向玳安道：「你慢慢和他说，如此这般：『爹要来你这屋里来看你看儿，你心如何？』看他怎么的说。他若肯了，你问他讨个汗巾儿来与我。」玳安道：「小的知道了。」领了西门庆言语，应诺下去。西门庆使陈经济看着裁貂鼠，就走到家中来。只见王经向顾银铺内，取了金赤虎，又是四对金头银簪儿，交与西门庆。门庆留下两对在书房内，余者袖进李瓶儿房内。坐下，与了如意儿那赤虎，又与他一对簪儿。把那一对簪儿，就与了迎春。二人接了，连忙插烛也似磕了头。西门庆令迎春取饭去。须臾，拿了饭来。吃了饭，出来，在书房内坐下。只见玳安慢走到眼前，见王经在傍，不言语。西门庆使王经后边取茶去。那玳安方说：「小的将爹言语对他说了，他笑了。约会晚上些，伺候等爹过去坐坐。叫小的拿了这汗巾儿来。」西门庆见红绵纸儿包着一方红绫织锦迥纹汗巾儿，闻了闻，喷鼻香，满心欢喜，连忙袖了。只见王经拿茶来，吃了，又走过对门，看着匠人做生活去。忽报花大舅来了。西门庆道：「请过来这边坐。」花子油走到书房暖阁儿里，作揖坐下，致谢外日多有相扰。叙话间，画童儿对门拿过茶来吃了。花子油悉把：「门外客人有五百包无锡米 ，冻了河，紧等要买卖了回家去。我想着姐夫倒好买下等价钱。」西门庆道：「我平白要他做甚么？冻河还没人要，到开河般来了，越发价钱跌了。如今家中也没银子。」即分付玳安：「收拾放卓儿，家中说看菜儿来。」一面使画童儿：「请你应二爹来陪你花爹。」坐了一时，伯爵来到。三人共坐在一处，围炉饮酒，卓上摆设四盘四碟，都是煎炒鸡鱼，烧烂下饭。又叫孙雪娥烙了两炷饼，又是四碗肚肺乳线汤。良久，只见吴道官徒弟应春，送节礼疏诰来。西门庆请来同坐吃酒，揽李瓶儿百日经，与他银子去。吃到日落时分，二人先起身去了。次后甘伙计收了铺子，又请来坐，与伯爵掷骰猜枚谈话。不觉到掌灯已后，吴月娘众人轿子到了，来安走来回话。伯爵道：「嫂子们今日都往那里去了？」西门庆道：「北边他杨姑娘没了。今日三日念经，我这里备了张插卓祭祀，又封了香仪儿，都去吊问吊儿。」伯爵道：「他老人家也高寿了。」西门庆道：「敢也有七十五六儿，男花女花都没有，只靠他门外侄儿那里养活。材儿也是我这里替他备下的，这几年了。」伯爵道：「好好儿，老人家有了黄金入柜，就是一场事了，哥的大阴骘。」说毕，酒过数巡，伯爵与甘伙作辞去了。西门庆道：「十一日该姐夫这里上宿。」玳安道：「那边铺子里，傅二叔也家去了，只小的一个在铺子里睡。」西门庆就起身走过来，分付后生王显：「仔细火烛。」王显道：「小的知道。」看着把门关上了。这西门庆见没人，两三步就走入贲四家来。只见贲四娘子儿，在门首独自站立已久。见对门关的门响，西门庆从黑影中走至跟前。这妇人连忙把封门一开，西门庆钻入里面。妇人还扯上封门，说道：「爹请里边纸门内坐罢。」原来里间槅扇厢着后半间，纸门内又有个小炕儿，笼着旺旺的火，卓上点着灯，两边护炕，从新糊的雪白，挂着四扇吊屏儿。那妇人头上勒着翠蓝销金箍儿䯼髻，插着四根金簪儿，耳朵上两个丁香儿。上穿紫紬袄，青绡丝披袄，玉色绡裙子。向前与西门庆道了万福，连忙递了一盏茶儿与西门庆吃。因悄悄说：「只怕隔壁韩嫂儿知道。」西门庆道：「不访事，黑影子，他那里晓的。」于是不由分说，把妇人搂到怀中，就亲嘴。拉近枕头来，解衣按在炕沿子上，扛起腿来，就耸那话，上已束着托子。刚插入牝中，就拽了几拽。妇人下边淫水直流，把一条蓝布裤子都湿了。西门庆拽出那话来，向顺袋内取出包儿颤声娇来，蘸了些在龟头上，攮进去，方纔涩住淫津，肆行抽拽。妇人双手板着西门庆肩膊，两相迎凑，在下扬声颤语，呻吟不绝。这西门庆乘着酒兴，架其两腿在胳膊上，只顾没棱露脑，锐进长驱，肆行搧磞，何止二三百度？须儿弄的妇人云髻鬅松，舌尖冰冷，口不能言。西门庆则气喘吁吁，灵龟畅美，一泄如注。良久拽出那话来，淫水随出，用帕搽之。两个整衣系带，复理残妆。西门庆向袖中掏出五六两一包碎银子，又是两对金头簪儿，递与妇人，节间买花翠带。妇人拜谢了，悄悄打发出来。那边玳安在铺子里，惠心只听这边门环儿响，便开大门，放西门庆进来，自知更无一人晓的。后次朝来暮往，也入港一、二次。正是：
 
 「若要人不知， 除非己莫为。」
 
