--- a/the-golden-lotus/078.md
+++ b/the-golden-lotus/078.md
@@ -31,7 +31,7 @@
 
 都说贲四老婆晚夕对玳安说：「只怕隔壁韩嫂儿传嚷得后边知道，也似韩伙计娘子，一时被你娘们说上几句，羞人答答的，怎好相见？」玳安道：「如今家中除了俺大娘和五娘不言语，别的不打紧。俺大娘倒也罢了，只是五娘快出尖儿。你依我，节间买些甚么儿进去孝顺俺大娘；别的不稀罕，他平昔好吃蒸酥。你买一钱银子菓馅蒸酥，一盒好大壮瓜子送进去。这初九日是俺五娘生日，你再送些礼去，梯已再送一盒瓜子与俺五娘。你到明日进来磕头，管情就俺住许多口嘴。」贲四老婆真个依着玳安之言，第二日赶西门庆不在家，玳安就替他买了盒子掇进后边月娘房中。月娘便道：「是那里的？」玳安道：「是贲四嫂送这盒点心瓜子与娘吃。」月娘道：「男子汉又不在家，那讨个钱来，又交他费心！」连忙收了，又回出一盒馒头，一盒菓子与他，说：「多上覆，多谢了。」那日西门庆拜人回家早，有玉皇庙吴道官来拜，在厅上留坐吃酒。刚打发吴道官去了，西门庆脱了衣服，使玳安：「你骑了马，问声文嫂儿去。俺爷今日要来拜拜太太，看他怎的说？」玳安道：「爷且不消去。头里小的撞见文嫂儿骑着驴子，打门首过去了。他明日初四，王三官儿起身往东京与六黄公公磕头去了。太太说，交爷初六日过去见节，他那里伺候着哩。」西门庆便道：「他真个这等说来？」玳安道：「莫不小的敢说谎？」这西门庆就入后边去了。
 
-刚到上房坐下，忽有来安儿来报：「大舅来了。」只见吴大舅冠冕着，束着金带，进入后堂，先拜西门庆，说道：「一言难尽！我吴铠多蒙姐夫抬举看顾，又破费姐夫了。多谢厚礼！日昨姐夫下降，我又不在家，失迎！空慢姐夫来了。今日敬来与姐夫磕个头儿，恕我迟慢之罪！」说着，磕下头去。西门庆慌忙半头相还下来，说道：「大舅恭喜，自然之道理，至亲何必计较！」吴大舅于是拜毕西门庆，月娘出来与他哥磕头。头戴翡白绉纱金梁冠儿，海獭卧兔，白绫对衿袄儿，沉香色遍地金比甲，玉色绫宽襕裙。耳边二珠环儿，金凤钗梳，胸前带着金三事〈扌寨〉领儿，裙边紫遍地金八条穗子的荷包，五色钥匙线带儿，紫遍地金扣花白绫高底鞋儿，打扮的鲜鲜儿的，向前花枝招飐，绣带飘飘，插烛也似磕了四个头。慌的大舅忙还半礼，说道：「姐姐两礼儿罢！」说道：「哥哥、嫂嫂不识好歹，常来扰害你两口儿。你哥老了，看顾看顾罢。」月娘道：「一时不到，望哥耽待些便了。」吴大舅道：「姐姐没的说，累你两口儿还少哩！」拜毕，西门庆留吴大舅坐，说道：「这咱晚了，料大舅也不拜人了。宽了衣裳，咱房里坐罢。」不想孟玉楼与潘金莲两个都在屋里，听见嚷吴大舅进来，连忙走出来与大舅磕头，都是海獭卧兔儿，白绫袄儿，玉色挑线裙子；一个是绿遍地金比甲儿；一个是紫遍地金比甲儿。头上戴的都是｛髟狄｝髻，玉楼带的是环子，金莲是青宝石坠子，下边尖尖趫趫显露金莲。与吴大舅磕了头，径往各人房里去了。西门庆让大舅房内坐的，骑火盆安放卓儿，摆上春盛菓盒，各样热碗夏饭，大馒头、点心、八宝攒汤 ，一齐拿上来。小玉、玉筲都来与大舅磕头。须臾，吃了汤饭，月娘用小金厢玳瑁锺儿斟酒，递与大舅。西门庆主位相陪。吴大舅让道：「姐姐，你也来坐的。」月娘：「我就来。」又往里间房内，拿出数样配酒的菓菜来，都是冬笋、银鱼、黄鼠、〈鱼秦〉鲊、海蜇、天花菜 、苹婆 、螳螂、鲜柑、石榴、风菱、雪梨 之类。饮酒之间，西门庆便问：「大舅的公事都了毕停当了？」吴大舅道：「蒙姐夫抬举，年即任便到了，上下人事，倒也都周给的七八，还有屯所里未曾去到到任。明日是个好日期，卫中开了印来家，整理了些盒子，须得抬到屯所里到任，行牌拘将那屯头来参见，分付分付。前官丁大人坏了事情，已是被巡抚侯爷参劾去了任。如今我接管承行，须得也要振刷在册花户，警励屯头，务要把这旧管新增，开报明白。到明日秋粮夏税，纔好下屯卫收。」西门庆道：「通共约有多少屯田？」
+刚到上房坐下，忽有来安儿来报：「大舅来了。」只见吴大舅冠冕着，束着金带，进入后堂，先拜西门庆，说道：「一言难尽！我吴铠多蒙姐夫抬举看顾，又破费姐夫了。多谢厚礼！日昨姐夫下降，我又不在家，失迎！空慢姐夫来了。今日敬来与姐夫磕个头儿，恕我迟慢之罪！」说着，磕下头去。西门庆慌忙半头相还下来，说道：「大舅恭喜，自然之道理，至亲何必计较！」吴大舅于是拜毕西门庆，月娘出来与他哥磕头。头戴翡白绉纱金梁冠儿，海獭卧兔，白绫对衿袄儿，沉香色遍地金比甲，玉色绫宽襕裙。耳边二珠环儿，金凤钗梳，胸前带着金三事〈扌寨〉领儿，裙边紫遍地金八条穗子的荷包，五色钥匙线带儿，紫遍地金扣花白绫高底鞋儿，打扮的鲜鲜儿的，向前花枝招飐，绣带飘飘，插烛也似磕了四个头。慌的大舅忙还半礼，说道：「姐姐两礼儿罢！」说道：「哥哥、嫂嫂不识好歹，常来扰害你两口儿。你哥老了，看顾看顾罢。」月娘道：「一时不到，望哥耽待些便了。」吴大舅道：「姐姐没的说，累你两口儿还少哩！」拜毕，西门庆留吴大舅坐，说道：「这咱晚了，料大舅也不拜人了。宽了衣裳，咱房里坐罢。」不想孟玉楼与潘金莲两个都在屋里，听见嚷吴大舅进来，连忙走出来与大舅磕头，都是海獭卧兔儿，白绫袄儿，玉色挑线裙子；一个是绿遍地金比甲儿；一个是紫遍地金比甲儿。头上戴的都是䯼髻，玉楼带的是环子，金莲是青宝石坠子，下边尖尖趫趫显露金莲。与吴大舅磕了头，径往各人房里去了。西门庆让大舅房内坐的，骑火盆安放卓儿，摆上春盛菓盒，各样热碗夏饭，大馒头、点心、八宝攒汤 ，一齐拿上来。小玉、玉筲都来与大舅磕头。须臾，吃了汤饭，月娘用小金厢玳瑁锺儿斟酒，递与大舅。西门庆主位相陪。吴大舅让道：「姐姐，你也来坐的。」月娘：「我就来。」又往里间房内，拿出数样配酒的菓菜来，都是冬笋、银鱼、黄鼠、〈鱼秦〉鲊、海蜇、天花菜 、苹婆 、螳螂、鲜柑、石榴、风菱、雪梨 之类。饮酒之间，西门庆便问：「大舅的公事都了毕停当了？」吴大舅道：「蒙姐夫抬举，年即任便到了，上下人事，倒也都周给的七八，还有屯所里未曾去到到任。明日是个好日期，卫中开了印来家，整理了些盒子，须得抬到屯所里到任，行牌拘将那屯头来参见，分付分付。前官丁大人坏了事情，已是被巡抚侯爷参劾去了任。如今我接管承行，须得也要振刷在册花户，警励屯头，务要把这旧管新增，开报明白。到明日秋粮夏税，纔好下屯卫收。」西门庆道：「通共约有多少屯田？」
 
 吴大舅道：「这屯田，不瞒姐夫说，太祖旧例，练兵卫因田养兵，省转输之劳，纔立下这屯田。后吃宰相王安石立青苗法，增上这夏税。那时只是上纳屯田秋粮，又不问民地。而今这济州管内，除了抛荒苇场港隘，通共二万七千顷顿地。每顷秋税、夏税，只征收一两八钱，不上五百两银子。到年终纔倾济了，往东平府交纳，转行招商，以备军粮马草作用。」西门庆又问：「还有羡余之利？」吴大舅道：「虽故还有些抛零一户，不在册者，乡民顽滑，若十分进征紧了，等秤斛斗重，恐声口致起公论。」西门庆道：「若是有些甫余儿也罢，难道说全征？若征收些出来，斛斗等秤上，也勾咱每上下搅给。」吴大舅道：「不瞒姐夫说，若会管此屯，见一年也有百十两银子寻。到年终，人户们还有些鸡鹅豚米面见相送。那个是各人取觅，不在数内的。只是多赖姐夫力量扶持。」西门庆道：「得勾你老人家搅给，也尽我一点之心。」正说着，月娘也走来旁边陪坐。三人饮酒，到掌灯已后，吴大舅纔起身去了。西门庆那日就在前边金莲房中歇了一夜。到次日，早往衙门中开印，升厅画卯，发放公事。先是云离守家发帖儿，初五日请西门庆并合衙官员吃庆官酒。西门庆次日，何千户娘子蓝氏下帖儿，初六日请月娘姊妹相会。且说那日，西门庆同应伯爵、吴大舅三人，起身到云离守家。原来旁边又典了人家一所房子，三间客位内摆酒，叫了一起吹打鼓乐迎接，都有卓面，吃至晚夕来家。巴不到次日，月娘往何千户家吃酒去了。西门庆打选衣帽齐整，袖着赏赐包儿，骑马戴眼纱，玳安、琴童跟随，午后时分，径来王招宣府中拜节，王三官儿不在，留下帖儿。文嫂儿又早在那里接了帖儿，连忙报与林太太说，出来请老爷后边坐。转道大厅，到于后边，进入仪门。少间，住房掀起明帘子，上面供养着先公王景崇影像，陈说两卓春台菓酌，朱红公座虎皮校椅。脚下氍毹匝地，帘幙垂红。少顷，林氏穿着大红通袖袄儿，珠翠盈头，粉妆腻脸，与西门庆见毕礼数，留坐待茶。
 
@@ -57,7 +57,7 @@
 
 刘郎莫谓桃花老， 浪把轻红逐水流。」
 
-都说西门庆到家，有平安迎门禀说：「今日有薛公公家差人送请帖儿，请爷早往门外皇庄看春，又是云二叔家差人送了五个帖儿，请五位娘吃节酒。帖儿都交进去了。」西门庆听了，没言语，进入后边月娘房来，只见孟玉楼、潘金莲都在房内坐的。月娘从何千户家赴了席来家，已摘了首饰花翠，止戴着｛髟狄｝髻，撇着六根金簪子，勒着珠子箍儿。上着蓝绫袄，下着软黄绵紬裙子，坐着说话。西门庆进来，连忙道了万福。西门庆就在正面椅上坐下，问道：「你今日往那里，这咱纔来？」西门庆无得说：「我在应二哥家留坐，到这咱晚。」月娘便说起今日何千户家酒席上事：「原来何千户娘子还年小哩，今年纔十八岁！生的灯人儿也似一表人物，好标致！知今博古，透灵儿还强十分！见我去，恰似会了几遍，好不喜狎。嫁了何大人二年光景，房里倒使着四个丫头，两个养娘，两房家人媳妇。」
+都说西门庆到家，有平安迎门禀说：「今日有薛公公家差人送请帖儿，请爷早往门外皇庄看春，又是云二叔家差人送了五个帖儿，请五位娘吃节酒。帖儿都交进去了。」西门庆听了，没言语，进入后边月娘房来，只见孟玉楼、潘金莲都在房内坐的。月娘从何千户家赴了席来家，已摘了首饰花翠，止戴着䯼髻，撇着六根金簪子，勒着珠子箍儿。上着蓝绫袄，下着软黄绵紬裙子，坐着说话。西门庆进来，连忙道了万福。西门庆就在正面椅上坐下，问道：「你今日往那里，这咱纔来？」西门庆无得说：「我在应二哥家留坐，到这咱晚。」月娘便说起今日何千户家酒席上事：「原来何千户娘子还年小哩，今年纔十八岁！生的灯人儿也似一表人物，好标致！知今博古，透灵儿还强十分！见我去，恰似会了几遍，好不喜狎。嫁了何大人二年光景，房里倒使着四个丫头，两个养娘，两房家人媳妇。」
 
 西门庆道：「他是内府御前生活所蓝大监侄女儿，与他陪嫁了好少钱儿！」又道：「小厮对你说来？明日云伙计家又请俺每吃节酒，送了五个帖儿，在拣妆上阁着。连薛内相家帖子，都放在一处。」因令玉筲：「拏过来与你爹瞧。」这西门庆看了薛内相家帖儿，又看云离守家帖儿，下书他娘子儿「云门苏氏敛袵拜请。」西门庆说：「你每明日收拾了，都去走走。」月娘道：「留雪姐在家罢，只怕大节下，一时有个人客蓦将来，他每没处挝挠。」西门庆道：「也罢，留雪姐在家里，你每四个去吧。明日我也不往那里去，薛太监请我门外看春，我也懒待去。这两日春气发也怎的，只害这边腰腿疼。」月娘道：「你腰腿疼，只怕是痰火。问任一官讨两服药吃不是？只顾挨着怎的？」那西门庆道：「不妨事，由他，一发过了这两日吃，心净些。」因和月娘计较，到明日灯节，咱少不得置席酒儿，请请何大人娘子、连周守备娘子、荆南岗娘子、张亲家母、乔亲家母、云二哥娘子，连王三官儿母亲和大妗子、崔亲家母，这几位都会会，也只在十二三挂起灯来。还叫王皇亲家那起小厮扮戏耍一日。争耐去年还有贲四在家，扎了几架烟火放。今年他东京去了，只顾不见来了，都交谁人看着扎？那金莲在旁插口道：「贲四去了，他娘子儿扎也是一般。」这西门庆就瞅了金莲道：「这个小淫妇儿，三句话就说下道儿去了。」那月娘、玉楼也不采顾，就罢了。因说道：「那三官儿娘，咱每与他没有大会过，人生面不熟的，怎么好请他？只怕他也不肯来。」西门庆道：「他既认我做亲，咱送个帖儿与他，来不来随他就是了。」
 
