--- a/the-golden-lotus/082.md
+++ b/the-golden-lotus/082.md
@@ -19,7 +19,7 @@
 
 妇人一见其词，到于晚夕月上时，早把春梅、秋菊两个丫头，打发些酒与他吃，关在那边炕屋睡。然后他便在房中，绿窗半启，绛烛高烧，收拾床铺衾枕，熏香澡牝，独立木香棚下，专等经济今晚来赴佳期。都说西门大姐那日被月娘请去后边，听王姑子宣卷去了。止有元宵儿在屋里，经济梯已与了他一方手帕，安付他着守房中：「我往你五娘那边，请我下棋去。等大姑娘进来，你快叫我去。」那元宵儿应诺了。这经济得手，走来花园中。那花筛月影，参差掩映。走在荼｛艹縻｝架下，远远望着；见妇人摘去冠儿，半挽乌云，上着藕丝衫，下着翠纹裙，脚衬凌波罗袜，从木香棚下来。这经济猛然从荼｛艹縻｝架下突出，双手把妇人抱住。把妇人諕了一跳，说：「呸！小短命！猛可钻出来，諕了我一跳！早是我，你搂便将就罢了！若是别人，你也恁大胆搂起来？」经济吃的半酣儿笑道：「早知搂了你，就错搂了红娘，也是没奈何！」两个于是相搂相抱，携手进入房中。房中荧煌煌掌着灯烛，卓上设着酒肴。一面顶了角门，并肩而坐饮酒。妇人便问：「你来，大姐知不知？」经济道：「大姐后边听宣卷去了。我安付下元宵儿，有事来这里叫我。只说在这里下棋哩。」说毕，两个欢笑做一处。饮酒多时，常言：风流茶说合，酒是色媒人。不觉竹叶穿心，桃花上脸，一个嘴儿相亲，一个腮儿厮搵。罩了灯上床交接。妇人搂抱经济，经济亦揣换着妇人。妇人唱六娘子：
 
-「入门来将奴搂抱在怀，奴把锦被儿伸开。俏冤家顽的十分怪；嗏，将奴脚儿抬！脚儿抬！操乱了乌云｛髟狄｝髻儿歪。」
+「入门来将奴搂抱在怀，奴把锦被儿伸开。俏冤家顽的十分怪；嗏，将奴脚儿抬！脚儿抬！操乱了乌云䯼髻儿歪。」
 
 经济亦占回前词一首：
 
@@ -63,7 +63,7 @@
 
 写毕，妇人回房中去了。都说经济睡起一觉，酒醒过来，房中掌上灯，因想起今日妇人来相会，我都醉了。回头见壁上写了四句诗在上，墨迹犹新。念了一遍，就知他来到，空回去了。打了送上门的风月儿，白丢了！心中懊悔不已：「这咱的起更时分，大姐、元宵儿都在后边未出来。我若往他那边去，角门又关了！」走来槿花下摇花枝为号，不听见里面动静。不免踩有太湖石，扒过粉墙去。那妇人见他有酒，醉了挺觉，大恨归房，闷闷在心，就浑衣上床〈扌歪〉睡。不料半夜，他扒过墙来。见院内无人，想丫鬟都睡了，悄悄蹑足潜踪，走到房门首。见门虚掩，就挨身进来。窗闲月色，照见床上妇人，独自朝里歪着。低声叫可意人数声，不应。说道：「你休怪我，今日崔大哥众朋友邀了我往门外五星原庄上，射箭耍子了一日，来家就醉了。不知你到，有负你之约，恕罪！恕罪！」那妇人也不理他。这经济见他不理，慌了。一面跪在地下，说了一遍，又重复一遍。被妇人家反手望脸上挝了一下，骂道：「贼牢拉负心短命！还不悄悄的，丫头听见！我知道你有个人，把我不放到心！你今日端的那去来？」经济道：「我本被崔大哥拉了门外射箭去，灌醉了来，就睡着了！失误你约，你休恼我！我看见你留诗在壁上，就知恼了你！」妇人道：「怪捣鬼牢拉的，别要说嘴，与我禁声！你捣的鬼，如泥弹儿圆，我手内放不过你！今日便是崔本叫了你吃酒，醉了来家。你袖子里这根簪子，都是那里的？」经济道：「本是那日花园中拾的来，今纔两三日了。」妇人道：「你还｛入日｝神捣鬼，是那花园里拾的？你再拾一根来我纔算！这簪子是孟三儿那麻淫妇的头上簪子，我认千真万真！上面还钑着他名字，你还哄我？嗔道前日我不在，他叫你房里吃饭。原来你和他七个八个，我问着，你还不成认！你不和他两个有首尾，他的簪子缘何到你手里？原来把我的事，都透露出与他！怪道前日他见了我笑，原来有你的话在里头！自今以后，你是你，我是我，绿豆皮儿，请退了！」于是急的经济赌神发呪，继之以哭道：「我经济若与他有一字丝麻皂线，灵的是东岳城隍，活不到三十岁，生来碗大疔疮，害三五年黄病，要汤不见，要水不见！」那妇人终是不信，说道：「你这贼才料，说来的牙疼誓！亏你口内不害碜！」两个絮聒一回，见夜深了，不免解卸衣衫，挨身上床倘下。那妇人把身子扭过，倒背着他，使个性儿不理他，由着他姐姐长，姐姐短，只是反手望脸上挝过去，諕的经济气也不敢出一声儿来，干霍乱了一夜，就不误｛入日｝成〈毛皮〉头。天明，恐怕丫头起身，依旧越墙而过，往前道厢房中去了。有醉扶归词为证：
 
-「我嘴揾着他油｛髟狄｝髻，他背靠着胸肚皮。早难送香腮左右偎，只在顶窝儿里长吁气！一夜何曾见面皮。只觑着牙梳背！」
+「我嘴揾着他油䯼髻，他背靠着胸肚皮。早难送香腮左右偎，只在顶窝儿里长吁气！一夜何曾见面皮。只觑着牙梳背！」
 
 看官听说：往后金莲还把这根簪子，与了经济。后来孟玉楼嫁了李衙内，往严州府去。经济还拿着这根簪子做证见，认玉楼是姐，要暗中成事。不想玉楼哄逃，反陷经济牢狱之灾。此事表过不题。正是
 
