--- a/the-golden-lotus/091.md
+++ b/the-golden-lotus/091.md
@@ -45,7 +45,7 @@
 
 十二巫山云雨会， 两情愿保百年偕。」
 
-原来衙内房中先头娘子丢了一个大丫头，约三十年纪，名唤玉簪儿，专一搽胭抹粉，作怪成精。头上打着盘头揸髻，用手帕苫盖。周围勒销金箍儿，假充作｛髟狄｝髻。又插着些铜钗蜡片、败叶残花。耳朵上带双甜瓜坠子，身上穿一套前露殿月后露〈衤戏〉怪绿乔红的裙袄。在人前好似披荷叶老鼠。脚上穿着双里外油刘海笑拨舡样四个眼的剪绒鞋，约尺二长。脸上搽着一面铅粉，东一块白，西一块红，好似青冬瓜一般。在人跟前轻声浪颡，做势拏班。衙内未娶玉楼来时，他便逐日顿羹顿饭，殷勤扶侍；不说强说，不笑强笑，何等精神。自从娶过玉楼来，见衙内日逐和他床上睡，如胶似漆般打热，把他不去揪采。这丫头就有些使性儿起来。一日，衙内在书房中看书，这玉簪儿在厨下顿热了一盏好果仁炮茶，双手用盘儿托来。到书房里面，笑嘻嘻掀开帘儿，送与衙内。不想衙内看了一回书，搭伏定书卓，就睡着了。这玉簪儿叫道：「爹，谁似奴疼你，顿了这盏好茶儿与你吃。你家那新娶的娘子，还在被窝里睡得好觉儿！怎不交他那小大姐送盏茶来与你吃？」因见衙内打盹，在根前只顾叫不应。说道：「老花子，你黑夜做夜作，使乏了也怎的，大白日打睡磕睡！起来吃茶！」叫衙内醒了，看见是他，喝道：「怪碜奴才！把茶放下，与我过一边里去。」这玉簪儿便脸羞红了，使性子把茶丢在卓上。出来说道：「好不识人敬重！奴好意用心，大清早辰送盏茶儿来你吃，倒喓喝罢我！常言：『丑是家中宝，可喜惹烦恼！』我丑，你当初瞎了眼，谁教你要我来家的？值我的那大精〈毛皮〉！」簏被衙内听见，赶上尽力踢了两靴脚。这玉簪儿登时把那付奴脸，膀的有房梁高。也不搽脸了，也不顿茶造饭了，赶着玉楼也不叫娘，只你也我也的。无人处，一个屁股就同在玉楼床上坐，玉楼亦不去理他。他背地又压伏兰香、小鸾，说：「你休赶着我叫姐，只叫姨娘。我与你娘，系大小五分。」又说：「你只背地叫罢，休对着你爹叫，你每日跟逐我行，用心做活，你若不听堵歌，老娘拏煤锹子请你！」后来几次，见衙内不理他，他就撒懒起来。睡到日头半天，还不起来，饭儿也不做，地儿也不扫。玉楼分付兰香、小鸾：「你休靠玉簪儿了。你二人自去厨下做饭，打发你爹吃罢。」他又气不愤，使性谤气，牵家打活，在厨房内打小鸾、骂兰香：「贼小奴才，小淫妇儿，碓磨也有个先来后到！先有你娘来？先有我来？都你娘儿们占了罢，不献这个勤儿也罢了！当原先俺死了那个娘，也没曾失口叫我声玉簪儿。你进门几日，就题名道姓叫我，我是你手里使的人也怎的！你未来时，我和俺爹同床共枕，那一日不睡到斋时纔起来？和我两个如糖拌蜜，如蜜搅酥油一般打热。房中事，那些儿不打我手里过？自从你来了，把我蜜罐儿也打碎了，把我姻缘也拆散开了！一撵撵到我明间，冷清清支板凳打官铺。再不得尝着俺爹那件东西儿甚么滋味儿！正也没声处诉！你当初在西门庆家，也曾做第三个小老婆来，你小名儿叫玉楼，敢说老娘不知道？你来在俺家，你识我见，大家脓着些罢了！会那等大厮不道乔张致，呼张唤李，谁是你买到的，属你管辖？」不识那玉楼在房中听见，气得发昏，连套手战，只是不敢声言对衙内说。一日热天，也是合当有事。晚夕，衙内分付他厨下热水，拏浴盆来房中，要和玉楼洗澡。玉楼便说：「你交兰香热水罢，休要使他。」衙内不从，说道：「我偏使他，休要惯了这奴才。」玉簪儿见衙内要水和妇人洗澡，共浴兰汤，效鱼水之欢，借于飞之乐，心中正没好气。拏浴盆进房，往地下只一墩，用大锅烧上一锅滚水，口内喃喃吶吶说道：「也没见这浪淫妇，刁钻古怪，禁害老娘！无过也只是个浪精〈毛皮〉，没三日不拏水洗！像我与俺主子睡，成月也不见点水儿，也不见展污了甚么佛眼儿！偏这淫妇，会两番三次，刁蹬老娘！」直骂出房门来。玉楼听见，也不言语。衙内听了此言，心中大怒，澡也洗不成，精脊梁，靸着鞋，向床头取拐子，就要走出来。妇人拦阻住，说道：「随他骂罢，你好惹气？只怕热身子出去，风试着你，倒值了多的！」衙内那里按纳得住，说道：「你休管他，这奴才无礼！」向前一把手，采住他头发，拖踏在地下，轮起拐子，雨点打将下来。饶玉楼在旁劝着，也打有二三十下在身。打的这丫头急了，跪在地下，告说：「爹，你休打我，我有句话儿和你说。」衙内骂：「贼奴才，你说！」有山坡羊为证：
+原来衙内房中先头娘子丢了一个大丫头，约三十年纪，名唤玉簪儿，专一搽胭抹粉，作怪成精。头上打着盘头揸髻，用手帕苫盖。周围勒销金箍儿，假充作䯼髻。又插着些铜钗蜡片、败叶残花。耳朵上带双甜瓜坠子，身上穿一套前露殿月后露〈衤戏〉怪绿乔红的裙袄。在人前好似披荷叶老鼠。脚上穿着双里外油刘海笑拨舡样四个眼的剪绒鞋，约尺二长。脸上搽着一面铅粉，东一块白，西一块红，好似青冬瓜一般。在人跟前轻声浪颡，做势拏班。衙内未娶玉楼来时，他便逐日顿羹顿饭，殷勤扶侍；不说强说，不笑强笑，何等精神。自从娶过玉楼来，见衙内日逐和他床上睡，如胶似漆般打热，把他不去揪采。这丫头就有些使性儿起来。一日，衙内在书房中看书，这玉簪儿在厨下顿热了一盏好果仁炮茶，双手用盘儿托来。到书房里面，笑嘻嘻掀开帘儿，送与衙内。不想衙内看了一回书，搭伏定书卓，就睡着了。这玉簪儿叫道：「爹，谁似奴疼你，顿了这盏好茶儿与你吃。你家那新娶的娘子，还在被窝里睡得好觉儿！怎不交他那小大姐送盏茶来与你吃？」因见衙内打盹，在根前只顾叫不应。说道：「老花子，你黑夜做夜作，使乏了也怎的，大白日打睡磕睡！起来吃茶！」叫衙内醒了，看见是他，喝道：「怪碜奴才！把茶放下，与我过一边里去。」这玉簪儿便脸羞红了，使性子把茶丢在卓上。出来说道：「好不识人敬重！奴好意用心，大清早辰送盏茶儿来你吃，倒喓喝罢我！常言：『丑是家中宝，可喜惹烦恼！』我丑，你当初瞎了眼，谁教你要我来家的？值我的那大精〈毛皮〉！」簏被衙内听见，赶上尽力踢了两靴脚。这玉簪儿登时把那付奴脸，膀的有房梁高。也不搽脸了，也不顿茶造饭了，赶着玉楼也不叫娘，只你也我也的。无人处，一个屁股就同在玉楼床上坐，玉楼亦不去理他。他背地又压伏兰香、小鸾，说：「你休赶着我叫姐，只叫姨娘。我与你娘，系大小五分。」又说：「你只背地叫罢，休对着你爹叫，你每日跟逐我行，用心做活，你若不听堵歌，老娘拏煤锹子请你！」后来几次，见衙内不理他，他就撒懒起来。睡到日头半天，还不起来，饭儿也不做，地儿也不扫。玉楼分付兰香、小鸾：「你休靠玉簪儿了。你二人自去厨下做饭，打发你爹吃罢。」他又气不愤，使性谤气，牵家打活，在厨房内打小鸾、骂兰香：「贼小奴才，小淫妇儿，碓磨也有个先来后到！先有你娘来？先有我来？都你娘儿们占了罢，不献这个勤儿也罢了！当原先俺死了那个娘，也没曾失口叫我声玉簪儿。你进门几日，就题名道姓叫我，我是你手里使的人也怎的！你未来时，我和俺爹同床共枕，那一日不睡到斋时纔起来？和我两个如糖拌蜜，如蜜搅酥油一般打热。房中事，那些儿不打我手里过？自从你来了，把我蜜罐儿也打碎了，把我姻缘也拆散开了！一撵撵到我明间，冷清清支板凳打官铺。再不得尝着俺爹那件东西儿甚么滋味儿！正也没声处诉！你当初在西门庆家，也曾做第三个小老婆来，你小名儿叫玉楼，敢说老娘不知道？你来在俺家，你识我见，大家脓着些罢了！会那等大厮不道乔张致，呼张唤李，谁是你买到的，属你管辖？」不识那玉楼在房中听见，气得发昏，连套手战，只是不敢声言对衙内说。一日热天，也是合当有事。晚夕，衙内分付他厨下热水，拏浴盆来房中，要和玉楼洗澡。玉楼便说：「你交兰香热水罢，休要使他。」衙内不从，说道：「我偏使他，休要惯了这奴才。」玉簪儿见衙内要水和妇人洗澡，共浴兰汤，效鱼水之欢，借于飞之乐，心中正没好气。拏浴盆进房，往地下只一墩，用大锅烧上一锅滚水，口内喃喃吶吶说道：「也没见这浪淫妇，刁钻古怪，禁害老娘！无过也只是个浪精〈毛皮〉，没三日不拏水洗！像我与俺主子睡，成月也不见点水儿，也不见展污了甚么佛眼儿！偏这淫妇，会两番三次，刁蹬老娘！」直骂出房门来。玉楼听见，也不言语。衙内听了此言，心中大怒，澡也洗不成，精脊梁，靸着鞋，向床头取拐子，就要走出来。妇人拦阻住，说道：「随他骂罢，你好惹气？只怕热身子出去，风试着你，倒值了多的！」衙内那里按纳得住，说道：「你休管他，这奴才无礼！」向前一把手，采住他头发，拖踏在地下，轮起拐子，雨点打将下来。饶玉楼在旁劝着，也打有二三十下在身。打的这丫头急了，跪在地下，告说：「爹，你休打我，我有句话儿和你说。」衙内骂：「贼奴才，你说！」有山坡羊为证：
 
 「告爹行，停嗔息怒，你细细儿听奴分诉。当初你将八两银子财礼钱，娶我当家理纪，管着些油盐酱醋。你吃了饭吃茶，只在我手里抹布。没了俺娘，你也把我升为个署府。咱两个同铺同床，何等的顽耍？奴桉家伏业，纔把这活来做。谁承望你哄我，说不娶了。今日又起这个毛心儿里来呵，把往日恩情，弄得半星儿也无！叫了声爹，你忒心毒！我如今不在你家了，情愿嫁上个姐夫！」
 
