--- a/the-golden-lotus/097.md
+++ b/the-golden-lotus/097.md
@@ -1,13 +1,10 @@
 第九十七回：陈经济守御府用事 薛嫂买卖说姻亲（万历本）
-=
+================================================
 
-「在世为人保七旬， 何劳日夜弄精神，
-
-世事到头终有尽， 浮华过眼恐非真；
-
-贫穷富贵天之命， 得失荣枯隙里尘，
-
-不如且放开怀乐， 莫待无常鬼使侵。」
+    「在世为人保七旬， 何劳日夜弄精神，
+    世事到头终有尽， 浮华过眼恐非真；
+    贫穷富贵天之命， 得失荣枯隙里尘，
+    不如且放开怀乐， 莫待无常鬼使侵。」
 
 话说陈经济到于守备府中下了马，张胜先进去本禀报春梅。春梅分付，教他在外边班直房内，用香汤澡盆，沐浴了身体干净，后边使养娘包出一套新衣服靴帽来，与他更换了。张胜把他身上脱下来旧蓝缕衣服，卷做一团，阁在班直房内上上吊着，然后禀了春梅。那时守备还未退厅，春梅请经济到后堂。盛妆打扮，出来相见。这经济进门，就望春梅拜了四双八拜：「让姐姐受礼！」那春梅受了半礼，对面坐下。叙说寒温离别之情，彼此皆眼中垂泪。春梅恐怕守备退厅进来，见无人在眼前，使眼色与经济悄悄说：「等住回他若问你，只说是姑表兄弟，我大你一岁，二十五岁了，四月廿五日午时生的。」经济道：「我知道了。」不一时，丫鬟拏上茶来，两人吃了茶。春梅便问：「你一向怎么出了家做了道士？打我这府中出去，守备不知是我的亲，错打了你，悔的要不的！若不是那时就留下你，争奈有雪娥那贱人在我这里，不好又安插你的，所以放你去了。落后打发了那贱人，纔使张胜到处寻你不着。谁知你在城外做工，流落至于此地位！」经济道：「不瞒姐姐说，一言难尽！自从与你相别，要娶六姐。我父亲死在东京，来迟了，不曾娶成，被武松杀了。闻得你好心，葬埋了他永福寺，我也到那里烧布来。在家又把俺娘没了。刚打发丧事出去，被人坑陷了资本。来家又是大姐死了，被俺丈母那淫妇告了我一状，床帐妆奁，都搬的去了。打了一场官司。将房儿卖了，弄的我一贫如洗。多亏了俺爹朋友王杏庵赈济，把我纔送到临清晏公庙那里出家。不料又被光棍打了，拴到咱府中，打了十棍出去，投亲不理，投友不顾。因此在寺内佣工。多亏姐姐挂心，使张管家寻将我来。见姐姐一面，恩有重报，不敢有忘！」说到伤心处，两个都哭了。正说话中间，只见守备退厅，进入后边来。左右掀开帘子，守备进来，这陈经济向前倒身下拜。慌的守备答礼相还，说：「向日不知是贤弟，被下人隐瞒，有误冲撞，贤弟休怪！」经济道：「不才有玷，一向缺礼，有失亲近，望乞恕罪！」又磕下头去。守备一手拉起，让他上坐。那经济乖觉，那里肯，务要拉下椅儿旁边坐了。守备关席，春梅陪他对坐下。须臾换茶上来，吃毕。守备便问：「贤弟贵庚？一向怎的不见？如何出家？」经济便告说：「小弟虚度二十四岁，俺姐姐长我一岁，是四月二十五日午时生。向因父母双亡，家业凋丧，妻又没了，出家在晏公庙。不知家姐嫁在府中。有失探望。」守备道：「自从贤弟那日去后，你令姐昼夜忧心，常时啾啾唧唧不安，直到如今。一向使人找寻贤弟不着。不期今日相会，实乃三生有缘！」一面分付左右放卓儿，安排酒上来。须臾摆设许多杯盘，鸡蹄鹅鸭，烹炮蒸煠，汤饭点心，堆满卓上。银壸玉盏，酒泛金波。守备相陪叙话，吃至晚来，掌上灯烛方罢。守备分付家人周仁，打扫西书院干净，那里书房床帐都有。春梅拿出两床铺盖衾枕，与他安歇。又拨一个小厮喜儿答应他。又包出两套紬绢衣服来，与他更换。每日饭食，春梅请进后边吃。正是：
 
@@ -49,7 +46,7 @@
 
 天上牛郎配织女， 人间才子伴娇娥。」
 
-这里薛嫂通了信来。葛员外家知是守备府里，情愿做亲。又使一个张媒人同说媒。春梅这里备了两抬茶叶，髓饼羹果，教孙二娘坐轿子，往葛员外家插定女儿，带戒指儿。回来对春梅说：「果然好个女子！生的一表人材，如花似朵，人家又相当。」春梅这里择定吉日，纳实行礼。十六盘羹果茶饼，两盘上头面，二盘珠翠，四抬酒，两牵羊。一顶｛髟狄｝髻，全付金银头面，簪环之类，两件罗段袍儿，四季衣服。其余绵花布绢，二十两礼银，不必细说。阴阳生择在六月初八日，准娶过门。春梅先问薛嫂儿：「他家那里有陪床使女没有？」薛嫂儿道：「床帐妆奁，描金箱厨都有，只没有使女陪床。」春梅道：「咱这里买一个十三四岁丫头子，与他房里使唤，掇桶子倒水方便些。」薛嫂道：「有两个人家卖的丫头子，我明日带一个来。」到次日，果然领了一个丫头，说：「是商人黄四家儿子房里使的丫头，今年纔十三岁。黄四因用下官钱粮，和李三家，还有咱家出去的保官儿，都为钱粮，拏在监里追赃，监了一年多，家产尽绝，房儿也卖。李三先死，拏儿子李活监着。咱家保官儿那儿子僧宝儿，如今流落在外，与人家跟马哩！」春梅道：「是来保？」薛嫂道：「他如今不叫来保，改了名字叫汤保了。」春梅道：「这丫头是黄四家丫头，要多少银子？薛嫂道：「只要四两半银子，紧等着要交赃去。」春梅道：「甚么四两半！与他三两五钱银子留下罢。」一面就交了三两五钱雪花官银与他，写了文书，改了名字，唤做金钱儿。话休饶舌。又早到六月初八。春梅打扮珠翠凤冠，穿通袖大红袍儿，束金镶碧玉带，坐四人大轿，鼓乐灯笼，娶葛家女子，奠雁过门。陈经济骑大白马，拣银鞍辔，青衣军牢喝道，头戴儒巾，穿着青段圆领，脚下粉底皂靴，头上簪着两枝金花。正是：
+这里薛嫂通了信来。葛员外家知是守备府里，情愿做亲。又使一个张媒人同说媒。春梅这里备了两抬茶叶，髓饼羹果，教孙二娘坐轿子，往葛员外家插定女儿，带戒指儿。回来对春梅说：「果然好个女子！生的一表人材，如花似朵，人家又相当。」春梅这里择定吉日，纳实行礼。十六盘羹果茶饼，两盘上头面，二盘珠翠，四抬酒，两牵羊。一顶䯼髻，全付金银头面，簪环之类，两件罗段袍儿，四季衣服。其余绵花布绢，二十两礼银，不必细说。阴阳生择在六月初八日，准娶过门。春梅先问薛嫂儿：「他家那里有陪床使女没有？」薛嫂儿道：「床帐妆奁，描金箱厨都有，只没有使女陪床。」春梅道：「咱这里买一个十三四岁丫头子，与他房里使唤，掇桶子倒水方便些。」薛嫂道：「有两个人家卖的丫头子，我明日带一个来。」到次日，果然领了一个丫头，说：「是商人黄四家儿子房里使的丫头，今年纔十三岁。黄四因用下官钱粮，和李三家，还有咱家出去的保官儿，都为钱粮，拏在监里追赃，监了一年多，家产尽绝，房儿也卖。李三先死，拏儿子李活监着。咱家保官儿那儿子僧宝儿，如今流落在外，与人家跟马哩！」春梅道：「是来保？」薛嫂道：「他如今不叫来保，改了名字叫汤保了。」春梅道：「这丫头是黄四家丫头，要多少银子？薛嫂道：「只要四两半银子，紧等着要交赃去。」春梅道：「甚么四两半！与他三两五钱银子留下罢。」一面就交了三两五钱雪花官银与他，写了文书，改了名字，唤做金钱儿。话休饶舌。又早到六月初八。春梅打扮珠翠凤冠，穿通袖大红袍儿，束金镶碧玉带，坐四人大轿，鼓乐灯笼，娶葛家女子，奠雁过门。陈经济骑大白马，拣银鞍辔，青衣军牢喝道，头戴儒巾，穿着青段圆领，脚下粉底皂靴，头上簪着两枝金花。正是：
 
 「久旱逢甘雨，他乡遇故知；洞房花烛夜，金榜挂名时。」
 
