--- a/the-golden-lotus/014.md
+++ b/the-golden-lotus/014.md
@@ -37,7 +37,7 @@
 
 子虚气塞柔肠断， 他日冥司必报仇。」
 
-话休饶舌。后来子虚只摈凑了二百五十两银子，买了狮子街一所房屋居住。得了这口重气，刚搬到那里，不幸害了一场伤寒。从十一月初旬睡倒在床上，就不曾起来的。对李瓶儿还请的大街坊胡太医来看。后来怕使钱，只挨着一日两，两日三，挨到三十头，呜呼哀哉，断气身亡，亡年二十四岁。那手下的大小厮天喜儿从子虚病倒之时，拐了五两银子，走了无踪迹。子虚一倒了头，李瓶儿就使了冯妈妈请了西门庆过去，与他商议，买棺入殓，念经发送子虚到坟上埋葬。那花大、花三、花四一般儿男妇也都来吊孝。送殡回来，各都散了。西门庆那日也教吴月娘办了一张桌席，与他山头祭奠。当日妇人轿子归家，也回了一个灵位供养在房中。虽是守灵，一心只想着西门庆。从子虚在时，就把两个丫头教西门庆要了。子虚死后越发通家往还。一日正月初九日，李瓶儿打听是潘金莲生日。未曾过子虚五七，就买礼坐轿子，穿白绫袄儿，蓝织金裙，白苎布｛髟狄｝髻，珠子箍儿，来与金莲做生日。冯妈妈抱毡包，天福儿跟轿，进门就先与月娘插烛也磕了四个头，说道：「前日由头，多劳动大娘受饿，又多谢重礼！」拜了月娘，又请李娇儿、孟玉楼拜见了。然后潘金莲来到，说道：「这个就是五娘。」又磕下头，一口一声称呼：「姐姐，请受奴一礼儿！」金莲那里肯受，相让了半日，两个还平磕了头。金莲又谢了他寿礼。又有吴大娘子、潘姥姥，都一同见了李瓶儿，便请西门庆拜见。月娘道：「他今日门外玉皇庙打醮去了。」一面让坐下，换茶来吃了。良久，只见孙雪娥走过来，李瓶儿见他妆饰少次与众人，便去起身来问道：「此位是何人？奴不知，不曾请见的。」月娘道：「此是他姑娘哩。」这李瓶儿就要慌忙行礼，月娘道：「不劳起动二娘，只拜平拜儿罢。」于是二人彼此拜毕，月娘就让到房中，换了衣裳，分付丫鬟明间内放桌儿摆茶。须臾围炉添炭，酒泛羊羔 ，安排上酒来。当下吴大妗子、潘姥姥、李瓶儿上坐。月娘和李娇儿主席，孟玉楼和潘金莲打横，孙雪娥回厨下照管，不敢久坐。月娘见李瓶儿锺锺酒都不辞，于是亲自巡了一遍酒。又令李娇儿众人各巡酒一遍，颇嘲问他话儿。便说道：「花二娘搬的远了，俺姊妹们离多会少，好不思想！二娘狠心，就不说来看俺们看儿。」孟玉楼便道：「二娘今日不是因与六姐做生日，还不来哩！」李瓶儿道：「好大娘三娘，蒙众娘抬举，奴心里也要来。一来热孝在身，二者拙夫死了，家下没人。昨日纔过了他五七，不是怕五娘怪，还不敢来。」因问：「大娘贵降在几时？」月娘道：「贱日早哩！」潘金莲接过来道：「大娘生日八月十五，二娘好歹来走走。」李瓶儿道：「不消说，一定都来。」孟玉楼道：「二娘今日与俺姊姊相伴一夜儿呵，不往家去罢了。」李瓶儿道：「奴可知也和众位娘叙些话儿。不瞒众位娘说，小家儿人家，初搬到那里，自从拙夫没了，家下没人。奴那房子后墙，紧靠着乔皇亲花园，好不空！晚夕常有狐狸打砖掠瓦，奴又害怕。原是两个小厮，那个大小厮又走了。正是这个天福儿小厮看守前门，后半截通空落落的，倒亏了这个老冯是奴旧时人，常来与奴浆洗些衣裳，与丫头做鞋脚累他。」月娘因问：「老冯多大年纪？且是好个恩实妈妈儿，高言儿也没句儿！」李瓶儿道：「他今年五十六岁，属狗儿，男儿花女没有，只靠说媒度日。我这里常管他些衣裳儿。昨日拙夫死了，叫过他来与奴做伴儿。晚夕同丫头一炕睡。」潘金莲嘴快，说道句：「却又来，既有老冯在家里看家，二娘在这过一夜儿也罢了。左右那花爹没了，有谁管着你？」玉楼道：「二娘只依我，教老冯回了轿子不去罢。」那李瓶儿只是笑，不做声。说话中间，酒过数巡。潘姥姥先起身往前边去了。潘金莲随跟着他娘，往房里去了。李瓶儿再三辞：「奴的酒勾了。」李娇儿道：「花二娘怎的在他大娘、三娘手里吃过酒，偏我递酒，二娘不肯吃？显的有厚薄。」于是拿大杯，只顾斟上。李瓶儿道：「好二娘，奴委的吃不去了，岂敢做假？」月娘道：「二娘你吃过此杯，略歇歇儿罢。」那李瓶儿方纔接了，放在面前，只顾与众人说话。孟玉楼见春梅立在傍边，便问春梅：「你娘在前边做甚么哩？你去连你娘潘姥姥快请来，你说大娘请来陪你花二娘吃酒哩。」春梅去不多时，回来道：「俺姥姥害身上疼，睡哩。俺娘在房里匀脸，就来。」月娘道：「我倒也没见，你倒是个主人家，把客人丢下，三不知往房里去了。俺姐儿一日脸不知匀多少遭数，要便走的匀脸去了。诸般都好，只是有这些孩子气。」正说着，只见潘金莲上穿了香色潞紬雁衔芦花样对衿袄儿，白绫竖领，妆花眉子，溜金蜂赶菊钮扣儿；下着一尺宽海马潮云，羊皮金沿边挑线裙子，大红段子白绫高底鞋，妆花膝裤，青宝石坠子，球子箍，与孟玉楼一样打扮。惟月娘是大红段子袄，青素绫披袄，沙绿紬裙头。上带着｛髟狄｝髻貂鼠卧兔儿，玉楼在席上，看见金莲艳抹浓妆，鬓嘴边撇着一根金寿字簪儿，从外摇摆将来，戏道：「五丫头，你好人见，今日是你个驴马畜，把客人丢在这里，你躲房里去了。你可成人养的？」那金莲笑嘻嘻向他身上打了一下。玉楼道：「好大胆的五丫头！你还来递一锺儿。」李瓶儿道：「奴在三娘手里吃了好少酒儿，已却勾了。」，金莲道：「他的手里是他手里帐，我也敢奉二娘一锺儿。」于是揎起袖子，满斟一大杯递与，李瓶儿只顾放着不肯吃。月娘陪吴大妗子从房里出来，看见金莲陪着李瓶儿的，问道：「他潘姥姥怎的不来陪花二娘坐？」金莲道：「俺妈害身上疼，在房里歪着哩，叫他不肯来。」月娘因看见金鬓上撇着那寿字簪儿，便问：「二娘，你与六姐这对寿字簪儿，是那里打造的？倒且是好样儿，倒明日俺每人照样也配恁一对儿戴。」李瓶儿道：「大娘既要，奴还有几对儿，到明日每位娘都补奉上一对儿。此是过世公公宫里御前作带出来的，外边那里有这样范？」月娘道：「奴取笑鬬二娘要子，俺姊妹们人多，那里有这些相送？」众女眷饮酒欢笑，看看日西时分，冯妈妈在后边雪娥房里，管待酒，吃的脸红红的出来，催逼李瓶儿起身，不起身，好打发轿子回去。月娘道：「二娘不去罢，叫老冯回了轿子家去罢。」李瓶儿只说：「家里无人，改日再奉看列位娘，有日子住哩。」孟玉楼道：「二娘好执古，俺众人就没些分上儿。如今不打发轿子，等住回他爹来，少不的也要留二娘。」自这说话，逼迫的李瓶儿就把房门钥匙递与冯妈妈。说道：「既是他众位娘再三留我，显的奴不识敬重。分付轿子回去，教他明日来接罢。你和小厮家仔细门户。」又叫过冯妈妈，附耳低言：「教大丫头迎春拿钥匙开我床房里头一个箱子，小描金头面匣儿里，拿四对金寿字簪儿，你明日早送来，我要送四位娘。」那冯妈妈得了话，拜辞了月娘。月娘道：「吃酒去。」冯妈妈道：「我刚纔在后边姑娘房里，酒饭都吃了，明日老身早来罢。」一面千恩万谢出门，不在话下。少顷，李瓶儿不肯吃酒，月娘请到上房同大妗子一处吃茶坐的。忽见玳安小厮抱进毡包，西门庆来家，掀开帘子进来，说道：「花二娘在这里？」慌的李瓶儿跳起身来，两个见了礼坐下。月娘叫玉箫与西门庆接了衣裳。西门庆便对吴大妗子、李瓶儿说道：「今日会门外玉皇庙圣诞打醮，该我年例做会首。要不是，过了午斋，我就来了。因与众人在吴道官房里算帐，七担八柳，缠到这咱晚。」因问二娘：「今日不家去罢了？」玉楼道：「二娘这里再三不肯，要去。被俺众姊妹强着留下。」李瓶儿道：「家里没人，奴不放心。」西门庆道：「没的扯淡，这两日好不巡夜的甚紧，怕怎的？但有些风吹草动，拿我个帖送与周大人点倒奉行。」又道：「二娘怎的冷清清坐着？用了些酒儿不曾？」孟玉楼道：「俺众人再三奉劝二娘，二娘只是推不肯吃。」西门庆道：「你们不济，等我奉劝二娘。二娘好小量儿。」李瓶儿口里虽说奴吃不去了，只不动身。一面分付丫鬟从新房中放桌儿，都是留下伺候西门庆的整下饭菜蔬、细巧果仁，摆了一张桌子。吴大妗子知局，趐趫推不用酒，因往李娇儿那边房里去了。当下李瓶儿上坐，西门庆拿椅子关席。吴月娘在炕上跐着炉壶儿，孟玉楼、潘金莲两边打横。五人坐定，把酒来斟。也不用小锺儿，要大银衢花锺子。你一杯，我一盏，常言：「风流茶说合，酒是色媒人。」吃来吃去，吃的妇人眉黛低横，秋波斜视。正是：
+话休饶舌。后来子虚只摈凑了二百五十两银子，买了狮子街一所房屋居住。得了这口重气，刚搬到那里，不幸害了一场伤寒。从十一月初旬睡倒在床上，就不曾起来的。对李瓶儿还请的大街坊胡太医来看。后来怕使钱，只挨着一日两，两日三，挨到三十头，呜呼哀哉，断气身亡，亡年二十四岁。那手下的大小厮天喜儿从子虚病倒之时，拐了五两银子，走了无踪迹。子虚一倒了头，李瓶儿就使了冯妈妈请了西门庆过去，与他商议，买棺入殓，念经发送子虚到坟上埋葬。那花大、花三、花四一般儿男妇也都来吊孝。送殡回来，各都散了。西门庆那日也教吴月娘办了一张桌席，与他山头祭奠。当日妇人轿子归家，也回了一个灵位供养在房中。虽是守灵，一心只想着西门庆。从子虚在时，就把两个丫头教西门庆要了。子虚死后越发通家往还。一日正月初九日，李瓶儿打听是潘金莲生日。未曾过子虚五七，就买礼坐轿子，穿白绫袄儿，蓝织金裙，白苎布䯼髻，珠子箍儿，来与金莲做生日。冯妈妈抱毡包，天福儿跟轿，进门就先与月娘插烛也磕了四个头，说道：「前日由头，多劳动大娘受饿，又多谢重礼！」拜了月娘，又请李娇儿、孟玉楼拜见了。然后潘金莲来到，说道：「这个就是五娘。」又磕下头，一口一声称呼：「姐姐，请受奴一礼儿！」金莲那里肯受，相让了半日，两个还平磕了头。金莲又谢了他寿礼。又有吴大娘子、潘姥姥，都一同见了李瓶儿，便请西门庆拜见。月娘道：「他今日门外玉皇庙打醮去了。」一面让坐下，换茶来吃了。良久，只见孙雪娥走过来，李瓶儿见他妆饰少次与众人，便去起身来问道：「此位是何人？奴不知，不曾请见的。」月娘道：「此是他姑娘哩。」这李瓶儿就要慌忙行礼，月娘道：「不劳起动二娘，只拜平拜儿罢。」于是二人彼此拜毕，月娘就让到房中，换了衣裳，分付丫鬟明间内放桌儿摆茶。须臾围炉添炭，酒泛羊羔 ，安排上酒来。当下吴大妗子、潘姥姥、李瓶儿上坐。月娘和李娇儿主席，孟玉楼和潘金莲打横，孙雪娥回厨下照管，不敢久坐。月娘见李瓶儿锺锺酒都不辞，于是亲自巡了一遍酒。又令李娇儿众人各巡酒一遍，颇嘲问他话儿。便说道：「花二娘搬的远了，俺姊妹们离多会少，好不思想！二娘狠心，就不说来看俺们看儿。」孟玉楼便道：「二娘今日不是因与六姐做生日，还不来哩！」李瓶儿道：「好大娘三娘，蒙众娘抬举，奴心里也要来。一来热孝在身，二者拙夫死了，家下没人。昨日纔过了他五七，不是怕五娘怪，还不敢来。」因问：「大娘贵降在几时？」月娘道：「贱日早哩！」潘金莲接过来道：「大娘生日八月十五，二娘好歹来走走。」李瓶儿道：「不消说，一定都来。」孟玉楼道：「二娘今日与俺姊姊相伴一夜儿呵，不往家去罢了。」李瓶儿道：「奴可知也和众位娘叙些话儿。不瞒众位娘说，小家儿人家，初搬到那里，自从拙夫没了，家下没人。奴那房子后墙，紧靠着乔皇亲花园，好不空！晚夕常有狐狸打砖掠瓦，奴又害怕。原是两个小厮，那个大小厮又走了。正是这个天福儿小厮看守前门，后半截通空落落的，倒亏了这个老冯是奴旧时人，常来与奴浆洗些衣裳，与丫头做鞋脚累他。」月娘因问：「老冯多大年纪？且是好个恩实妈妈儿，高言儿也没句儿！」李瓶儿道：「他今年五十六岁，属狗儿，男儿花女没有，只靠说媒度日。我这里常管他些衣裳儿。昨日拙夫死了，叫过他来与奴做伴儿。晚夕同丫头一炕睡。」潘金莲嘴快，说道句：「却又来，既有老冯在家里看家，二娘在这过一夜儿也罢了。左右那花爹没了，有谁管着你？」玉楼道：「二娘只依我，教老冯回了轿子不去罢。」那李瓶儿只是笑，不做声。说话中间，酒过数巡。潘姥姥先起身往前边去了。潘金莲随跟着他娘，往房里去了。李瓶儿再三辞：「奴的酒勾了。」李娇儿道：「花二娘怎的在他大娘、三娘手里吃过酒，偏我递酒，二娘不肯吃？显的有厚薄。」于是拿大杯，只顾斟上。李瓶儿道：「好二娘，奴委的吃不去了，岂敢做假？」月娘道：「二娘你吃过此杯，略歇歇儿罢。」那李瓶儿方纔接了，放在面前，只顾与众人说话。孟玉楼见春梅立在傍边，便问春梅：「你娘在前边做甚么哩？你去连你娘潘姥姥快请来，你说大娘请来陪你花二娘吃酒哩。」春梅去不多时，回来道：「俺姥姥害身上疼，睡哩。俺娘在房里匀脸，就来。」月娘道：「我倒也没见，你倒是个主人家，把客人丢下，三不知往房里去了。俺姐儿一日脸不知匀多少遭数，要便走的匀脸去了。诸般都好，只是有这些孩子气。」正说着，只见潘金莲上穿了香色潞紬雁衔芦花样对衿袄儿，白绫竖领，妆花眉子，溜金蜂赶菊钮扣儿；下着一尺宽海马潮云，羊皮金沿边挑线裙子，大红段子白绫高底鞋，妆花膝裤，青宝石坠子，球子箍，与孟玉楼一样打扮。惟月娘是大红段子袄，青素绫披袄，沙绿紬裙头。上带着䯼髻貂鼠卧兔儿，玉楼在席上，看见金莲艳抹浓妆，鬓嘴边撇着一根金寿字簪儿，从外摇摆将来，戏道：「五丫头，你好人见，今日是你个驴马畜，把客人丢在这里，你躲房里去了。你可成人养的？」那金莲笑嘻嘻向他身上打了一下。玉楼道：「好大胆的五丫头！你还来递一锺儿。」李瓶儿道：「奴在三娘手里吃了好少酒儿，已却勾了。」，金莲道：「他的手里是他手里帐，我也敢奉二娘一锺儿。」于是揎起袖子，满斟一大杯递与，李瓶儿只顾放着不肯吃。月娘陪吴大妗子从房里出来，看见金莲陪着李瓶儿的，问道：「他潘姥姥怎的不来陪花二娘坐？」金莲道：「俺妈害身上疼，在房里歪着哩，叫他不肯来。」月娘因看见金鬓上撇着那寿字簪儿，便问：「二娘，你与六姐这对寿字簪儿，是那里打造的？倒且是好样儿，倒明日俺每人照样也配恁一对儿戴。」李瓶儿道：「大娘既要，奴还有几对儿，到明日每位娘都补奉上一对儿。此是过世公公宫里御前作带出来的，外边那里有这样范？」月娘道：「奴取笑鬬二娘要子，俺姊妹们人多，那里有这些相送？」众女眷饮酒欢笑，看看日西时分，冯妈妈在后边雪娥房里，管待酒，吃的脸红红的出来，催逼李瓶儿起身，不起身，好打发轿子回去。月娘道：「二娘不去罢，叫老冯回了轿子家去罢。」李瓶儿只说：「家里无人，改日再奉看列位娘，有日子住哩。」孟玉楼道：「二娘好执古，俺众人就没些分上儿。如今不打发轿子，等住回他爹来，少不的也要留二娘。」自这说话，逼迫的李瓶儿就把房门钥匙递与冯妈妈。说道：「既是他众位娘再三留我，显的奴不识敬重。分付轿子回去，教他明日来接罢。你和小厮家仔细门户。」又叫过冯妈妈，附耳低言：「教大丫头迎春拿钥匙开我床房里头一个箱子，小描金头面匣儿里，拿四对金寿字簪儿，你明日早送来，我要送四位娘。」那冯妈妈得了话，拜辞了月娘。月娘道：「吃酒去。」冯妈妈道：「我刚纔在后边姑娘房里，酒饭都吃了，明日老身早来罢。」一面千恩万谢出门，不在话下。少顷，李瓶儿不肯吃酒，月娘请到上房同大妗子一处吃茶坐的。忽见玳安小厮抱进毡包，西门庆来家，掀开帘子进来，说道：「花二娘在这里？」慌的李瓶儿跳起身来，两个见了礼坐下。月娘叫玉箫与西门庆接了衣裳。西门庆便对吴大妗子、李瓶儿说道：「今日会门外玉皇庙圣诞打醮，该我年例做会首。要不是，过了午斋，我就来了。因与众人在吴道官房里算帐，七担八柳，缠到这咱晚。」因问二娘：「今日不家去罢了？」玉楼道：「二娘这里再三不肯，要去。被俺众姊妹强着留下。」李瓶儿道：「家里没人，奴不放心。」西门庆道：「没的扯淡，这两日好不巡夜的甚紧，怕怎的？但有些风吹草动，拿我个帖送与周大人点倒奉行。」又道：「二娘怎的冷清清坐着？用了些酒儿不曾？」孟玉楼道：「俺众人再三奉劝二娘，二娘只是推不肯吃。」西门庆道：「你们不济，等我奉劝二娘。二娘好小量儿。」李瓶儿口里虽说奴吃不去了，只不动身。一面分付丫鬟从新房中放桌儿，都是留下伺候西门庆的整下饭菜蔬、细巧果仁，摆了一张桌子。吴大妗子知局，趐趫推不用酒，因往李娇儿那边房里去了。当下李瓶儿上坐，西门庆拿椅子关席。吴月娘在炕上跐着炉壶儿，孟玉楼、潘金莲两边打横。五人坐定，把酒来斟。也不用小锺儿，要大银衢花锺子。你一杯，我一盏，常言：「风流茶说合，酒是色媒人。」吃来吃去，吃的妇人眉黛低横，秋波斜视。正是：
 
 「两朵桃花上脸来， 眉眼施开真色妇。」
 
