--- a/the-golden-lotus/022.md
+++ b/the-golden-lotus/022.md
@@ -13,7 +13,7 @@
 
 「斜筒门儿立，人来倒目随；托腮并咬指，无故整衣裳；坐立随摇腿，无人曲唱低；开窗推户牖，停针不语时；未言先欲笑，必定与人私。」
 
-初来时，同众家人媳妇上灶，还没甚么妆饰，犹不作在意里。后过了一个月有余，看了玉楼、金莲众人打扮，他把｛髟狄｝髻垫的高高的，梳的虚笼笼的头发，把水鬓描的长长的，在上边递茶递水，被西门庆睃在眼里。一日，设了条计策，教来旺儿押了五百两银子，往杭州替蔡太师制造庆贺生辰锦绣蟒衣，并家中穿的四季衣服，往回也有半年期程。约从十一月半头，搭在旱路车上，起身去了。西门庆安心早晚要调戏他这老婆，不期到此，正值孟玉楼生日，月娘和众堂客在后厅吃酒。西门庆那日在家，没往那去，月娘分付玉筲：「房中另放桌儿，打发酒菜汤饭点心你爹吃。」西门庆因打帘内看见，惠莲身上穿着袖对衿袄，紫绢裙子，在席上斟酒。故意问玉筲：「那个穿红祆的是谁？」玉筲回道：「是新娶的来旺儿的媳妇子惠莲。」西门庆道：「这媳妇子，怎的红祆配着紫裙子，怪模怪样！到明日对你娘说，另与他一条别的颜色裙子，配着穿。」玉筲道：「这紫裙子，还是问我借的裙子。」说了，就罢了。须臾，过了玉楼生日。一日，月娘往对门乔大户家吃生日酒去了。约后晌时分，西门庆从外来家，已有酒了；走到仪门首，这惠莲正往外走，两个撞了满怀。西门庆便一手搂过脖子来，就亲了个嘴。口中喃喃吶吶说道：「我的儿，你若依了我，头面衣服，随你拣着用！」那老婆一声儿没言语，推开西门庆手，一直往前走了。西门庆归到上房，叫玉筲送了一疋蓝段子到他屋里，如此这般对他说：「爹昨日见你酒席上斟酒，穿着红祆配着紫裙子，怪模怪样的，不好看；说『这紫裙子还是问我借的。』爹纔开厨柜拿了这疋段子，使我送与你，教你做裙子穿。」这惠莲开看，都是一疋翠蓝四季团花兼喜相逢段子。说道：「我做出来，娘若见了问怎了？」玉筲道：「爹到明日还对娘说，你放心。爹说来，你若依了这件事，随你要甚么，爹与你买。今日赶娘不在家，要和你会会儿，你心下何如？」那老婆听了，微笑而不言。因问：「爹多咱时分来？我好在屋里伺候。」玉筲道：「爹说小厮每看着，不好进你这屋里来的；教你悄悄往山子底下洞儿里，那里无人，堪可一会儿。」老婆道：「只怕五娘、六娘知道了，不好意思的。」玉筲道：「三娘和五娘，都在六娘屋里下棋，你去不妨事。」当下约会已定，玉筲走来回西门庆说话，两个都往山子底下成事，玉筲在门首与他观风。都不想金莲、玉楼，都在李瓶儿房里下棋，只见小鸾来请玉楼，说：「爹来家了。」三人就散了，玉楼回后边去了。金莲走到房中，匀了脸，亦往后边来。走入仪门，只门小玉立上房门首。金莲问：「你爹在屋里？」小玉摇手儿往前指，这金莲就知其意。走到前边山子角门首，只见玉筲拦着门。金莲只猜玉筲和西门庆在此私狎，便顶进去。玉筲慌了：「五娘休进去，爹在里面有勾当哩！」金莲骂道：「怪狗肉，我又怕你爹了？」不由分说，进入花园里来，各处寻了一遍。走到藏春坞山子洞儿里，只见他两个人在里面纔了事。老婆听见有人来，连忙系上裙子，往外走。看见金莲，把脸通红了。金莲问道：「贼臭肉！你在这里做甚么？」老婆道：「我来叫画童儿来。」看着，一溜烟走了。金莲进来，看见西门庆在里边系裤子，骂道：「贼没廉耻的货，你和奴淫妇，大白日里在这里端的干的勾当儿？刚纔我打与那淫妇两个耳子纔好！不想他往外走了。原来你就是画童儿，他来寻你！你与我实说，和这淫妇偷了几遭？若不实说。等住回大姐姐来家，看我说不说！我若不把奴才淫妇脸，打的胀猪，也不等。俺每闲的声唤在这里来，你也来插上一把子。老娘眼里都放不过！」西门庆笑道：「怪小淫妇儿！悄悄儿罢，休要嚷的人知道。我实对你说，如此这般，连今日纔一遭。」金莲道：「一遭？二遭？我不信。你既要这奴才淫妇，两个瞒神諕鬼，弄剌子儿，我打听出来，休怪了我都和你每答话！」那西门庆笑的出去了。金莲到后边，听见众丫头每说：「爹来家，使玉筲手巾裹着一疋蓝段子，往前边去，不知与谁？」金莲就知是与来旺儿媳妇子的，对玉楼亦不题起此事。这老婆每日在那边，或替他造汤饭，或替他做针指鞋脚，或跟着李瓶儿下棋，常贼乖趋附金莲。被西门庆撞在一处，无人，教他两个苟合，图汉子喜欢。惠莲自从和西门庆私通之后，背地不筭，与他衣服、汗巾、首饰、香茶 之类。只银子成两，家带在身边，在门首买花翠胭粉，渐渐显露，打扮的比往日不同。西门庆又对月娘说：「他做的好汤水。」不教他上大灶，只教他和玉筲两个，在月娘房里，后边小灶上，专顿茶水，整理菜蔬，打发月娘房里吃饭，与月娘做针指，不必细说。看官听说：凡家主切不可与奴仆并家人之妇，苟且私狎。久后必紊乱上下，窃弄奸欺，败坏风俗，殆不可制！有诗为证：
+初来时，同众家人媳妇上灶，还没甚么妆饰，犹不作在意里。后过了一个月有余，看了玉楼、金莲众人打扮，他把䯼髻垫的高高的，梳的虚笼笼的头发，把水鬓描的长长的，在上边递茶递水，被西门庆睃在眼里。一日，设了条计策，教来旺儿押了五百两银子，往杭州替蔡太师制造庆贺生辰锦绣蟒衣，并家中穿的四季衣服，往回也有半年期程。约从十一月半头，搭在旱路车上，起身去了。西门庆安心早晚要调戏他这老婆，不期到此，正值孟玉楼生日，月娘和众堂客在后厅吃酒。西门庆那日在家，没往那去，月娘分付玉筲：「房中另放桌儿，打发酒菜汤饭点心你爹吃。」西门庆因打帘内看见，惠莲身上穿着袖对衿袄，紫绢裙子，在席上斟酒。故意问玉筲：「那个穿红祆的是谁？」玉筲回道：「是新娶的来旺儿的媳妇子惠莲。」西门庆道：「这媳妇子，怎的红祆配着紫裙子，怪模怪样！到明日对你娘说，另与他一条别的颜色裙子，配着穿。」玉筲道：「这紫裙子，还是问我借的裙子。」说了，就罢了。须臾，过了玉楼生日。一日，月娘往对门乔大户家吃生日酒去了。约后晌时分，西门庆从外来家，已有酒了；走到仪门首，这惠莲正往外走，两个撞了满怀。西门庆便一手搂过脖子来，就亲了个嘴。口中喃喃吶吶说道：「我的儿，你若依了我，头面衣服，随你拣着用！」那老婆一声儿没言语，推开西门庆手，一直往前走了。西门庆归到上房，叫玉筲送了一疋蓝段子到他屋里，如此这般对他说：「爹昨日见你酒席上斟酒，穿着红祆配着紫裙子，怪模怪样的，不好看；说『这紫裙子还是问我借的。』爹纔开厨柜拿了这疋段子，使我送与你，教你做裙子穿。」这惠莲开看，都是一疋翠蓝四季团花兼喜相逢段子。说道：「我做出来，娘若见了问怎了？」玉筲道：「爹到明日还对娘说，你放心。爹说来，你若依了这件事，随你要甚么，爹与你买。今日赶娘不在家，要和你会会儿，你心下何如？」那老婆听了，微笑而不言。因问：「爹多咱时分来？我好在屋里伺候。」玉筲道：「爹说小厮每看着，不好进你这屋里来的；教你悄悄往山子底下洞儿里，那里无人，堪可一会儿。」老婆道：「只怕五娘、六娘知道了，不好意思的。」玉筲道：「三娘和五娘，都在六娘屋里下棋，你去不妨事。」当下约会已定，玉筲走来回西门庆说话，两个都往山子底下成事，玉筲在门首与他观风。都不想金莲、玉楼，都在李瓶儿房里下棋，只见小鸾来请玉楼，说：「爹来家了。」三人就散了，玉楼回后边去了。金莲走到房中，匀了脸，亦往后边来。走入仪门，只门小玉立上房门首。金莲问：「你爹在屋里？」小玉摇手儿往前指，这金莲就知其意。走到前边山子角门首，只见玉筲拦着门。金莲只猜玉筲和西门庆在此私狎，便顶进去。玉筲慌了：「五娘休进去，爹在里面有勾当哩！」金莲骂道：「怪狗肉，我又怕你爹了？」不由分说，进入花园里来，各处寻了一遍。走到藏春坞山子洞儿里，只见他两个人在里面纔了事。老婆听见有人来，连忙系上裙子，往外走。看见金莲，把脸通红了。金莲问道：「贼臭肉！你在这里做甚么？」老婆道：「我来叫画童儿来。」看着，一溜烟走了。金莲进来，看见西门庆在里边系裤子，骂道：「贼没廉耻的货，你和奴淫妇，大白日里在这里端的干的勾当儿？刚纔我打与那淫妇两个耳子纔好！不想他往外走了。原来你就是画童儿，他来寻你！你与我实说，和这淫妇偷了几遭？若不实说。等住回大姐姐来家，看我说不说！我若不把奴才淫妇脸，打的胀猪，也不等。俺每闲的声唤在这里来，你也来插上一把子。老娘眼里都放不过！」西门庆笑道：「怪小淫妇儿！悄悄儿罢，休要嚷的人知道。我实对你说，如此这般，连今日纔一遭。」金莲道：「一遭？二遭？我不信。你既要这奴才淫妇，两个瞒神諕鬼，弄剌子儿，我打听出来，休怪了我都和你每答话！」那西门庆笑的出去了。金莲到后边，听见众丫头每说：「爹来家，使玉筲手巾裹着一疋蓝段子，往前边去，不知与谁？」金莲就知是与来旺儿媳妇子的，对玉楼亦不题起此事。这老婆每日在那边，或替他造汤饭，或替他做针指鞋脚，或跟着李瓶儿下棋，常贼乖趋附金莲。被西门庆撞在一处，无人，教他两个苟合，图汉子喜欢。惠莲自从和西门庆私通之后，背地不筭，与他衣服、汗巾、首饰、香茶 之类。只银子成两，家带在身边，在门首买花翠胭粉，渐渐显露，打扮的比往日不同。西门庆又对月娘说：「他做的好汤水。」不教他上大灶，只教他和玉筲两个，在月娘房里，后边小灶上，专顿茶水，整理菜蔬，打发月娘房里吃饭，与月娘做针指，不必细说。看官听说：凡家主切不可与奴仆并家人之妇，苟且私狎。久后必紊乱上下，窃弄奸欺，败坏风俗，殆不可制！有诗为证：
 
 「西门贪色失尊卑， 群妾争妍竟莫疑，
 
