--- a/the-golden-lotus/024.md
+++ b/the-golden-lotus/024.md
@@ -19,7 +19,7 @@
 
 罗袖隐藏人不见， 馨香惟有蝶先知。」
 
-饮酒多时，西门庆忽被应伯爵差人请去赏灯吃酒去了。吩咐月娘：「你们自在顽耍，我往应二哥家吃酒去来。」玳安、平安两个小厮跟随去了。月娘与众姊妹吃了一回，但见银河清浅，珠斗烂班，一轮团圆皎月，从东而出，照得院宇犹如白昼。妇人或有房中换衣者，或月下整妆者，或有灯前戴花者；惟有玉楼、金莲、李瓶儿三个并惠莲，在厅前看经济放花儿。李娇儿、孙雪蛾、西门大姐，都随月娘后边去也。金莲便向二人说道：「他爹今日不在家，咱对大姐姐说，往街上走走去。」惠莲在傍说道：「娘们去，也携带我走走。」金莲道：「你既要去，你就往后边问声你大娘去，和你二娘，看他去不去？俺们在这里等着你！」那惠莲连忙往后边去了。玉楼道：「他不济事，等我亲自问他声出去。」李瓶儿道：「我也往屋里穿件衣裳去，这回来冷，只怕夜深了。」金莲道：「李大姐，你有披袄子，带出件来我穿着，省得我往屋里去走一遭。」那李瓶儿应诺去了，独剩着金莲一个，看着经济放花儿。见无人，走向经济身上捏了一把，笑道：「姐夫原来只穿恁单薄衣裳，不害冷么？」只见大家儿子小铁棍儿，笑嘻嘻在根前，舞旋旋的，且拉着经济，问姑夫要炮火章放。这经济恐怕打扰了事，巴不得与了他两个元宵炮火章，支的他外边耍去了。于是和金莲打牙犯嘴，嘲戏说道：「你老人家见我身上单薄，肯赏我一件衣裳儿穿也恁的？」金莲道：「贼短命！得其惯便了。头里蹑了我的脚儿，我不言语；如今大胆又来问我要衣服穿！我又不是你影射，何故把与你衣服穿？」经济道：「你老人家不与他罢，如何扎筏子来諕我？」妇人道：「贼短命！你是城楼子上雀儿，好耐惊耐怕的虫蚁儿！」正说着，见玉楼和惠莲出来，向金莲说道：「大娘因身上不方便，大姐不自在，故不去了。教娘们走走，早些来家。李娇儿害腿疼，也不走。雪蛾见大姐姐不走，恐怕他爹来家嗔他，也不出门。」金莲道：「都不去罢，只咱和李大姐三个去罢。等他爹来家，随他骂去。再不，把春梅小肉儿，和房里玉筲，你房里兰香，李大姐房里迎春，都带了去，等他爹来家问，就教他答话。」小玉走来道：「俺奶奶也是不去，我也跟娘们走走。」玉楼道：「对你奶奶说了去，我前头等着你。」良久，小玉问了月娘，笑嘻嘻出来。当下三个妇人，带领着一簇男女。来安、画童两个小厮，打着一对纱吊灯跟随。女婿陈敬济。躧着马，抬放烟火花炮，与众妇人瞧。宋惠莲道：「姑夫，你好歹略等等儿；娘们携带我走走，我到屋里搭搭头就来。」经济道：「俺们如今就行。」惠莲道：「你不等我，就是恼你一生！」于是走到屋里，换了一套绿闪红段子对衿矣儿，白挑线裙子。又用一方红销金汗巾子搭着头额，角上贴着飞金，三个香茶并面花儿，金灯笼坠子，出来跟着众人走百病儿。月色之下，恍若仙蛾，都是白绫祆儿，遍地金比甲。头上珠翠堆满，粉面朱唇。经济与来兴儿，左右一边一个，随路放慢吐莲、金丝菊、一丈兰、赛月明。出的大街市上，但见香尘不断，游人如蚁。花炮轰雷，灯光杂彩。箫鼓声喧，十分热闹。左右见一队纱灯，引导一簇男女过来，皆披红垂绿。以为出于公侯之家，莫敢仰视，都躲路而行。那宋惠莲一回叫：「姑夫，你放过桶子花我瞧。」一回又道：「姑夫，你放过元宵炮火章我听。」一回又落了花翠，拾花翠；一回又吊了鞋，扶着人且兜鞋；左来右去，只和经济嘲戏。玉楼看不上，说了两句：「如何只见你吊了鞋？」玉箫道：「他怕地下泥，套着五娘鞋穿着哩！」玉楼道：「你叫他过来我瞧，真个穿着五娘的鞋？」金莲道：「他昨日问我讨了一双鞋，谁知成精的狗肉，他套着穿！」惠莲于是搂起裙子来，与玉楼看，看见他穿着两双红鞋在脚上，用纱绿线带儿，扎着裤腿，一声儿也不言语。须臾，走过大街，到灯市里。金莲向玉楼道：「咱如今往狮子街，李大姐房子里走走去。」于是吩咐画童、来安儿打灯先行，迤〈辶里〉往狮子街来。小厮先去打门，老冯已是歇下，房中有两个人家买的丫头，在炕上睡。慌的老冯连忙开了门，让众妇女进来，旋戳开炉子顿茶，挈着壶往街上取酒。孟玉楼道：「老冯，你且住，不要去打酒，俺每在家，酒饭吃的饱饱来，你每有茶，倒两瓯子来吃罢！」金莲道：「你既留人吃酒，先订下菜儿纔好。」李瓶儿道：「妈妈子，一瓶两瓶取了来，打水不浑的。勾谁吃？要取一两坛儿来。」玉楼道：「他哄你，不消取；只看茶来罢。」那婆子方纔不动身。李瓶儿道：「妈妈子，怎的不往那边去走走，端的不知你成日在家做些甚么？」婆子道：「奶奶，你看丢下这两个业障在屋里，谁看他？」玉楼便问道：「两个丫头是谁家卖的？」婆子道：「一个北边人家房里使女，十三岁，只要五两银子；一个是汪序班家出来的家人媳妇，家人走了，主子把｛髟狄｝髻打了，领出来卖要十两银子。」玉楼道：「妈妈，我说与你，有一个人要，你撰他些银子使。」婆子道：「三娘，果然是谁要？告我说。」玉楼道：「如今你二娘房里，只元宵儿一个不勾使，还寻大些的丫头使唤。你到把这大的卖与他罢。」因问：「这丫头十几岁？」婆子道：「他今年属牛，十七岁了。」说着，拿茶来，众人吃了茶。那春梅、玉筲并惠莲都前后瞧了一遍，又到临街楼上，推开窗子瞧了一遍，陈敬济催逼说：「夜深了，看了快些家去罢。」金莲道：「怪短命！催的人手脚儿不停住，慌的是些甚么？」于是叫下春梅众人来，方纔起身。冯妈妈送出门，李瓶儿因问：「平安往那里去了？」婆子道：「今日这咱还没来，教老身半夜三更，开门闭户等着他。」来安儿道：「今日平安儿跟了爹往应二爹家去了。」李瓶儿吩咐：「妈妈子，早些关了门，睡了罢！他多也是不来，省的误了你的睡头。明日早来宅里伺候，你是石佛寺长老，请着你就张致了。」婆子道：「谁是老身主儿，老身敢张致？」李瓶儿道：「妈妈休得多言多语，明日早与你二娘送丫头来。」说毕，看着他关了大门，这一簇男女方纔回家。走到家门首，只听见住房子的韩回子老婆韩嫂儿声音，因他男子汉答应马房内臣，他在家，跟着人走百病儿去了；醉回来家，说有人夜晚剜开他房门，偷了狗，又不见了些东西，坐在当街上，撒酒风骂人。众妇人方纔立住了脚。金莲使来安儿：「你去叫韩嫂儿，等俺每问他个端的。」不一时，把韩嫂儿叫到当面：「你为甚么来？」韩嫂子不慌不忙，扠手向前拜了两拜，说道：「三位娘在上，听小媳妇从头儿告诉。」唱耍孩儿为证：太平佳节元宵夜，云云。玉楼等众人听了，每人掏袖中些钱果子与他；叫来安儿：「你叫你陈姐夫，送他进屋里。」那陈敬济且顾和惠莲两个嘲戏，不肯搊他去。金莲使来安儿扶到他家中，吩咐：「教他明日早来宅内，浆洗衣裳。我对你爹说，替你出气。」那韩嫂儿千恩万谢，回家去。玉楼等刚走过门首来，只见贲四娘子，穿着红祆，玄色段比甲，玉色裙，勒着销金汗巾。在门首笑嘻嘻向前道了万福，说道：「三位娘，那里走了走？请不弃，到寒家献茶。」玉楼道：「方纔因小儿哭，俺站住问了他声；承嫂子厚意，天晚了，不到罢。」贲四娘子道：「耶嚛！三位娘上门，怪人家就笑话俺小家人家，茶也奉不出一杯儿来。」生死拉到屋里。原来外边供养观音八难并关圣贤。当门挂着雪花灯儿一盏；掀开门帘，他十四岁女儿长姐在屋里。桌上两盏纱灯，摆设着春台菓酌，与三人坐。连忙教他长姐过来，与三位娘磕头递茶。玉楼、金莲每人与了他两枝花儿；李瓶儿袖中取了方汗巾，又是一钱银子，与他买瓜子儿磕。喜欢的贲四娘子，拜谢了又拜。款留不住，玉楼等起身，到大门首，小厮来兴在门首迎接。金莲就问：「你爹来家不曾？」来兴道：「爹未回家哩！」三个妇人还看着陈敬济在门首，放了两筒一丈菊，和一筒大烟兰，一个金盏银台儿，纔进后边去了。西门庆直至四更来家，正是：
+饮酒多时，西门庆忽被应伯爵差人请去赏灯吃酒去了。吩咐月娘：「你们自在顽耍，我往应二哥家吃酒去来。」玳安、平安两个小厮跟随去了。月娘与众姊妹吃了一回，但见银河清浅，珠斗烂班，一轮团圆皎月，从东而出，照得院宇犹如白昼。妇人或有房中换衣者，或月下整妆者，或有灯前戴花者；惟有玉楼、金莲、李瓶儿三个并惠莲，在厅前看经济放花儿。李娇儿、孙雪蛾、西门大姐，都随月娘后边去也。金莲便向二人说道：「他爹今日不在家，咱对大姐姐说，往街上走走去。」惠莲在傍说道：「娘们去，也携带我走走。」金莲道：「你既要去，你就往后边问声你大娘去，和你二娘，看他去不去？俺们在这里等着你！」那惠莲连忙往后边去了。玉楼道：「他不济事，等我亲自问他声出去。」李瓶儿道：「我也往屋里穿件衣裳去，这回来冷，只怕夜深了。」金莲道：「李大姐，你有披袄子，带出件来我穿着，省得我往屋里去走一遭。」那李瓶儿应诺去了，独剩着金莲一个，看着经济放花儿。见无人，走向经济身上捏了一把，笑道：「姐夫原来只穿恁单薄衣裳，不害冷么？」只见大家儿子小铁棍儿，笑嘻嘻在根前，舞旋旋的，且拉着经济，问姑夫要炮火章放。这经济恐怕打扰了事，巴不得与了他两个元宵炮火章，支的他外边耍去了。于是和金莲打牙犯嘴，嘲戏说道：「你老人家见我身上单薄，肯赏我一件衣裳儿穿也恁的？」金莲道：「贼短命！得其惯便了。头里蹑了我的脚儿，我不言语；如今大胆又来问我要衣服穿！我又不是你影射，何故把与你衣服穿？」经济道：「你老人家不与他罢，如何扎筏子来諕我？」妇人道：「贼短命！你是城楼子上雀儿，好耐惊耐怕的虫蚁儿！」正说着，见玉楼和惠莲出来，向金莲说道：「大娘因身上不方便，大姐不自在，故不去了。教娘们走走，早些来家。李娇儿害腿疼，也不走。雪蛾见大姐姐不走，恐怕他爹来家嗔他，也不出门。」金莲道：「都不去罢，只咱和李大姐三个去罢。等他爹来家，随他骂去。再不，把春梅小肉儿，和房里玉筲，你房里兰香，李大姐房里迎春，都带了去，等他爹来家问，就教他答话。」小玉走来道：「俺奶奶也是不去，我也跟娘们走走。」玉楼道：「对你奶奶说了去，我前头等着你。」良久，小玉问了月娘，笑嘻嘻出来。当下三个妇人，带领着一簇男女。来安、画童两个小厮，打着一对纱吊灯跟随。女婿陈敬济。躧着马，抬放烟火花炮，与众妇人瞧。宋惠莲道：「姑夫，你好歹略等等儿；娘们携带我走走，我到屋里搭搭头就来。」经济道：「俺们如今就行。」惠莲道：「你不等我，就是恼你一生！」于是走到屋里，换了一套绿闪红段子对衿矣儿，白挑线裙子。又用一方红销金汗巾子搭着头额，角上贴着飞金，三个香茶并面花儿，金灯笼坠子，出来跟着众人走百病儿。月色之下，恍若仙蛾，都是白绫祆儿，遍地金比甲。头上珠翠堆满，粉面朱唇。经济与来兴儿，左右一边一个，随路放慢吐莲、金丝菊、一丈兰、赛月明。出的大街市上，但见香尘不断，游人如蚁。花炮轰雷，灯光杂彩。箫鼓声喧，十分热闹。左右见一队纱灯，引导一簇男女过来，皆披红垂绿。以为出于公侯之家，莫敢仰视，都躲路而行。那宋惠莲一回叫：「姑夫，你放过桶子花我瞧。」一回又道：「姑夫，你放过元宵炮火章我听。」一回又落了花翠，拾花翠；一回又吊了鞋，扶着人且兜鞋；左来右去，只和经济嘲戏。玉楼看不上，说了两句：「如何只见你吊了鞋？」玉箫道：「他怕地下泥，套着五娘鞋穿着哩！」玉楼道：「你叫他过来我瞧，真个穿着五娘的鞋？」金莲道：「他昨日问我讨了一双鞋，谁知成精的狗肉，他套着穿！」惠莲于是搂起裙子来，与玉楼看，看见他穿着两双红鞋在脚上，用纱绿线带儿，扎着裤腿，一声儿也不言语。须臾，走过大街，到灯市里。金莲向玉楼道：「咱如今往狮子街，李大姐房子里走走去。」于是吩咐画童、来安儿打灯先行，迤〈辶里〉往狮子街来。小厮先去打门，老冯已是歇下，房中有两个人家买的丫头，在炕上睡。慌的老冯连忙开了门，让众妇女进来，旋戳开炉子顿茶，挈着壶往街上取酒。孟玉楼道：「老冯，你且住，不要去打酒，俺每在家，酒饭吃的饱饱来，你每有茶，倒两瓯子来吃罢！」金莲道：「你既留人吃酒，先订下菜儿纔好。」李瓶儿道：「妈妈子，一瓶两瓶取了来，打水不浑的。勾谁吃？要取一两坛儿来。」玉楼道：「他哄你，不消取；只看茶来罢。」那婆子方纔不动身。李瓶儿道：「妈妈子，怎的不往那边去走走，端的不知你成日在家做些甚么？」婆子道：「奶奶，你看丢下这两个业障在屋里，谁看他？」玉楼便问道：「两个丫头是谁家卖的？」婆子道：「一个北边人家房里使女，十三岁，只要五两银子；一个是汪序班家出来的家人媳妇，家人走了，主子把䯼髻打了，领出来卖要十两银子。」玉楼道：「妈妈，我说与你，有一个人要，你撰他些银子使。」婆子道：「三娘，果然是谁要？告我说。」玉楼道：「如今你二娘房里，只元宵儿一个不勾使，还寻大些的丫头使唤。你到把这大的卖与他罢。」因问：「这丫头十几岁？」婆子道：「他今年属牛，十七岁了。」说着，拿茶来，众人吃了茶。那春梅、玉筲并惠莲都前后瞧了一遍，又到临街楼上，推开窗子瞧了一遍，陈敬济催逼说：「夜深了，看了快些家去罢。」金莲道：「怪短命！催的人手脚儿不停住，慌的是些甚么？」于是叫下春梅众人来，方纔起身。冯妈妈送出门，李瓶儿因问：「平安往那里去了？」婆子道：「今日这咱还没来，教老身半夜三更，开门闭户等着他。」来安儿道：「今日平安儿跟了爹往应二爹家去了。」李瓶儿吩咐：「妈妈子，早些关了门，睡了罢！他多也是不来，省的误了你的睡头。明日早来宅里伺候，你是石佛寺长老，请着你就张致了。」婆子道：「谁是老身主儿，老身敢张致？」李瓶儿道：「妈妈休得多言多语，明日早与你二娘送丫头来。」说毕，看着他关了大门，这一簇男女方纔回家。走到家门首，只听见住房子的韩回子老婆韩嫂儿声音，因他男子汉答应马房内臣，他在家，跟着人走百病儿去了；醉回来家，说有人夜晚剜开他房门，偷了狗，又不见了些东西，坐在当街上，撒酒风骂人。众妇人方纔立住了脚。金莲使来安儿：「你去叫韩嫂儿，等俺每问他个端的。」不一时，把韩嫂儿叫到当面：「你为甚么来？」韩嫂子不慌不忙，扠手向前拜了两拜，说道：「三位娘在上，听小媳妇从头儿告诉。」唱耍孩儿为证：太平佳节元宵夜，云云。玉楼等众人听了，每人掏袖中些钱果子与他；叫来安儿：「你叫你陈姐夫，送他进屋里。」那陈敬济且顾和惠莲两个嘲戏，不肯搊他去。金莲使来安儿扶到他家中，吩咐：「教他明日早来宅内，浆洗衣裳。我对你爹说，替你出气。」那韩嫂儿千恩万谢，回家去。玉楼等刚走过门首来，只见贲四娘子，穿着红祆，玄色段比甲，玉色裙，勒着销金汗巾。在门首笑嘻嘻向前道了万福，说道：「三位娘，那里走了走？请不弃，到寒家献茶。」玉楼道：「方纔因小儿哭，俺站住问了他声；承嫂子厚意，天晚了，不到罢。」贲四娘子道：「耶嚛！三位娘上门，怪人家就笑话俺小家人家，茶也奉不出一杯儿来。」生死拉到屋里。原来外边供养观音八难并关圣贤。当门挂着雪花灯儿一盏；掀开门帘，他十四岁女儿长姐在屋里。桌上两盏纱灯，摆设着春台菓酌，与三人坐。连忙教他长姐过来，与三位娘磕头递茶。玉楼、金莲每人与了他两枝花儿；李瓶儿袖中取了方汗巾，又是一钱银子，与他买瓜子儿磕。喜欢的贲四娘子，拜谢了又拜。款留不住，玉楼等起身，到大门首，小厮来兴在门首迎接。金莲就问：「你爹来家不曾？」来兴道：「爹未回家哩！」三个妇人还看着陈敬济在门首，放了两筒一丈菊，和一筒大烟兰，一个金盏银台儿，纔进后边去了。西门庆直至四更来家，正是：
 
 「醉后不知天色瞑， 任他明月下西楼。」
 
