--- a/the-golden-lotus/025.md
+++ b/the-golden-lotus/025.md
@@ -41,7 +41,7 @@
 
 金莲听毕真情话， 咬碎银牙怒气多。」
 
-西门庆至晚来家，只见金莲在房中，云鬟不整，睡搵香腮，哭的眼坏坏的；问其所以，遂把来旺儿酒醉发言，要杀主之事诉说一遍：「见有来兴儿某日亲自听见他骂。你说此言语，思想起来，你背地图要他老婆，他便背地要你家小娘子。你的皮靴儿没番正，那厮杀你便该当！与他何干？连我一例也要杀，趁早不为之计，夜头早晚，人无后眼，只怕暗遭他毒手！」西门庆因问：「谁和那厮有首尾？」金莲道：「你休来问我，只问那上房里小玉便知了。」又说：「这奴才欺侮我，不是一遭儿了。说我当初怎的用药摆杀汉子，你娶了我来；亏他寻人情，搭救出我性命来，在外边对人扬条。早是奴没生下儿长下女，若是生下儿长下女，教贼奴才扬条着好听！敢说：『你家娘当初在家不得地时，也亏你寻人情救了他性命。』恁说，在你脸上也无光了！你便没羞，我都成不的，要这命做甚么！」这门庆听了妇人之言，走到前边，叫将来兴儿，无人处，问他始末缘由。这小厮一五一十，说了一遍。走到后边，摘问了小玉口词，与金莲头说无差：「委的某日，亲眼看见雪蛾从他来旺儿屋里出来，他媳妇儿不在屋里，委的有此事。」这西门庆心中大怒，把孙雪蛾打了一顿，被月娘再三劝了。拘了他头面衣服，只教他伴着家人媳妇上灶，不许他见人，此事表过不题。西门庆在后边，因使玉筲叫了宋惠莲，背地亲自问他。这老婆便道：「阿呀！爹你老人家没的说，他可是没有这个话。我就替他赌了大誓，他酒便吃两锺，敢恁七个头，八个胆，背地里骂爹？又吃纣王水土，又说纣王无道，他靠那里过日子？爹你不要听人言语，我且问爹，听见谁说这个话来？」那西门庆被老婆一席话儿，闭口无言，问的急了，说：「是来兴儿告诉我说来，他每日吃醉了，在外风里言风里语骂我。」惠莲道：「来兴儿因爹叫俺这一个买办，说俺每夺了他的，不得撰些钱使。挟下这仇恨儿，平空做作出来，拿这血口喷他。爹就信了！他有这个欺心的事，我也不饶他！爹你依我，不要教他在家里，在家里和他合气。与他几两银子本钱，教他信信脱脱，远离他乡做买卖去；休要放他在家里，旷了他身子，自古道：『饱暖生闲事，饥寒发盗心。』他怎么不胡生事儿？这里无人，他出去了，早晚爹和我说句话儿，也方便些！」西门庆听了，满心欢喜，说道：「我的儿，说的是！我有心叫他早上东京，与蔡太师押送生辰担。他又纔从杭州回来家，不好又使他的，叫来保去罢。既你这说，我明日打发他去便了。回来时，我教他领一千两银子，同主管往杭州贩买紬绢丝线做买卖，你意下何如？」老婆心中大喜，说道：「爹若这等纔好，休放他在家里，使的他马不停蹄纔好！」正说着西门庆见无人，就搂他过来亲嘴。老婆先递舌头，在他口里，两个咂做一处。妇人道：「爹你许我编｛髟狄｝髻，怎的还不替我编？恁时候不戴，到几时戴，只教我成日戴这头发壳子儿？」西门庆道：「不打紧，到明日将八两银子，往银匠家替你拔丝去。」西门庆又道：「怕你大娘问，怎生回答？」老婆道：「不打紧，我自有话打发他，只说问我姨娘家借来戴戴，怕怎的？」当下二人说了一回话，各自分散了。到了次日，西门庆在厅坐着，叫过来旺儿来：「你收拾衣服行李，赶后日三月二十八日起身，往东京押送蔡太师生辰担去；回来我还打发你杭州做买卖去。」这来旺儿心中大喜，应诺下来，回房收拾行李，在外买人事。来兴儿打听得知，就来告报金莲知道。金莲打听西门庆在花园卷棚内走那里，不见西门庆；只见陈敬济那里封蟒衣尺头。先是叫银匠在家，打造了一付四阳捧寿银人，都是高一尺有余，甚是奇巧；又是两把金寿字壶，两副玉桃杯，两套杭州织造，大红五彩罗段纻丝蟒衣。只少两疋玄色焦布，和大红纱蟒衣，一地里拿银子，寻不出来。李瓶儿道：「我那边楼上，还有几件没裁的蟒，等我瞧去。」不一时，西门庆与他同往上楼去寻，拣出四件来。两件大红纱，两疋玄色焦布，俱是金织边五彩蟒衣，比杭州织来的花样身分更强十倍。把西门庆喜欢要不的。正在卷棚内，教陈敬济封尺头。金莲便问：「你爹在那里？你封的是甚么？」经济道：「爹刚纔在这里来，往六娘那边楼上去。我封的是往东京蔡太师生辰担的尺头。」金莲问：「打发谁去？」经济道：「我听见昨日爹吩咐来旺儿去，敢打发来旺儿去。」这金莲纔待下台基，往花园那条路上走，正撞见西门庆，叫到屋里，问他：「明日打发谁往东京去？」西门庆道：「来旺儿和吴主管二人，还有盐客王四峯，一千干事的银两，以此多着两个去。」妇人道：「随你心下，我说的话儿，你不依，到听那奴才淫妇一面儿言。他随问怎的，只护他的汉子。那奴才有话在先，不是一日儿了。左右破着把老婆丢与你，坑了你这头子，拐的往那头里停停脱脱去了，看哥哥两眼哩！你的白丢了罢了，难为人家一千两银子，不怕你不赔！我说在你心里，随你随你。老婆无故，只是为你。这奴才发言不是一日了，不曾你贪他这老婆，你留他在家里不好；你就打发他出去做买卖，也不好。你留他在家里，早晚没这些眼防范他；你打发他外边去，他使了你本钱，头一件你先说不的他。你若要他这奴才老婆，不如先把奴才打发他离门离户；常言道：『剪草不除根，萌芽依旧生；剪草若除根，萌芽再不生。』就是你也不躭心，老婆他也死心塌地！」一席话话儿，说的西门庆如醉方醒，正是：
+西门庆至晚来家，只见金莲在房中，云鬟不整，睡搵香腮，哭的眼坏坏的；问其所以，遂把来旺儿酒醉发言，要杀主之事诉说一遍：「见有来兴儿某日亲自听见他骂。你说此言语，思想起来，你背地图要他老婆，他便背地要你家小娘子。你的皮靴儿没番正，那厮杀你便该当！与他何干？连我一例也要杀，趁早不为之计，夜头早晚，人无后眼，只怕暗遭他毒手！」西门庆因问：「谁和那厮有首尾？」金莲道：「你休来问我，只问那上房里小玉便知了。」又说：「这奴才欺侮我，不是一遭儿了。说我当初怎的用药摆杀汉子，你娶了我来；亏他寻人情，搭救出我性命来，在外边对人扬条。早是奴没生下儿长下女，若是生下儿长下女，教贼奴才扬条着好听！敢说：『你家娘当初在家不得地时，也亏你寻人情救了他性命。』恁说，在你脸上也无光了！你便没羞，我都成不的，要这命做甚么！」这门庆听了妇人之言，走到前边，叫将来兴儿，无人处，问他始末缘由。这小厮一五一十，说了一遍。走到后边，摘问了小玉口词，与金莲头说无差：「委的某日，亲眼看见雪蛾从他来旺儿屋里出来，他媳妇儿不在屋里，委的有此事。」这西门庆心中大怒，把孙雪蛾打了一顿，被月娘再三劝了。拘了他头面衣服，只教他伴着家人媳妇上灶，不许他见人，此事表过不题。西门庆在后边，因使玉筲叫了宋惠莲，背地亲自问他。这老婆便道：「阿呀！爹你老人家没的说，他可是没有这个话。我就替他赌了大誓，他酒便吃两锺，敢恁七个头，八个胆，背地里骂爹？又吃纣王水土，又说纣王无道，他靠那里过日子？爹你不要听人言语，我且问爹，听见谁说这个话来？」那西门庆被老婆一席话儿，闭口无言，问的急了，说：「是来兴儿告诉我说来，他每日吃醉了，在外风里言风里语骂我。」惠莲道：「来兴儿因爹叫俺这一个买办，说俺每夺了他的，不得撰些钱使。挟下这仇恨儿，平空做作出来，拿这血口喷他。爹就信了！他有这个欺心的事，我也不饶他！爹你依我，不要教他在家里，在家里和他合气。与他几两银子本钱，教他信信脱脱，远离他乡做买卖去；休要放他在家里，旷了他身子，自古道：『饱暖生闲事，饥寒发盗心。』他怎么不胡生事儿？这里无人，他出去了，早晚爹和我说句话儿，也方便些！」西门庆听了，满心欢喜，说道：「我的儿，说的是！我有心叫他早上东京，与蔡太师押送生辰担。他又纔从杭州回来家，不好又使他的，叫来保去罢。既你这说，我明日打发他去便了。回来时，我教他领一千两银子，同主管往杭州贩买紬绢丝线做买卖，你意下何如？」老婆心中大喜，说道：「爹若这等纔好，休放他在家里，使的他马不停蹄纔好！」正说着西门庆见无人，就搂他过来亲嘴。老婆先递舌头，在他口里，两个咂做一处。妇人道：「爹你许我编䯼髻，怎的还不替我编？恁时候不戴，到几时戴，只教我成日戴这头发壳子儿？」西门庆道：「不打紧，到明日将八两银子，往银匠家替你拔丝去。」西门庆又道：「怕你大娘问，怎生回答？」老婆道：「不打紧，我自有话打发他，只说问我姨娘家借来戴戴，怕怎的？」当下二人说了一回话，各自分散了。到了次日，西门庆在厅坐着，叫过来旺儿来：「你收拾衣服行李，赶后日三月二十八日起身，往东京押送蔡太师生辰担去；回来我还打发你杭州做买卖去。」这来旺儿心中大喜，应诺下来，回房收拾行李，在外买人事。来兴儿打听得知，就来告报金莲知道。金莲打听西门庆在花园卷棚内走那里，不见西门庆；只见陈敬济那里封蟒衣尺头。先是叫银匠在家，打造了一付四阳捧寿银人，都是高一尺有余，甚是奇巧；又是两把金寿字壶，两副玉桃杯，两套杭州织造，大红五彩罗段纻丝蟒衣。只少两疋玄色焦布，和大红纱蟒衣，一地里拿银子，寻不出来。李瓶儿道：「我那边楼上，还有几件没裁的蟒，等我瞧去。」不一时，西门庆与他同往上楼去寻，拣出四件来。两件大红纱，两疋玄色焦布，俱是金织边五彩蟒衣，比杭州织来的花样身分更强十倍。把西门庆喜欢要不的。正在卷棚内，教陈敬济封尺头。金莲便问：「你爹在那里？你封的是甚么？」经济道：「爹刚纔在这里来，往六娘那边楼上去。我封的是往东京蔡太师生辰担的尺头。」金莲问：「打发谁去？」经济道：「我听见昨日爹吩咐来旺儿去，敢打发来旺儿去。」这金莲纔待下台基，往花园那条路上走，正撞见西门庆，叫到屋里，问他：「明日打发谁往东京去？」西门庆道：「来旺儿和吴主管二人，还有盐客王四峯，一千干事的银两，以此多着两个去。」妇人道：「随你心下，我说的话儿，你不依，到听那奴才淫妇一面儿言。他随问怎的，只护他的汉子。那奴才有话在先，不是一日儿了。左右破着把老婆丢与你，坑了你这头子，拐的往那头里停停脱脱去了，看哥哥两眼哩！你的白丢了罢了，难为人家一千两银子，不怕你不赔！我说在你心里，随你随你。老婆无故，只是为你。这奴才发言不是一日了，不曾你贪他这老婆，你留他在家里不好；你就打发他出去做买卖，也不好。你留他在家里，早晚没这些眼防范他；你打发他外边去，他使了你本钱，头一件你先说不的他。你若要他这奴才老婆，不如先把奴才打发他离门离户；常言道：『剪草不除根，萌芽依旧生；剪草若除根，萌芽再不生。』就是你也不躭心，老婆他也死心塌地！」一席话话儿，说的西门庆如醉方醒，正是：
 
 「数语拨开君子路， 片言提醒梦中人。」
 
