--- a/the-golden-lotus/026.md
+++ b/the-golden-lotus/026.md
@@ -12,7 +12,7 @@
 
 「会施天上计， 难免目前灾。」
 
-夏提刑即令左右，选大来棍上夹，把来旺儿夹了一夹，打了二十大棍，打的皮开肉绽，鲜血淋漓。分付狱卒：「带下去收监。」来兴儿、钺安儿来家，回复了西门庆话。西门庆满心欢喜。分付家中小厮：「铺盖、饭食，一般都不与他送进去；但打了休要来家对你嫂子说。只说衙门中一下儿也没打他；监几日便放出来。」众小厮应诺道：「小的每知道了。」这宋惠莲自从拿了来旺儿去后，头也不梳，脸也不洗，黄着脸儿，裙腰不整，倒靸了鞋，只是关闭房门哭泣，茶饭不吃。西门庆慌了，使了玉宵并贲娘子儿，再三进房劝解他，说道：「你放心！爹因他吃酒狂言，监他几日，耐他性儿，不久也放他出来。」惠莲不信，使小厮来安儿送饭进监去。回来问他，也是这般说：「哥见官一下儿也没打，一两日来家，教嫂子在家安心。」这惠莲听了此这，方纔不哭了。每日淡扫蛾眉，薄施脂粉，出来走跳。西门庆要便来回打房门首走，老婆在帘下叫道：「房里无人，爹进来坐坐不是。」西门庆抽身进入房里，与老婆做一处说话。西门庆哄他说道：「我儿，你放心，我看你面上，写了帖儿，对官府说，也不曾打他一下儿。监他几日，耐耐他性儿，一两日还放他出来，还教他做买卖。」妇人搂抱着西门庆脖子，说道：「我的亲达达，你好歹看奴之面，奈何他两日，放他出来。随你教他做买卖，不教他做买卖也罢。这一出来，我教他把酒断了，随你去近到远，使他往那去，他敢不去？再不，你若嫌不自便，替他寻上个老婆，他也罢了，我常远不是他的人了！」西门庆道：「我的心肝，你话是了。我明日买了对过乔家房，收拾三间房子，与你住，搬了那里去，咱两个自在顽耍！」老婆道：「着来亲亲，随你张主便了。」说毕，两个闭了门首。原来妇人夏月常不穿裤儿，只单吊着两条裙子，遇见西门庆在那里，便掀开裙子就干。口中常噙着香茶饼儿 ，于是二人解佩露马爰妃之玉，有几点汉署之香。双凫飞肩，云雨一席。妇人将身带所佩的白银条纱挑线四条穗子的香袋儿，里面装着松柏儿，挑着「冬夏长青」，玫瑰花蕊并跤趾排草，挑着「娇香美爱」八个字。把西门庆令转了，喜的心中要不的。恨不的与他誓共死生，不能遽舍。向袖中又掏了一二两银子，与他买菓子吃，房中盘缠。再三安抚他：「不消忧虑，只怕忧虑坏了你，我明日写帖子对夏大人说，就放他出来。」说了一回，西门庆恐有人来，连忙出去了。这妇人对西门庆此话，到后边对众丫鬟媳妇，词色之间，未免轻露。孟玉楼早已知道，转来告潘金莲说：他爹怎的早晚要放来旺儿出来，另替他娶一个。怎的要买对门乔家房子，把媳妇子吊到那里去，与他三间房住。又买个丫头扶侍他，与他编银丝｛髟狄｝髻，打头面。一五一十，说了一遍：「就和你我等辈一般，其么张致？大姐姐也就不管管儿？」潘金莲不听便罢，听了忿气满怀无处着，双腮红上更添红。说道：「真个由他，我就不信了！今日与你说的话，我若教贼奴才淫妇与西门庆做了第七个老婆，我不是喇嘴说，就把『潘』字吊过来哩！」玉楼道：「汉子没正条，大的又不管，咱每能走不能飞，到的那些儿。」金莲道：「你也忒不长俊，要这命做甚么？活一百岁杀肉吃？他若不依我，我拼着这命，摈兑在他手里，也不差甚么！」玉楼笑道：「我是小胆儿，不敢惹他；看你有本事和他缠！」话休絮烦。到晚，西门庆在花园中，翡翠轩书房里坐的，要教陈敬济来写帖子，往夏提刑处说要放来旺儿出来。被金莲蓦地走到根前，搭伏著书卓儿问：「你教陈姐夫写甚么帖子？送与谁家去？」西门庆不能隐讳，把来旺儿责打与他几下，放他出来罢一节，告诉一遍。妇人止住小厮，且不要叫陈姐夫来。坐在傍边，因说道：「你空躭着汉子的名儿，原来是个随风倒舵，顺水推船的行货子！我那等对你说的话儿，你不依，倒听那贼奴才淫妇话儿。随你怎的逐日沙糖拌蜜与他吃，他还只疼他的汉子！依你，如今把那奴才放出来，你也不好要他这老婆的了，教他奴才好借口；你放在家里，不荤不素，当做甚么人儿看成？待要把他做你小老婆，奴才又见在；待要说是奴才老婆，你见把他逞的恁没张置的，在人根前，上头上脸，有些样儿？就筭另替那奴才娶一个着，你要了他这老婆，往后倘忽你两个坐在一答里，那奴才或走来根前回话。做甚么，见了有个不气的？老婆见了他，站起来是？不站起来是？先不先只这个就不雅相，传出去休说六邻亲戚笑话，只家中大小，把你也不着在意里。正是：上梁不正下梁歪！你既要干这营生，誓做了泥鳅怕污了眼睛，不如一狠二狠，把奴才结果了，你就搂着他老婆也放心！」几句又把西门庆又念翻了。把帖子写就了，送与提刑院，教夏提刑限三日提出来，受一顿拷讥，拶打的通不像模样。提刑两位官府，并上下观察、缉捕、排军、监狱中〈扌匣〉锁上下，都受了西门庆财物，只要重不要轻。内中有一当案的孔目阴先生，名唤阴骘，乃山西孝义县人，极是个仁慈正直之士；因是提刑官吏上下受了西门庆贿赂，要陷害此人，图谋他妻子，故入他奴婢图财，持刀谋杀家长的重罪。也要天理，做官的养儿养女也往上长。再三不肯做文书送问，与提刑官抵面相讲。况两位提刑官上下都被西门庆买通了，以此掣肘难行。又况来旺儿监中无钱，受其凌逼。多亏阴先生悯念他负屈衔冤，是个没底入。反替他分付监中狱卒，凡事松宽看顾他。延挨了几日，人情两尽，只把当厅责了他四十，论个递解原籍徐州为民。当查原赃，花费十七两，铅锡五包，责令西门庆家人来兴儿领回。差人拿了个帖子，回复了西门庆，随教即日押发起身。这里提刑官当厅押了一道公文，差两个公人，把来旺儿取出来，已是打的稀烂，旋钉了扭，上了封皮，限即日起程，径往徐州管下交割。可怜这来旺儿在监中，监了半月光景，没钱使用，弄的身体狼狈，衣服蓝缕，没处投奔。哀告两个公人，哭泣不一，说：「两位哥在上，我打了一场屈官司，身上分文没有，寸布皆无。要凑些脚步钱与二位，无处所凑。望你可怜见，押我到我家主家处，有我的媳妇儿，并衣服箱笼，讨出来变卖了，致谢二位，并路途盘费，也讨得一步松宽。」那两个公人道：「你好不知道理。你家主西门庆既要摆布了一场，他又肯发出媳妇并箱笼与你？你还有甚亲故？俺每看阴师父分上，瞒上不瞒下，领你到那里胡乱讨些钱米；勾你路上盘费便了。谁指望你甚脚步钱儿？」来旺道：「二位哥哥，你只可忴引我先到我家主门首，我央浼两三位亲邻，替我美言讨讨儿，无多有少。」两个公人道：「也罢，我每押你到他门首！」这来旺儿先到应伯爵门首，伯爵推不在家。又央了左邻贾仁清、伊面慈二人，来西门庆家，替来旺儿说念，讨媳妇箱笼。西门庆也不出来，使出五六个小厮，一顿棍打出来，不许在门首缠绕。把贾、伊二人，羞的要不的。他媳妇儿宋惠莲在屋里瞒的铁桶相似，并不知一字。西门庆吩咐：「那个小厮走漏消息，决打二十板。」两个公人，又押到丈人家，卖棺材的宋仁家。
+夏提刑即令左右，选大来棍上夹，把来旺儿夹了一夹，打了二十大棍，打的皮开肉绽，鲜血淋漓。分付狱卒：「带下去收监。」来兴儿、钺安儿来家，回复了西门庆话。西门庆满心欢喜。分付家中小厮：「铺盖、饭食，一般都不与他送进去；但打了休要来家对你嫂子说。只说衙门中一下儿也没打他；监几日便放出来。」众小厮应诺道：「小的每知道了。」这宋惠莲自从拿了来旺儿去后，头也不梳，脸也不洗，黄着脸儿，裙腰不整，倒靸了鞋，只是关闭房门哭泣，茶饭不吃。西门庆慌了，使了玉宵并贲娘子儿，再三进房劝解他，说道：「你放心！爹因他吃酒狂言，监他几日，耐他性儿，不久也放他出来。」惠莲不信，使小厮来安儿送饭进监去。回来问他，也是这般说：「哥见官一下儿也没打，一两日来家，教嫂子在家安心。」这惠莲听了此这，方纔不哭了。每日淡扫蛾眉，薄施脂粉，出来走跳。西门庆要便来回打房门首走，老婆在帘下叫道：「房里无人，爹进来坐坐不是。」西门庆抽身进入房里，与老婆做一处说话。西门庆哄他说道：「我儿，你放心，我看你面上，写了帖儿，对官府说，也不曾打他一下儿。监他几日，耐耐他性儿，一两日还放他出来，还教他做买卖。」妇人搂抱着西门庆脖子，说道：「我的亲达达，你好歹看奴之面，奈何他两日，放他出来。随你教他做买卖，不教他做买卖也罢。这一出来，我教他把酒断了，随你去近到远，使他往那去，他敢不去？再不，你若嫌不自便，替他寻上个老婆，他也罢了，我常远不是他的人了！」西门庆道：「我的心肝，你话是了。我明日买了对过乔家房，收拾三间房子，与你住，搬了那里去，咱两个自在顽耍！」老婆道：「着来亲亲，随你张主便了。」说毕，两个闭了门首。原来妇人夏月常不穿裤儿，只单吊着两条裙子，遇见西门庆在那里，便掀开裙子就干。口中常噙着香茶饼儿 ，于是二人解佩露马爰妃之玉，有几点汉署之香。双凫飞肩，云雨一席。妇人将身带所佩的白银条纱挑线四条穗子的香袋儿，里面装着松柏儿，挑着「冬夏长青」，玫瑰花蕊并跤趾排草，挑着「娇香美爱」八个字。把西门庆令转了，喜的心中要不的。恨不的与他誓共死生，不能遽舍。向袖中又掏了一二两银子，与他买菓子吃，房中盘缠。再三安抚他：「不消忧虑，只怕忧虑坏了你，我明日写帖子对夏大人说，就放他出来。」说了一回，西门庆恐有人来，连忙出去了。这妇人对西门庆此话，到后边对众丫鬟媳妇，词色之间，未免轻露。孟玉楼早已知道，转来告潘金莲说：他爹怎的早晚要放来旺儿出来，另替他娶一个。怎的要买对门乔家房子，把媳妇子吊到那里去，与他三间房住。又买个丫头扶侍他，与他编银丝䯼髻，打头面。一五一十，说了一遍：「就和你我等辈一般，其么张致？大姐姐也就不管管儿？」潘金莲不听便罢，听了忿气满怀无处着，双腮红上更添红。说道：「真个由他，我就不信了！今日与你说的话，我若教贼奴才淫妇与西门庆做了第七个老婆，我不是喇嘴说，就把『潘』字吊过来哩！」玉楼道：「汉子没正条，大的又不管，咱每能走不能飞，到的那些儿。」金莲道：「你也忒不长俊，要这命做甚么？活一百岁杀肉吃？他若不依我，我拼着这命，摈兑在他手里，也不差甚么！」玉楼笑道：「我是小胆儿，不敢惹他；看你有本事和他缠！」话休絮烦。到晚，西门庆在花园中，翡翠轩书房里坐的，要教陈敬济来写帖子，往夏提刑处说要放来旺儿出来。被金莲蓦地走到根前，搭伏著书卓儿问：「你教陈姐夫写甚么帖子？送与谁家去？」西门庆不能隐讳，把来旺儿责打与他几下，放他出来罢一节，告诉一遍。妇人止住小厮，且不要叫陈姐夫来。坐在傍边，因说道：「你空躭着汉子的名儿，原来是个随风倒舵，顺水推船的行货子！我那等对你说的话儿，你不依，倒听那贼奴才淫妇话儿。随你怎的逐日沙糖拌蜜与他吃，他还只疼他的汉子！依你，如今把那奴才放出来，你也不好要他这老婆的了，教他奴才好借口；你放在家里，不荤不素，当做甚么人儿看成？待要把他做你小老婆，奴才又见在；待要说是奴才老婆，你见把他逞的恁没张置的，在人根前，上头上脸，有些样儿？就筭另替那奴才娶一个着，你要了他这老婆，往后倘忽你两个坐在一答里，那奴才或走来根前回话。做甚么，见了有个不气的？老婆见了他，站起来是？不站起来是？先不先只这个就不雅相，传出去休说六邻亲戚笑话，只家中大小，把你也不着在意里。正是：上梁不正下梁歪！你既要干这营生，誓做了泥鳅怕污了眼睛，不如一狠二狠，把奴才结果了，你就搂着他老婆也放心！」几句又把西门庆又念翻了。把帖子写就了，送与提刑院，教夏提刑限三日提出来，受一顿拷讥，拶打的通不像模样。提刑两位官府，并上下观察、缉捕、排军、监狱中〈扌匣〉锁上下，都受了西门庆财物，只要重不要轻。内中有一当案的孔目阴先生，名唤阴骘，乃山西孝义县人，极是个仁慈正直之士；因是提刑官吏上下受了西门庆贿赂，要陷害此人，图谋他妻子，故入他奴婢图财，持刀谋杀家长的重罪。也要天理，做官的养儿养女也往上长。再三不肯做文书送问，与提刑官抵面相讲。况两位提刑官上下都被西门庆买通了，以此掣肘难行。又况来旺儿监中无钱，受其凌逼。多亏阴先生悯念他负屈衔冤，是个没底入。反替他分付监中狱卒，凡事松宽看顾他。延挨了几日，人情两尽，只把当厅责了他四十，论个递解原籍徐州为民。当查原赃，花费十七两，铅锡五包，责令西门庆家人来兴儿领回。差人拿了个帖子，回复了西门庆，随教即日押发起身。这里提刑官当厅押了一道公文，差两个公人，把来旺儿取出来，已是打的稀烂，旋钉了扭，上了封皮，限即日起程，径往徐州管下交割。可怜这来旺儿在监中，监了半月光景，没钱使用，弄的身体狼狈，衣服蓝缕，没处投奔。哀告两个公人，哭泣不一，说：「两位哥在上，我打了一场屈官司，身上分文没有，寸布皆无。要凑些脚步钱与二位，无处所凑。望你可怜见，押我到我家主家处，有我的媳妇儿，并衣服箱笼，讨出来变卖了，致谢二位，并路途盘费，也讨得一步松宽。」那两个公人道：「你好不知道理。你家主西门庆既要摆布了一场，他又肯发出媳妇并箱笼与你？你还有甚亲故？俺每看阴师父分上，瞒上不瞒下，领你到那里胡乱讨些钱米；勾你路上盘费便了。谁指望你甚脚步钱儿？」来旺道：「二位哥哥，你只可忴引我先到我家主门首，我央浼两三位亲邻，替我美言讨讨儿，无多有少。」两个公人道：「也罢，我每押你到他门首！」这来旺儿先到应伯爵门首，伯爵推不在家。又央了左邻贾仁清、伊面慈二人，来西门庆家，替来旺儿说念，讨媳妇箱笼。西门庆也不出来，使出五六个小厮，一顿棍打出来，不许在门首缠绕。把贾、伊二人，羞的要不的。他媳妇儿宋惠莲在屋里瞒的铁桶相似，并不知一字。西门庆吩咐：「那个小厮走漏消息，决打二十板。」两个公人，又押到丈人家，卖棺材的宋仁家。
 
 来旺儿如此这般，对宋仁哭诉其事，打发了他一两银子，与那两个公人一吊铜钱、一斗米、路上盘缠。哭哭啼啼，从四月初旬，离了清河县，往徐州大道而来。这来旺儿又是那棒疮发了，身边盘缠缺乏，甚是苦恼。正是：
 
