--- a/the-golden-lotus/048.md
+++ b/the-golden-lotus/048.md
@@ -15,7 +15,7 @@
 
 虽然号令风霆肃， 万里输赢总未真。」
 
-话分两头，都表王六儿自从得了苗青干事的那一百两银子，四套衣服，夜间与他汉子韩道国，就白日不闲，一夜没的睡，计较着要打头面，治簪环，唤裁缝来裁衣服，从新抽银丝｛髟狄｝髻，用十六两银子又买了个丫头，名唤春香使唤。早晚教韩道国收用不题。一日，西门庆韩道国家，王六儿接着里面吃茶毕，西门庆往后边净手去，看见隔壁站台，问道：「是谁家的？」王六儿道：「是隔壁乐三家站台。」西门庆分付王六儿：「你对他说，若不与我即便拆了，如何教他遮住了这边风水？不然我教地方分付他。」这王六儿与韩道国说：「邻舍家，怎好与他说的？」韩道国道：「咱不如瞒着老爹，庙上买几根本植来，咱这边也搭起个站台来。上面晒酱，下边不拘做马坊，做个东净，也是好处。」老婆道：「呸！贼没算计的！此时搭站台，买些砖瓦来盖上两间厦子，都不好？」韩道国道：「盖两间厦子倒不好，是东子房子。不如盖一层两间小房罢！」于是使了三十两银子，又盖了两间平房起来。西门庆差玳安抬了许多酒肉烧饼来，与他家犒乐匠人。那条街上，谁人不知。夏提刑得了几百两银子在家，把儿子夏承恩，年十八岁，干入武学肄业，做了生员。每日邀结师友，习学弓马。西门庆约会刘、二薛二内相，周守备、荆都监、张团练合卫官员，出人情与他挂轴文庆贺，俱不必细说。西门庆因坟上新盖了山子卷棚房屋，自从生了官哥，并做了千户，还没往坟上祭祖。教阴阳徐先生看了，从新立了一座坟门，砌的明堂神路，门首栽的柳，周围种松柏，两边迭的坡峰。清明日上坟，要更换锦衣牌面，宰猪羊，定卓面。三月初六日清明，预先发柬，请了许多人，推运了东西，酒米下饭菜蔬。叫的乐工杂耍扮戏的：小优儿是李铭、吴惠、王柱、郑奉，唱的是李桂姐、吴银儿、韩金钏、董娇儿。官家请了张团练、乔大户、吴大舅、花大舅、吴二舅、沈姨夫、应伯爵、谢希大、傅伙计、韩道国、云离守、贲地传、并女婿陈经济等，约二十余人。堂客请了张团练娘子、张亲家母、乔大户娘子、朱台官娘子、尚举人娘子、吴大妗子、二妗子、杨姑娘、潘姥姥、花大妗子、吴大姨、孟大姨、吴舜臣媳妇郑三姐、崔本妻、段大姐、并家中吴月娘、李娇儿、孟玉楼、潘金莲、李瓶儿、孙雪娥、西门大姐、春梅、迎春、玉箫、兰香，奶子如意儿抱着官哥儿，里外也有二十四、五顶轿子。先是月娘对西门庆说：「孩子且不消教他往坟上去罢。一来还不曾过一周；二者刘婆子说这孩子脑门还未长满，胆儿小。这一到坟上路远，只怕諕着他。依着我，不教他去。」留下奶子和老冯在家，和他做伴儿。只教他娘母子一个去罢。」西门庆不听，便道：「此来为何？他娘儿两个不到坟前与祖宗磕个头儿去？你信那婆子老淫妇胡说，可可就是孩子脑门未长满！教奶子用被儿裹着在轿子里。按的孩儿牢牢的，怕怎的？」那月娘便道：「你不听人说，随你！」从清早晨，堂客都从家里取齐，起身上了轿子，无辞出南门到五里外祖坟上，远远望见青松郁郁，翠柏森森。新盖的坟门，两边坡峰上去，周围石墙，当中甬路。明堂、神台、香炉、烛台，都是白玉石凿的。坟门上新安的牌面，大书：「锦衣武略将军西门氏先茔。」坟内正面，土山环抱，林树交枝。西门庆穿大红冠带，摆设猪羊祭品，卓席祭奠。官家祭毕，堂客纔祭。响器锣鼓，一齐打起来。那官哥儿諕的在奶子怀里磕伏着，只倒咽气，不敢动一动儿。月娘便叫：「李大姐，你还不教奶子抱了孩子往后边去罢哩！你看諕的那腔儿！我说且不教孩儿来罢，恁漒的货，只当教抱了他来。你看諕的那孩儿这模样！」李瓶儿连忙下来，分付玳安，且叫把锣鼓住了。连忙撺掇掩着孩儿耳朵，快抱了后边去罢。须臾祭毕，徐先生念了祭文，烧了布。西门庆邀请官客在前客位。月娘邀请堂客，在后边卷棚内。由花园进去，两边松墙普筑，竹径栏杆。周围花草，一望无际。正是：
+话分两头，都表王六儿自从得了苗青干事的那一百两银子，四套衣服，夜间与他汉子韩道国，就白日不闲，一夜没的睡，计较着要打头面，治簪环，唤裁缝来裁衣服，从新抽银丝䯼髻，用十六两银子又买了个丫头，名唤春香使唤。早晚教韩道国收用不题。一日，西门庆韩道国家，王六儿接着里面吃茶毕，西门庆往后边净手去，看见隔壁站台，问道：「是谁家的？」王六儿道：「是隔壁乐三家站台。」西门庆分付王六儿：「你对他说，若不与我即便拆了，如何教他遮住了这边风水？不然我教地方分付他。」这王六儿与韩道国说：「邻舍家，怎好与他说的？」韩道国道：「咱不如瞒着老爹，庙上买几根本植来，咱这边也搭起个站台来。上面晒酱，下边不拘做马坊，做个东净，也是好处。」老婆道：「呸！贼没算计的！此时搭站台，买些砖瓦来盖上两间厦子，都不好？」韩道国道：「盖两间厦子倒不好，是东子房子。不如盖一层两间小房罢！」于是使了三十两银子，又盖了两间平房起来。西门庆差玳安抬了许多酒肉烧饼来，与他家犒乐匠人。那条街上，谁人不知。夏提刑得了几百两银子在家，把儿子夏承恩，年十八岁，干入武学肄业，做了生员。每日邀结师友，习学弓马。西门庆约会刘、二薛二内相，周守备、荆都监、张团练合卫官员，出人情与他挂轴文庆贺，俱不必细说。西门庆因坟上新盖了山子卷棚房屋，自从生了官哥，并做了千户，还没往坟上祭祖。教阴阳徐先生看了，从新立了一座坟门，砌的明堂神路，门首栽的柳，周围种松柏，两边迭的坡峰。清明日上坟，要更换锦衣牌面，宰猪羊，定卓面。三月初六日清明，预先发柬，请了许多人，推运了东西，酒米下饭菜蔬。叫的乐工杂耍扮戏的：小优儿是李铭、吴惠、王柱、郑奉，唱的是李桂姐、吴银儿、韩金钏、董娇儿。官家请了张团练、乔大户、吴大舅、花大舅、吴二舅、沈姨夫、应伯爵、谢希大、傅伙计、韩道国、云离守、贲地传、并女婿陈经济等，约二十余人。堂客请了张团练娘子、张亲家母、乔大户娘子、朱台官娘子、尚举人娘子、吴大妗子、二妗子、杨姑娘、潘姥姥、花大妗子、吴大姨、孟大姨、吴舜臣媳妇郑三姐、崔本妻、段大姐、并家中吴月娘、李娇儿、孟玉楼、潘金莲、李瓶儿、孙雪娥、西门大姐、春梅、迎春、玉箫、兰香，奶子如意儿抱着官哥儿，里外也有二十四、五顶轿子。先是月娘对西门庆说：「孩子且不消教他往坟上去罢。一来还不曾过一周；二者刘婆子说这孩子脑门还未长满，胆儿小。这一到坟上路远，只怕諕着他。依着我，不教他去。」留下奶子和老冯在家，和他做伴儿。只教他娘母子一个去罢。」西门庆不听，便道：「此来为何？他娘儿两个不到坟前与祖宗磕个头儿去？你信那婆子老淫妇胡说，可可就是孩子脑门未长满！教奶子用被儿裹着在轿子里。按的孩儿牢牢的，怕怎的？」那月娘便道：「你不听人说，随你！」从清早晨，堂客都从家里取齐，起身上了轿子，无辞出南门到五里外祖坟上，远远望见青松郁郁，翠柏森森。新盖的坟门，两边坡峰上去，周围石墙，当中甬路。明堂、神台、香炉、烛台，都是白玉石凿的。坟门上新安的牌面，大书：「锦衣武略将军西门氏先茔。」坟内正面，土山环抱，林树交枝。西门庆穿大红冠带，摆设猪羊祭品，卓席祭奠。官家祭毕，堂客纔祭。响器锣鼓，一齐打起来。那官哥儿諕的在奶子怀里磕伏着，只倒咽气，不敢动一动儿。月娘便叫：「李大姐，你还不教奶子抱了孩子往后边去罢哩！你看諕的那腔儿！我说且不教孩儿来罢，恁漒的货，只当教抱了他来。你看諕的那孩儿这模样！」李瓶儿连忙下来，分付玳安，且叫把锣鼓住了。连忙撺掇掩着孩儿耳朵，快抱了后边去罢。须臾祭毕，徐先生念了祭文，烧了布。西门庆邀请官客在前客位。月娘邀请堂客，在后边卷棚内。由花园进去，两边松墙普筑，竹径栏杆。周围花草，一望无际。正是：
 
 「桃红柳绿莺梭织， 都是东君造化成。」
 
