--- a/the-golden-lotus/087.md
+++ b/the-golden-lotus/087.md
@@ -19,7 +19,7 @@
 
 「踏破铁鞋无处觅， 得来全不费工夫！」
 
-次日，里帻穿衣，径出门来到王婆门首。金莲正在帘下站着，见武松来，连忙闪入里间去。武松掀开帘子，来问：「王妈妈在家？」那婆子正在磨上扫面，连忙出来应道：「是谁叫老身？」见是武松，道了万福。武松深深唱诺。婆子道：「武二哥，且喜！几时回家了？」武松道：「遇赦回家，昨日纔到。一向多累妈妈看家，改日相谢。」婆子笑嘻嘻道：「武二哥比旧时保养，胡子渣儿也有了，且是好身量，在外边又学得这般知礼！」一面让坐，点茶吃了。武松道：「我有一庄事和妈妈说。」婆子道：「有甚事？武二哥只顾说。」武松道：「我闻的人说，西门庆已是死了，我嫂子出来，在你老人家这里居住。敢烦妈妈对嫂子说，他若不嫁人便罢，若是嫁人，如今迎儿大了，娶得嫂子家去，看管迎儿，早晚招个女婿，一家一计过日子，庶不教人笑话。」婆子初时还不吐口儿，便道：「他是在我这里，倒不知嫁人不嫁人？」次后听见武松重谢他，便道：「等我慢慢和他说。」那妇人便帘内听见武松言语，要娶他看管迎儿；又见武松在外，出落得长大，身材胖了，比昔时又会说话儿。旧心不改，心下暗道：「这段姻缘，还落在他家手里！」就等不得王婆叫他，自己出来，向武松道了万福，说道：「既是叔叔还要奴家去看管迎儿，招女婿成家，可知好哩！」王婆道：「又一件，如今他家大娘子，要一百两雪花银子纔嫁人。」武松道：「如何要这许多？」王婆道：「西门大官人当初为了他使了许多，就打恁个银人儿也勾了！」武松道：「不打紧，我既要请嫂嫂家去，就使一百两也罢。另外破五两银子，谢你老人家。」这婆子听见，喜欢的屁滚尿流，没口说：「还是武二哥知礼，这几年江湖上见的事多，真是好汉！」妇人听了此言，走到屋里，又浓点了一盏瓜仁泡茶 ，双手递与武松吃了。婆子问道：「如今他家要发脱的紧，又有三四处官户人家争着娶，都回阻了，价钱不兑。你这银子，作速些便好。常言：『先下米，先吃饭。』千里姻缘着线牵。休要落在别人手内。」妇人道：「既要娶奴家，叔叔上紧些。」武松便道：「明日就来兑银，晚夕请嫂嫂过去。」那王婆还不信武松有这些银子，胡乱答应去了。到次日，武松打开皮箱，拏出小管营施恩与知寨刘高那一百两银子来，又另外包了五两碎银子，走到王婆家，拏天平兑起来。那婆子看见白晃晃摆了一卓银子，口中不言，心内暗道：「虽是陈经济许下一百两，上东京去取，不知几时到来？仰着合着，我见钟不打，都打筹钟？」又见五两谢他，连忙收了。拜了又拜，说道：「还是武二哥晓礼，知人甘苦！」武松道：「妈妈收了银子，今日就请嫂嫂过门。」婆子道：「武二哥且是好急性，门背后放花儿，你等不到晚了！也待我往他大娘子那里交了银子，纔打发他过去。」又道：「你今日帽儿光光，晚夕做个新郎。」那武松紧着心中不自在，那婆子不知好歹，又徯落他。打发武松出门，自己寻思：「他家大娘子自交我发脱，又没和我则定价钱。我今胡乱与他一、二十两银子，满纂的就是了。绑着鬼，也落他多一半养家。」一面把银凿下二十两银子，往月娘家里交割明白。月娘问：「甚么人家娶了去了？」王婆道：「兔儿沿山跑，还来归旧窝！嫁了他小叔，还吃旧锅里粥去了！」月娘听了，暗中跌脚；常言：仇人见仇人，分外眼睛明。与孟玉楼说：「往后死在他小叔子手里罢了！那汉子杀人不斩眼，岂肯干休？」不说月娘家中叹息，都表王婆交了银子到家，下午时，教王潮儿先把妇人箱笼卓儿送过去。这武松在家，又早收拾停当。打下酒肉，安排下菜蔬。晚上婆子领妇人进门，换了孝，戴着新｛髟狄｝髻，身穿红衣服，搭着盖头。进门来，见明间内明亮亮点着灯烛，武大灵牌供养在上面，先自有些疑忌。由不的发似人揪，肉如钩搭。进入门来，到房中。武松分付迎儿把前门上了拴，后门也顶了。王婆见了，说道：「武二哥，我去罢，家里没人。」武松道：「妈妈请进房里吃盏酒。」武松教迎儿拿菜蔬摆在卓上，须臾荡上酒来，请妇人和王婆吃酒。那武松也不让，把酒斟上，一连吃了四、五碗酒。婆子见他吃得恶，便道：「武二哥，老身酒勾了，放我去，你两口儿自在吃盏儿罢！」武松道：「妈妈且休得胡说，我武二有句话问你。」只闻飕的一声响，向衣底掣出一把二尺长薄背厚刃扎刀子来，一只手笼着刀靶，一只手按住俺心，便睁圆怪眼，倒竖刚须，便道：「婆子休得吃惊！自古冤有头，债有主，休推睡里梦里，我哥哥性命都在你身上。」婆子道：「武二哥，夜晚了，酒醉拏刀弄杖，不是耍处！」武松道：「婆子休胡说！我武二就死也不怕！等我问了这淫妇，慢慢来问你这老猪狗。若动一动步儿，身上先吃我王七刀子。」一面回过脸来，看着妇人骂道：「你这淫妇听着，我的哥哥怎生谋害了？从实说来，我便饶你。」那妇人道：「叔叔如何冷锅中豆儿爆，好没道理！你哥哥自害心疼病死了，干我甚事？」说犹未了，武松把刀子忔楂的插在卓子上，用左手揪住妇人云髻，右手匹胸提住，把卓子一脚踢番，碟儿盏儿都落地打得粉碎。那妇人能有多大气脉？被这汉子隔卓子轻轻提将过来，拖出外间灵卓子前。那婆子见头势不好，便去奔前门走；前门又上了拴。被武松大扠步赶上，揪番在地，用腰间缠带解下来，四手四脚捆住，如猿猴献果一般，便脱身不得，口中只叫：「都头不消动怒，大娘子自做出来，不干我事！」武松道：「老猪狗！我都知了，你赖那个？你教西门庆那厮垫发我充军去，今日我怎生又回家了？西门庆那厮都在那里？你不说时，先剐了这个淫妇，后杀愀这老猪狗！」提起刀来，便望那妇人脸上撇两撇。妇人慌忙叫道：「叔叔且饶，放我起来，等我说便了。」武松一提，提起那婆娘，旋剥净了，跪在灵卓子前。武松喝道：「淫妇快说！」那妇人諕的魂不附体，只得从实招说。将那时收帘子打了西门庆起，并做衣裳入马通奸，后秉的踢伤了武大心坎，用何下药，王婆怎地教唆下毒，拨置烧化，又怎的娶到家去，一五一十，从头至尾说了一遍。王婆听见，只是暗地叫苦，说：「傻才料，你老实说了，都教老身怎的支吾？」这武松一面就灵前一手揪着妇人，一手浇奠了酒，把纸钱点着，说道：「哥哥，你阴魂不远，今日武二与你报仇雪恨！」那妇人见头势不好，纔待大叫，被武松向炉内挝了一把香灰塞在他口，就叫不出来了。然后劈脑揪番在地，那妇人挣扎，把｛髟狄｝髻簪环都滚落了。武松恐怕他挣扎，先用油靴只顾踢他肋肢，后用两只脚踏他两只胳膊，便道：「淫妇自说你伶俐，不知你心怎么生着？我试看一看！」一面用手去摊开他胸脯。说时迟，那时快，把刀子去妇人白馥馥心窝内，只一剜，剜了个血窟礲，那鲜血就邈出来。那妇人就星眸半闪，两只脚只顾登踏。武松口噙着刀子，双手去斡开他胸脯，扑扢的一声，把心肝五脏生扯下来，血沥沥供养在灵前。后方一刀割下头来，血流满地。迎儿小女在旁看见，諕的只掩了睑。武松这汉子，端的好狠也！可怜这妇，正是：
+次日，里帻穿衣，径出门来到王婆门首。金莲正在帘下站着，见武松来，连忙闪入里间去。武松掀开帘子，来问：「王妈妈在家？」那婆子正在磨上扫面，连忙出来应道：「是谁叫老身？」见是武松，道了万福。武松深深唱诺。婆子道：「武二哥，且喜！几时回家了？」武松道：「遇赦回家，昨日纔到。一向多累妈妈看家，改日相谢。」婆子笑嘻嘻道：「武二哥比旧时保养，胡子渣儿也有了，且是好身量，在外边又学得这般知礼！」一面让坐，点茶吃了。武松道：「我有一庄事和妈妈说。」婆子道：「有甚事？武二哥只顾说。」武松道：「我闻的人说，西门庆已是死了，我嫂子出来，在你老人家这里居住。敢烦妈妈对嫂子说，他若不嫁人便罢，若是嫁人，如今迎儿大了，娶得嫂子家去，看管迎儿，早晚招个女婿，一家一计过日子，庶不教人笑话。」婆子初时还不吐口儿，便道：「他是在我这里，倒不知嫁人不嫁人？」次后听见武松重谢他，便道：「等我慢慢和他说。」那妇人便帘内听见武松言语，要娶他看管迎儿；又见武松在外，出落得长大，身材胖了，比昔时又会说话儿。旧心不改，心下暗道：「这段姻缘，还落在他家手里！」就等不得王婆叫他，自己出来，向武松道了万福，说道：「既是叔叔还要奴家去看管迎儿，招女婿成家，可知好哩！」王婆道：「又一件，如今他家大娘子，要一百两雪花银子纔嫁人。」武松道：「如何要这许多？」王婆道：「西门大官人当初为了他使了许多，就打恁个银人儿也勾了！」武松道：「不打紧，我既要请嫂嫂家去，就使一百两也罢。另外破五两银子，谢你老人家。」这婆子听见，喜欢的屁滚尿流，没口说：「还是武二哥知礼，这几年江湖上见的事多，真是好汉！」妇人听了此言，走到屋里，又浓点了一盏瓜仁泡茶 ，双手递与武松吃了。婆子问道：「如今他家要发脱的紧，又有三四处官户人家争着娶，都回阻了，价钱不兑。你这银子，作速些便好。常言：『先下米，先吃饭。』千里姻缘着线牵。休要落在别人手内。」妇人道：「既要娶奴家，叔叔上紧些。」武松便道：「明日就来兑银，晚夕请嫂嫂过去。」那王婆还不信武松有这些银子，胡乱答应去了。到次日，武松打开皮箱，拏出小管营施恩与知寨刘高那一百两银子来，又另外包了五两碎银子，走到王婆家，拏天平兑起来。那婆子看见白晃晃摆了一卓银子，口中不言，心内暗道：「虽是陈经济许下一百两，上东京去取，不知几时到来？仰着合着，我见钟不打，都打筹钟？」又见五两谢他，连忙收了。拜了又拜，说道：「还是武二哥晓礼，知人甘苦！」武松道：「妈妈收了银子，今日就请嫂嫂过门。」婆子道：「武二哥且是好急性，门背后放花儿，你等不到晚了！也待我往他大娘子那里交了银子，纔打发他过去。」又道：「你今日帽儿光光，晚夕做个新郎。」那武松紧着心中不自在，那婆子不知好歹，又徯落他。打发武松出门，自己寻思：「他家大娘子自交我发脱，又没和我则定价钱。我今胡乱与他一、二十两银子，满纂的就是了。绑着鬼，也落他多一半养家。」一面把银凿下二十两银子，往月娘家里交割明白。月娘问：「甚么人家娶了去了？」王婆道：「兔儿沿山跑，还来归旧窝！嫁了他小叔，还吃旧锅里粥去了！」月娘听了，暗中跌脚；常言：仇人见仇人，分外眼睛明。与孟玉楼说：「往后死在他小叔子手里罢了！那汉子杀人不斩眼，岂肯干休？」不说月娘家中叹息，都表王婆交了银子到家，下午时，教王潮儿先把妇人箱笼卓儿送过去。这武松在家，又早收拾停当。打下酒肉，安排下菜蔬。晚上婆子领妇人进门，换了孝，戴着新䯼髻，身穿红衣服，搭着盖头。进门来，见明间内明亮亮点着灯烛，武大灵牌供养在上面，先自有些疑忌。由不的发似人揪，肉如钩搭。进入门来，到房中。武松分付迎儿把前门上了拴，后门也顶了。王婆见了，说道：「武二哥，我去罢，家里没人。」武松道：「妈妈请进房里吃盏酒。」武松教迎儿拿菜蔬摆在卓上，须臾荡上酒来，请妇人和王婆吃酒。那武松也不让，把酒斟上，一连吃了四、五碗酒。婆子见他吃得恶，便道：「武二哥，老身酒勾了，放我去，你两口儿自在吃盏儿罢！」武松道：「妈妈且休得胡说，我武二有句话问你。」只闻飕的一声响，向衣底掣出一把二尺长薄背厚刃扎刀子来，一只手笼着刀靶，一只手按住俺心，便睁圆怪眼，倒竖刚须，便道：「婆子休得吃惊！自古冤有头，债有主，休推睡里梦里，我哥哥性命都在你身上。」婆子道：「武二哥，夜晚了，酒醉拏刀弄杖，不是耍处！」武松道：「婆子休胡说！我武二就死也不怕！等我问了这淫妇，慢慢来问你这老猪狗。若动一动步儿，身上先吃我王七刀子。」一面回过脸来，看着妇人骂道：「你这淫妇听着，我的哥哥怎生谋害了？从实说来，我便饶你。」那妇人道：「叔叔如何冷锅中豆儿爆，好没道理！你哥哥自害心疼病死了，干我甚事？」说犹未了，武松把刀子忔楂的插在卓子上，用左手揪住妇人云髻，右手匹胸提住，把卓子一脚踢番，碟儿盏儿都落地打得粉碎。那妇人能有多大气脉？被这汉子隔卓子轻轻提将过来，拖出外间灵卓子前。那婆子见头势不好，便去奔前门走；前门又上了拴。被武松大扠步赶上，揪番在地，用腰间缠带解下来，四手四脚捆住，如猿猴献果一般，便脱身不得，口中只叫：「都头不消动怒，大娘子自做出来，不干我事！」武松道：「老猪狗！我都知了，你赖那个？你教西门庆那厮垫发我充军去，今日我怎生又回家了？西门庆那厮都在那里？你不说时，先剐了这个淫妇，后杀愀这老猪狗！」提起刀来，便望那妇人脸上撇两撇。妇人慌忙叫道：「叔叔且饶，放我起来，等我说便了。」武松一提，提起那婆娘，旋剥净了，跪在灵卓子前。武松喝道：「淫妇快说！」那妇人諕的魂不附体，只得从实招说。将那时收帘子打了西门庆起，并做衣裳入马通奸，后秉的踢伤了武大心坎，用何下药，王婆怎地教唆下毒，拨置烧化，又怎的娶到家去，一五一十，从头至尾说了一遍。王婆听见，只是暗地叫苦，说：「傻才料，你老实说了，都教老身怎的支吾？」这武松一面就灵前一手揪着妇人，一手浇奠了酒，把纸钱点着，说道：「哥哥，你阴魂不远，今日武二与你报仇雪恨！」那妇人见头势不好，纔待大叫，被武松向炉内挝了一把香灰塞在他口，就叫不出来了。然后劈脑揪番在地，那妇人挣扎，把䯼髻簪环都滚落了。武松恐怕他挣扎，先用油靴只顾踢他肋肢，后用两只脚踏他两只胳膊，便道：「淫妇自说你伶俐，不知你心怎么生着？我试看一看！」一面用手去摊开他胸脯。说时迟，那时快，把刀子去妇人白馥馥心窝内，只一剜，剜了个血窟礲，那鲜血就邈出来。那妇人就星眸半闪，两只脚只顾登踏。武松口噙着刀子，双手去斡开他胸脯，扑扢的一声，把心肝五脏生扯下来，血沥沥供养在灵前。后方一刀割下头来，血流满地。迎儿小女在旁看见，諕的只掩了睑。武松这汉子，端的好狠也！可怜这妇，正是：
 
 「三寸气在千般用， 一日无常万事休！」
 
