--- a/the-golden-lotus/090.md
+++ b/the-golden-lotus/090.md
@@ -43,7 +43,7 @@
 
 要知祸福因， 但看所为事。」
 
-这来旺得了此言，回来家，巴不到晚，踅到来昭屋里，打酒和他两口儿吃。至更深时分，更无一人觉的，直待的大门关了，后边仪门上了拴，家中大小歇息定了。彼此都有个暗号儿，只听墙内雪娥咳嗽之声。这来旺儿躧着梯凳，黑影中扒过粉墙，顺着遮洋〈扌扉〉子，雪娥那边用凳子接着，两个在西耳房堆马鞍子去处，两个相搂相抱，云雨做一处。彼此都是旷夫寡女，欲心如火。那来旺儿缨鎗强壮，尽力般弄了一回，乐极精来，一泄如注。事毕，雪娥递与他一包金银首饰，几两碎银子，两件段子衣服，分付：「明日晚夕你再来，我还有些细软与你，你外边寻下安身去处。往后这家中过不出好来，不如我和你悄悄出去，外边寻下房儿，成其夫妇。你又会银行手艺，愁过不得日子？」来旺儿便说：「如今东门外细米巷，有我个姨娘，有名收生的屈老娘，他那里曲弯小巷倒避眼，咱两个投奔那里去。迟些时，看无动静，我带你往原籍家去，买几亩地种去也好。」两个商量已定，这来旺儿作别雪娥，依旧扒过墙来，到来昭屋里。等至天明，开了大门，挨身出去。到黄昏时分，又来门首，踅入来昭屋里，晚夕依旧跳过墙去，两个干事。朝来暮往，非止一日，也抵盗了许多细软东西，金银器皿，衣服之类。来昭两口子，也得抽分好些肥己，俱不必细说。一日，后边月娘看孝儿出花心，心中不快，睡得早。这雪娥房中使女中秋儿，原是大姐使的。因李娇儿房中元宵儿被经济耍，月娘就把中秋儿与了雪娥，把元宵儿扶侍大姐。那一日，雪娥打发中秋儿睡下。房里打点一包钗环头面，装在一个匣内，用手帕蛮盖了头，随身衣服，约定来旺儿在来昭屋里等候，两个要走。这来昭便说：「不争你走了，我看守大门，管放水鸭儿？若大娘知道，问我要人，怎了？不如你二人打房上去，就躧破些，还有踪迹。」来旺儿道：「哥也说得是。」雪娥又留一个银折盂、一根金耳干、一件青绫袄、一条黄绫裙，谢了他两口儿，直等五更鼓，月黑之时，隔房扒过去。来昭夫妇又筛上两个大锺暖酒，与来旺、雪娥吃，说：「吃了好走，路上壮胆些。」吃到五更时分，每人拏着一根香躧着梯子，打发两个扒上房去，一步一步走，把房上氏也跳破许多。比及扒到房檐跟前，街上人还未行走。听巡捕的声音，这来旺儿先跳下去，后都教雪娥躧着他肩背，接搂下来。两个往前边走，到十字路口上，被巡捕的拦住，便说：「往那里去的男女？」雪娥便諕慌了手脚。这来旺儿不慌不忙，把手中官香弹了一弹，说道：「俺是夫妇二人，前往城外岳庙里烧香，起的早了些。长官勿怪。」那人问：「背的包袱内是甚么？」来旺儿道：「是香烛纸马。」那人道：「既是两口儿，岳庙烧香，也是好事，你快去罢。」这来旺得不迭一声，拉着雪娥往前飞走。走到城下，城门纔开。打人闹里，挨出城去，转了几条街巷。原来细米巷在个僻静去处，住着不多几家人家，都是矮房低厦，后边就是大水穴沿子。到于屈姥姥家，屈姥姥还未开门，叫了半日，屈姥姥纔起来开了门儿，来旺儿领了个妇人来。原来来旺儿本姓郑，名唤郑旺。说：「这妇人是我新寻的妻小。姨娘这里有房子，且寻一个寄住些时，再寻房子。」递与屈姥姥三两银子，教买柴米。那屈姥姥见这金银首饰，来因可疑。他儿子屈镗，因他娘屈姥姥安歇郑件夫妻，二人带此东西，夜晚见财起意，掘开房门，偷盗出来耍钱。致被捉获，具了事件，拏去本县见官。李知县见系贼赃之事，赃身执仪见在，差人押着屈镗到家，把郑旺、孙雪娥，一条索子都拴了。那雪娥諕的脸蜡查也似黄了，换了渗淡衣裳，带着眼纱，把手上戒指都勒下来，打发了公人，押去见官。当下烘动了一街人观看。有认得的，说：「是西门庆家小老婆，今被这走出去的小厮来旺儿，今改名郑旺，通奸拐盗财物，走外居住。又被这屈镗掏摸了。今事发见官。」当下一个传十，十个传百个，路人行人口似飞！月娘家中自从雪娥走了，房中中秋儿见厢内细软首饰都没了，衣服丢的乱三搅四，报与月娘。月娘吃了一惊，便问中秋儿：「你跟着他睡，走了你岂不知？」中秋儿便说：「他要晚夕，悄悄偷走出外边，半日方回。不知详细。」月娘又问来昭：「你看守大门，人出去你怎不晓的？」来昭便说：「大门每日上锁，莫不他飞出去？」落后看见上瓦躧破许多，方知越房而去了。又不敢使人躧访，只得按纳含忍。不想本县知县，当堂问理这件事，先把屈镗夹了一顿，追出金头面四件、银首饰三件、金环一双、银钟二个、碎银五两、衣服二件、手帕一个、匣一个；向郑旺名下，追出银三十两、金碗簪一对、金仙子一件、戒指四个；向雪娥名下，追出金挑心一件、银镯一付、金钮五付、银簪四对、碎银一包；屈姥姥名下，追出银三两。就将来旺儿问拟奴婢因奸盗取财物，屈镗系窃盗，俱系杂犯死罪，准徒五年，赃物入官。雪娥孙氏，系西门庆妾，与屈姥姥，当下都当官拶了一拶。屈姥姥供明放了。雪娥责令本县差人到西门庆家，教人递领状领孙氏。那吴月娘叫吴大舅来商议：「已是出丑，平白又领了来家做甚么？没的玷辱了家门，与死的装幌子！」打发了公人钱，回了知县话。知县拘将官媒人来，当官变卖。都说守备府中春梅，打听得知，说：「西门庆家中孙雪娥，如此这般，被来旺儿拐出，盗了财物去，在外居住。事发到官，如今当官变卖。」这春梅听见，要买他来家上灶，要打他嘴，以报平昔之仇。对守备说：「雪娥善能上灶，会做的好菜饭汤水，买来家中伏侍。」这守备即便差张胜、李安，拿帖儿对知县说。知县自恁要做分上，只要八两银子官价。交完银子，领到府中，先见了大奶奶，并二奶奶孙氏，次后到房中来见春梅。春梅正在房里缕金床锦帐之中，纔起来。手下丫鬟领雪娥见面。那雪娥见是春梅，不免低身进见，望上倒身下拜，磕了四个头。这春梅把眼瞪一瞪，唤将当直的家人媳妇上来：「与我把这贱人撮去了｛髟狄｝髻，剥了上盖衣裳，打入厨下，与我烧火做饭！」这雪娥听了，口中只叫苦。自古世间打墙板儿翻上下，扫米都做管仓人！既在他檐下，怎敢不低头！孙雪娥到此地步，只得摘了髻儿，换了艳服，满脸悲恸，往厨下去了。有诗为证：
+这来旺得了此言，回来家，巴不到晚，踅到来昭屋里，打酒和他两口儿吃。至更深时分，更无一人觉的，直待的大门关了，后边仪门上了拴，家中大小歇息定了。彼此都有个暗号儿，只听墙内雪娥咳嗽之声。这来旺儿躧着梯凳，黑影中扒过粉墙，顺着遮洋〈扌扉〉子，雪娥那边用凳子接着，两个在西耳房堆马鞍子去处，两个相搂相抱，云雨做一处。彼此都是旷夫寡女，欲心如火。那来旺儿缨鎗强壮，尽力般弄了一回，乐极精来，一泄如注。事毕，雪娥递与他一包金银首饰，几两碎银子，两件段子衣服，分付：「明日晚夕你再来，我还有些细软与你，你外边寻下安身去处。往后这家中过不出好来，不如我和你悄悄出去，外边寻下房儿，成其夫妇。你又会银行手艺，愁过不得日子？」来旺儿便说：「如今东门外细米巷，有我个姨娘，有名收生的屈老娘，他那里曲弯小巷倒避眼，咱两个投奔那里去。迟些时，看无动静，我带你往原籍家去，买几亩地种去也好。」两个商量已定，这来旺儿作别雪娥，依旧扒过墙来，到来昭屋里。等至天明，开了大门，挨身出去。到黄昏时分，又来门首，踅入来昭屋里，晚夕依旧跳过墙去，两个干事。朝来暮往，非止一日，也抵盗了许多细软东西，金银器皿，衣服之类。来昭两口子，也得抽分好些肥己，俱不必细说。一日，后边月娘看孝儿出花心，心中不快，睡得早。这雪娥房中使女中秋儿，原是大姐使的。因李娇儿房中元宵儿被经济耍，月娘就把中秋儿与了雪娥，把元宵儿扶侍大姐。那一日，雪娥打发中秋儿睡下。房里打点一包钗环头面，装在一个匣内，用手帕蛮盖了头，随身衣服，约定来旺儿在来昭屋里等候，两个要走。这来昭便说：「不争你走了，我看守大门，管放水鸭儿？若大娘知道，问我要人，怎了？不如你二人打房上去，就躧破些，还有踪迹。」来旺儿道：「哥也说得是。」雪娥又留一个银折盂、一根金耳干、一件青绫袄、一条黄绫裙，谢了他两口儿，直等五更鼓，月黑之时，隔房扒过去。来昭夫妇又筛上两个大锺暖酒，与来旺、雪娥吃，说：「吃了好走，路上壮胆些。」吃到五更时分，每人拏着一根香躧着梯子，打发两个扒上房去，一步一步走，把房上氏也跳破许多。比及扒到房檐跟前，街上人还未行走。听巡捕的声音，这来旺儿先跳下去，后都教雪娥躧着他肩背，接搂下来。两个往前边走，到十字路口上，被巡捕的拦住，便说：「往那里去的男女？」雪娥便諕慌了手脚。这来旺儿不慌不忙，把手中官香弹了一弹，说道：「俺是夫妇二人，前往城外岳庙里烧香，起的早了些。长官勿怪。」那人问：「背的包袱内是甚么？」来旺儿道：「是香烛纸马。」那人道：「既是两口儿，岳庙烧香，也是好事，你快去罢。」这来旺得不迭一声，拉着雪娥往前飞走。走到城下，城门纔开。打人闹里，挨出城去，转了几条街巷。原来细米巷在个僻静去处，住着不多几家人家，都是矮房低厦，后边就是大水穴沿子。到于屈姥姥家，屈姥姥还未开门，叫了半日，屈姥姥纔起来开了门儿，来旺儿领了个妇人来。原来来旺儿本姓郑，名唤郑旺。说：「这妇人是我新寻的妻小。姨娘这里有房子，且寻一个寄住些时，再寻房子。」递与屈姥姥三两银子，教买柴米。那屈姥姥见这金银首饰，来因可疑。他儿子屈镗，因他娘屈姥姥安歇郑件夫妻，二人带此东西，夜晚见财起意，掘开房门，偷盗出来耍钱。致被捉获，具了事件，拏去本县见官。李知县见系贼赃之事，赃身执仪见在，差人押着屈镗到家，把郑旺、孙雪娥，一条索子都拴了。那雪娥諕的脸蜡查也似黄了，换了渗淡衣裳，带着眼纱，把手上戒指都勒下来，打发了公人，押去见官。当下烘动了一街人观看。有认得的，说：「是西门庆家小老婆，今被这走出去的小厮来旺儿，今改名郑旺，通奸拐盗财物，走外居住。又被这屈镗掏摸了。今事发见官。」当下一个传十，十个传百个，路人行人口似飞！月娘家中自从雪娥走了，房中中秋儿见厢内细软首饰都没了，衣服丢的乱三搅四，报与月娘。月娘吃了一惊，便问中秋儿：「你跟着他睡，走了你岂不知？」中秋儿便说：「他要晚夕，悄悄偷走出外边，半日方回。不知详细。」月娘又问来昭：「你看守大门，人出去你怎不晓的？」来昭便说：「大门每日上锁，莫不他飞出去？」落后看见上瓦躧破许多，方知越房而去了。又不敢使人躧访，只得按纳含忍。不想本县知县，当堂问理这件事，先把屈镗夹了一顿，追出金头面四件、银首饰三件、金环一双、银钟二个、碎银五两、衣服二件、手帕一个、匣一个；向郑旺名下，追出银三十两、金碗簪一对、金仙子一件、戒指四个；向雪娥名下，追出金挑心一件、银镯一付、金钮五付、银簪四对、碎银一包；屈姥姥名下，追出银三两。就将来旺儿问拟奴婢因奸盗取财物，屈镗系窃盗，俱系杂犯死罪，准徒五年，赃物入官。雪娥孙氏，系西门庆妾，与屈姥姥，当下都当官拶了一拶。屈姥姥供明放了。雪娥责令本县差人到西门庆家，教人递领状领孙氏。那吴月娘叫吴大舅来商议：「已是出丑，平白又领了来家做甚么？没的玷辱了家门，与死的装幌子！」打发了公人钱，回了知县话。知县拘将官媒人来，当官变卖。都说守备府中春梅，打听得知，说：「西门庆家中孙雪娥，如此这般，被来旺儿拐出，盗了财物去，在外居住。事发到官，如今当官变卖。」这春梅听见，要买他来家上灶，要打他嘴，以报平昔之仇。对守备说：「雪娥善能上灶，会做的好菜饭汤水，买来家中伏侍。」这守备即便差张胜、李安，拿帖儿对知县说。知县自恁要做分上，只要八两银子官价。交完银子，领到府中，先见了大奶奶，并二奶奶孙氏，次后到房中来见春梅。春梅正在房里缕金床锦帐之中，纔起来。手下丫鬟领雪娥见面。那雪娥见是春梅，不免低身进见，望上倒身下拜，磕了四个头。这春梅把眼瞪一瞪，唤将当直的家人媳妇上来：「与我把这贱人撮去了䯼髻，剥了上盖衣裳，打入厨下，与我烧火做饭！」这雪娥听了，口中只叫苦。自古世间打墙板儿翻上下，扫米都做管仓人！既在他檐下，怎敢不低头！孙雪娥到此地步，只得摘了髻儿，换了艳服，满脸悲恸，往厨下去了。有诗为证：
 
 「布袋和尚到明州， 策杖芒鞋任意游；
 
